--- a/ᏄᏯᎩ.mw
+++ b/ᏄᏯᎩ.mw
@@ -1,10 +1,11 @@
-ᏄᏲᎩ (ᎩᎵᏏ, NEW YORK) ᎦᏚᎲᎢ ᎡᏉ ᏄᏲᎪᎢ, ᏄᏲᎩ, [[ᎠᎺᎵ]].
+ᏄᏯᎩ (ᏄᏲᎩ, ᎩᎵᏏ, NEW YORK) ᎦᏚᎲᎢ ᎡᏉ ᏄᏲᎪᎢ, ᏄᏲᎩ, [[ᎠᎹᏰᏟ]].
 
 [[File:New York state flag.png|none|thumb]]
 
 [[File:Map of USA highlighting New York.png|none|thumb]]
 
 {{stub}}
+[[Category:ᎠᎹᏰᏟ]]
 
 [[af:New York (deelstaat)]]
 [[als:New York (Bundesstaat)]]
