--- a/ᎹᎵᏙᏫᎠ.mw
+++ b/ᎹᎵᏙᏫᎠ.mw
@@ -1,6 +1,7 @@
 [[File:Location Moldova Europe.png|thumb|right|ᎼᎸᏙᏩ]]'''ᎼᎸᏙᏩ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]].
 
 {{stub}}
+[[Category:ᏳᎳᏛ]]
 
 [[ab:Молдова]]
 [[ace:Moldova]]
