--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -1,10 +1,10 @@
-[[File:Asia_(orthographic_projection).svg|right|120px|ᎠᏏᎠ]]ᎠᏏᎠ ...
+[[File:Asia_(orthographic_projection).svg|right|120px|ᏓᎶᏂᎦᏍᏛ]]
+ᏓᎶᏂᎦᏍᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏳᎳᏛ]].
 
-* [[ᏥᎾ]]
-* [[ᏣᏆᏂ]]
-* [[ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ]]
-* ...
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Asia}}
 
+[[Category:ᏳᎳᏛ| ]]
 {{stub}}
 
 [[ace:Asia]]
