--- a/ᏒᏈᏯ.mw
+++ b/ᏒᏈᏯ.mw
@@ -1,6 +1,8 @@
 [[File:Location Serbia Europe.png|thumb|right|ᏎᎸᏈᏯ]]ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢ [[ᎡᎶᏆ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
 
 {{stub}}
+[[Category:ᏳᎳᏛᎶ]]
+[[Category:Questionably transliterated titles]]
 
 [[ace:Sèrbia]]
 [[af:Serwië]]
