--- a/ᏒᏈᏯ.mw
+++ b/ᏒᏈᏯ.mw
@@ -1,7 +1,7 @@
-[[File:Location Serbia Europe.png|thumb|right|ᏎᎸᏈᏯ]]ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢ [[ᎡᎶᏆ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
+[[File:Location Serbia Europe.png|thumb|right|ᏎᎸᏈᏯ]]ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢ [[ᏳᎳᏛ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
 
 {{stub}}
-[[Category:ᏳᎳᏛᎶ]]
+[[Category:ᏳᎳᏛ]]
 [[Category:Questionably transliterated titles]]
 
 [[ace:Sèrbia]]
