--- a/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
+++ b/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
@@ -4,6 +4,7 @@
 * [http://bosnianews.blogspot.com/ Bosnia News]
 
 [[Category:ᏳᎳᏛ]]
+[[Category:Questionably transliterated titles]]
 {{stub}}
 
 [[ace:Bosnia Hèrzègovina]]
