--- a/ᎠᎦᏙᎲᏍᏗ.mw
+++ b/ᎠᎦᏙᎲᏍᏗ.mw
@@ -1,7 +1,5 @@
 <big>''ᎠᎦᏙᎲᏍᏗ''
 
-
-
 New Translated Cherokee Words
 
 Academics                  ᎦᎸᎳᏗᎨᏍᏗ ᎠᏕᎶᏆᏍᏗ
@@ -468,7 +466,7 @@ Utilitarian					ᏴᏫ ᎤᏅᏔᏂᏓᏍᏙᏗ
 Venus						ᎠᎾᏥᏍᏓᏂᎵ
 Verbs						ᎾᏛᏁᎲ
 Vessels					ᎩᎦ ᎤᏪᏓᏍᏗ
-Veterinarian                                                     ᎦᎾᏝ ᏗᎦᎾᎦᏗ            
+Veterinarian                                     ᎦᎾᏝ ᏗᎦᎾᎦᏗ            
 Viewer						ᎠᎦᎪᏍᏗᏍᎩ
 Vinegar					ᏧᏂᏦᏯᏍᏙᏗ
 Vision						ᏩᎪᏩᏛᏗ
@@ -492,3 +490,5 @@ Wish						ᏲᎯᏊ, ᏲᏎ
 Word						ᎧᏁᎢᏍᏗ
 Wrist                       ᎠᎵᏰᏑᏜᏗᏍᏗᎢ
 Youth Council	       ᎩᎳ ᏗᎾᏛᏍᎩ ᏗᏂᎳᏫᎩ
+
+[[Category:ᏣᎳᎩ]]
