--- a/ᎦᏙ_ᎠᎵᏖᎸᎮᏍᎬ.mw
+++ b/ᎦᏙ_ᎠᎵᏖᎸᎮᏍᎬ.mw
@@ -1,13 +1,8 @@
 '''ᎠᎵᏖᎸᎲᏍᎬ ᎠᎹ'''
 
-
-ᏦᎢ ᏧᏓᎴᎠ ᏄᏏᏓᎾ - ᎦᏁᎯ, ᏍᏓᏯ, ᎠᏔᏃᎴᎬᎢᏃ. ᎢᎩᎩᏌᏓ ᎢᏗᎪᏩᏘᏍᎬ
-ᎡᎶᎯ ᎠᎹ ᎦᏁᎯ ᎨᏒ. ᏍᏓᏯ ᏱᏂᎦᎵᏍᏓ ᎠᎹ ᏳᏁᏍᏓᎳᏓ ᏅᎪᏩᏘᏍᎬᏅ ᏱᎩ
-ᏅᏯ ᎠᏔᏃᎴᎬᎢ ᎠᏃᏎᎰᎢ.
-ᎡᎶᎯ ᎠᎹ ᎠᏓᏁᏟᏴᏍᎪ ᏂᎪᎸ ᎠᎵᏖᎸᎲᏍᎬ ᎠᏓᏅᏏᏙᎲᎢ. ᎠᏓᏁᏟᏴᏏᏙᎲᎢ
-ᎠᎵᏖᎸᎲᎢᏃ ᎡᎶᎯ ᎠᎹ ᏂᎦᎵᏍᏔᏅᏍᎬ ᎠᎹ ᎦᎶᏏᏙᎲ ᎠᏃᏎᎰᎢ. ᎯᎸᏍᎩ
-ᎢᏯᏔᎳᏗᏅᏓ ᏂᎦᎵᏍᏗᏍᎪ ᎠᏓᏅᏏᏙᎲ ᎠᎹ ᎠᎺᏉ ᏳᏂᎩᏌ, ᎦᏙᎯᏃ ᎿᏊᎴ
-ᎠᎺᏉᎯᏜ.
-
+ᏦᎢ ᏧᏓᎴᎠ ᏄᏏᏓᎾ - ᎦᏁᎯ, ᏍᏓᏯ, ᎠᏔᏃᎴᎬᎢᏃ. ᎢᎩᎩᏌᏓ ᎢᏗᎪᏩᏘᏍᎬ [[ᎡᎶᎯ]] [[ᎠᎹ]] ᎦᏁᎯ ᎨᏒ. ᏍᏓᏯ ᏱᏂᎦᎵᏍᏓ ᎠᎹ ᏳᏁᏍᏓᎳᏓ ᏅᎪᏩᏘᏍᎬᏅ ᏱᎩ ᏅᏯ ᎠᏔᏃᎴᎬᎢ ᎠᏃᏎᎰᎢ. ᎡᎶᎯ ᎠᎹ ᎠᏓᏁᏟᏴᏍᎪ ᏂᎪᎸ ᎠᎵᏖᎸᎲᏍᎬ ᎠᏓᏅᏏᏙᎲᎢ. ᎠᏓᏁᏟᏴᏏᏙᎲᎢ ᎠᎵᏖᎸᎲᎢᏃ ᎡᎶᎯ ᎠᎹ ᏂᎦᎵᏍᏔᏅᏍᎬ ᎠᎹ ᎦᎶᏏᏙᎲ ᎠᏃᏎᎰᎢ. ᎯᎸᏍᎩ ᎢᏯᏔᎳᏗᏅᏓ ᏂᎦᎵᏍᏗᏍᎪ [[ᎠᏓᏅᏏᏙᎲ]] ᎠᎹ [[ᎠᎺᏉ]] ᏳᏂᎩᏌ, ᎦᏙᎯᏃ ᎿᏊᎴ ᎠᎺᏉᎯᏜ.
 
 [[File:Screen shot 2010-09-13 at 10.02.05 PM.png]]
+
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
+[[Category:ᎠᎹ]]
