--- a/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
+++ b/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
@@ -1,6 +1,9 @@
 [[File:Amazonie deforestation.jpg|thumb|ᎠᏓᎦᏙᎯ ᎠᏓᏅᏖᎵᏙᎲ.]]
 '''ᎠᏓᎦᏙᎯ ᎠᏓᏅᏖᎵᏙᎲ''' (a-da-ga-do-hi a-da-nv-te-li-do-hv)
 
+{{stub}}
+[[Category:ᏡᎬ]]
+
 [[en:Forest management]]
 [[es:Manejo de bosques]]
 [[fr:Aménagement forestier]]
