+ᏗᏟᎶᏍᏔᏅ, +ᎤᎾᏓᏟᏌᎲ, +ᏗᏕᎬᏔᏛ

--- a/ᎠᏓᏢᎢᎯ.mw
+++ b/ᎠᏓᏢᎢᎯ.mw
@@ -1,7 +1,84 @@
-[[File:Octopus1.jpg]]
+[[File:Octopus3.jpg|thumb|200px|ᏣᏁᎳ ᏗᎦᏅᏍᎨᏂ]]
+[[File:Octopus2.jpg|thumb|200px]]
 
-ᎠᏓᏢᎢᎯ ᏧᏁᎳ ᏗᎦᏃᎨᏂ ᏂᏚᏅᎿ, ᏔᎵᏃ ᏧᏓᏅᏂ ᎤᏁᏍᏩᏄᏍᏗ
-ᎢᏳᏍᏗ ᏂᏚᏅᎿ ᎤᎿᎢ. ᎯᎢᎾ ᏗᏂᏃᎨᏂ ᏓᏅᏗᏍᎪ ᎠᎺᏉ ᎠᏲᏓᏝᎲ
-ᎠᏁᏙᎲᎢ. ᎪᎱᏍᏗ ᎡᏍᎦ ᏯᎾᏕᎳᎰᏍᎦ, ᎠᏂᏅᎪᏫᏍᎪ ᎤᎵᏏᎩ
-ᎤᎵᏑᏫᏓ ᎪᎱᏍᏗ, ᎤᎿ ᎠᎾᏗᏍᎦᏢᏍᎪᎢ. ᎠᏂᎰᎵ ᎠᏅᏗᏍᎬ
-ᏓᏂᏔᎴᏍᎪ ᏍᏓᏯ ᏓᎬᎾ ᏯᎦᏣᎦᎸᏯ ᎦᏃᎵᏙᎲᎢ.
+'''ᎠᏓᏢᎢᎯ''' (ᏣᏁᎳ ᏗᎦᏅᏍᎨᏂ) ᏧᏁᎳ ᏗᎦᏃᎨᏂ ᏂᏚᏅᎿ, ᏔᎵᏃ ᏧᏓᏅᏂ ᎤᏁᏍᏩᏄᏍᏗ ᎢᏳᏍᏗ ᏂᏚᏅᎿ ᎤᎿᎢ. ᎯᎢᎾ ᏗᏂᏃᎨᏂ ᏓᏅᏗᏍᎪ ᎠᎺᏉ ᎠᏲᏓᏝᎲ ᎠᏁᏙᎲᎢ. ᎪᎱᏍᏗ ᎡᏍᎦ ᏯᎾᏕᎳᎰᏍᎦ, ᎠᏂᏅᎪᏫᏍᎪ ᎤᎵᏏᎩ ᎤᎵᏑᏫᏓ ᎪᎱᏍᏗ, ᎤᎿ ᎠᎾᏗᏍᎦᏢᏍᎪᎢ. ᎠᏂᎰᎵ ᎠᏅᏗᏍᎬ ᏓᏂᏔᎴᏍᎪ ᏍᏓᏯ ᏓᎬᎾ ᏯᎦᏣᎦᎸᏯ ᎦᏃᎵᏙᎲᎢ.
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Octopus}}
+* [http://www.cephbase.dal.ca/spdb/ordergroup.cfm?Orderr=Octopoda CephBase: Octopoda]
+* [http://www.tonmo.com/ TONMO.COM – The Octopus News Magazine Online]
+* [http://tolweb.org/tree?group=Cephalopoda Tree of Life website: information about cephalopods along with pictures and videos]
+* [http://itre.cis.upenn.edu/~myl/languagelog/archives/000813.html Discussion about the plural]
+* [http://video.pbs.org:8080/ramgen/wnet/nature/octopus/sharkT1.rm An octopus's shark encounter] – footage of an octopus eating a shark ([http://www.archive.org/download/Octopus_eats_a_shark_1/octopus.mov also in Quicktime format])
+* [http://www.mbl.edu/mrc/hanlon/video.html Camouflage in action] 
+* [http://video.google.com/videoplay?docid=4007016107763801953 Video showing an Octopus escaping through a 1 inch hole]
+* [http://ist-socrates.berkeley.edu/~chuffard/index_files/Bipedal_octopuses.htm Bipedal Octopuses- Video, Information, Original paper]
+* [http://berkeley.edu/news/media/releases/2005/03/24_octopus.shtml Video of walking octopuses]
+
+[[Category:Animalia]]
+
+[[af:Seekat]]
+[[ar:أخطبوط]]
+[[az:Osminoqlar]]
+[[bn:অক্টোপাস]]
+[[zh-min-nan:Chiuⁿ-hî]]
+[[bi:Nawita]]
+[[bo:ཆུ་སྲིན་ལག་བརྒྱད།]]
+[[br:Morgazh]]
+[[bg:Октоподи]]
+[[ca:Polp]]
+[[cs:Chobotnice]]
+[[de:Kraken]]
+[[nv:Łóóʼ bigaan tseebíí]]
+[[et:Kaheksahaarmelised]]
+[[el:Χταπόδι]]
+[[en:Octopus]]
+[[es:Octopoda]]
+[[eo:Polpo]]
+[[eu:Olagarro]]
+[[fa:هشت‌پا]]
+[[fr:Pieuvre]]
+[[ga:Ochtapas]]
+[[gl:Polbo]]
+[[ko:낙지]]
+[[hi:ऑक्टोपस]]
+[[hr:Hobotnica]]
+[[id:Gurita]]
+[[ik:Nipitchaq]]
+[[os:Асткъахыг]]
+[[is:Kolkrabbi]]
+[[it:Octopoda]]
+[[he:תמנונאים]]
+[[kn:ಆಕ್ಟೊಪಸ್]]
+[[ht:Pyèv]]
+[[ku:Heştpê]]
+[[la:Octopus]]
+[[lt:Aštuonkojai]]
+[[hu:Polipok]]
+[[ml:നീരാളി]]
+[[ms:Sotong Gurita]]
+[[nl:Octopoda]]
+[[ja:タコ]]
+[[nrm:Pieuvre]]
+[[pl:Ośmiornice]]
+[[pt:Polvo]]
+[[ro:Caracatiță]]
+[[qu:Pulpu]]
+[[ru:Осьминоги]]
+[[scn:Purpu]]
+[[simple:Octopus]]
+[[sk:Chobotnice]]
+[[sl:Hobotnice]]
+[[sr:Хоботница]]
+[[su:Gurita]]
+[[fi:Tursaat]]
+[[sv:Åttaarmade bläckfiskar]]
+[[tl:Pugita]]
+[[ta:சாக்குக்கணவாய்]]
+[[te:ఆక్టోపస్]]
+[[tr:Ahtapotlar]]
+[[uk:Восьминіг]]
+[[vi:Bạch tuộc]]
+[[war:Kugita]]
+[[zh-yue:八爪魚]]
+[[zh:章鱼]]
