+ᏗᏟᎶᏍᏔᏅ, +ᎤᎾᏓᏟᏌᎲ, +ᏗᏕᎬᏔᏛ

--- a/ᎦᏅᏥ.mw
+++ b/ᎦᏅᏥ.mw
@@ -1,19 +1,12 @@
-'''ᎦᏅᏥ'''
+[[File:Screen shot 2010-09-13 at 3.36.51 PM.png|thumb|ᎦᏅᏥ ᏍᏆᎴᏍᏗ]]
+[[File:Hickory nuts 6060.JPG|thumb|[[ᏩᏁᎢ]]]]
+ᏴᏫ ᎤᏂᎸᏈᏗ ᎤᏂᎩᏍᏗ '''ᎦᏅᏥ'''. ᏐᎯ ᎠᏍᏙᏓ ᎠᏃᏢᏗᏍᎨᎢ. ᎤᎵᎪᎲᏍᏗ ᏱᎩ, ᏓᏄᏖᏍᎨ ᏐᎯ. ᎯᎸᏍᎩ ᏳᎾᏙᏓᏆᏍᏗ ᏓᏂᎧᏲᏗᏍᎨ ᎩᎳᏅ ᏓᏅᏍᏆᎶᏍᎨᎢ. ᏫᏚᏔᏅ ᏐᎯ ᏧᏯᏍᎦ ᏓᎾᏑᏰᏍᎨ, ᎪᎱᏍᏗ ᎠᏅᏗᏍᎨ ᎠᎴ
+ᏧᏃᏰᏂ ᏓᏅᏗᏍᎨ. ᎤᏒᏙᏂ ᎠᏓ ᎤᏃᏢᏅ ᎤᏂᎮ, ᎤᏅᏪᏓ ᎨᏎ. ᏗᎦᏅᏍᏆᎶᏓ ᏐᎯ ᏓᏂᏢᏍᎨ, ᎿᏊᏅ ᏓᏂᏍᏙᏍᎨ ᎦᏅᎯᏓ, ᎤᏓᎨᏓ ᎠᏓ ᎠᏅᏗᏍᎨ ᎠᏂᏍᏙᏍᎬ. ᏓᏂᏅᏍᏆᎶᏍᎨ ᏐᎯ ᎦᏌᏆᎸ ᏂᎬᏩᎵᏍᏙᏗᏴ, Ꮲ ᏦᎢ ᏯᏏᏔᏗᏍᏗ ᎢᎩᏓ ᏂᏓᏅᏁᎮᎢ. ᏃᏊᏃ, ᎤᏴᏢ ᎠᏂᎲᏍᎨ. ᎪᎯᏴᏥᎩ, ᎦᏁᏍᏓᎵᏗᏍᎩ ᎠᏂᏢᏍᎪᎢ. ᎣᏍᏓ ᎢᎬᏅᏗ ᎦᏅᏥ: ᎤᏗᏞᎩ ᏗᏟᏍᏛ ᎠᎹ ᏫᎦᎵᏗ ᎦᏌᏆᎸ, ᎤᏁᏍᏓᎵ ᎦᏅᏥ. ᏞᎦᏅ ᎤᏟᎵᏗ ᎤᏩᎾᏬᎯᏍᏗ. ᎪᎱᏍᏗ ᎢᎬᏙᏗ ᎬᏫᏍᏙᏗ. ᎤᏯᏍᎦ
 
-[[File:Screen shot 2010-09-13 at 3.36.51 PM.png]]
+ᏩᏘᏯᏍᎪᎢ. ᎤᏩᏅᏒ ᎠᎹᎨ ᏗᏟᏍᏛ ᏩᏑᏴᏗ ᎤᏚᎵᏍᎬ ᎢᎦᎢ. ᎢᎦᏓ ᏩᏂᎨ ᎠᏍᏙᏓ ᎠᎹᎨ ᎤᏂᎸᏈᏙ ᎤᏅᏙᏗ, ᎠᏂᏐᎢ ᏗᎵᏆ ᎠᏅᏗᏍᎪᎢ. ᎣᎵᏍᎬ ᎢᎬᏅᏗ ᎥᎪᏢᏍᎬ, ᎠᎹᎭᏱ ᏝᎴᏱᎩ, ᎧᎵᏎᏥ ᎠᎴ ᎠᎹ ᎥᏍᏊ ᏴᏑᏴᎥᎦ. ᎤᏗᏞᎩ ᏴᏗᏔ ᎤᎦᎹ ᏳᏍᏗ ᎠᎴ ᎤᏴᏜ ᏴᎦ.
 
-ᏴᏫ ᎤᏂᎸᏈᏗ ᎤᏂᎩᏍᏗ ᎦᏅᏥ. ᏐᎯ ᎠᏍᏙᏓ ᎠᏃᏢᏗᏍᎨᎢ. ᎤᎵᎪᎲᏍᏗ
-ᏱᎩ, ᏓᏄᏖᏍᎨ ᏐᎯ. ᎯᎸᏍᎩ ᏳᎾᏙᏓᏆᏍᏗ ᏓᏂᎧᏲᏗᏍᎨ ᎩᎳᏅ
-ᏓᏅᏍᏆᎶᏍᎨᎢ. ᏫᏚᏔᏅ ᏐᎯ ᏧᏯᏍᎦ ᏓᎾᏑᏰᏍᎨ, ᎪᎱᏍᏗ ᎠᏅᏗᏍᎨ ᎠᎴ
-ᏧᏃᏰᏂ ᏓᏅᏗᏍᎨ.
-ᎤᏒᏙᏂ ᎠᏓ ᎤᏃᏢᏅ ᎤᏂᎮ, ᎤᏅᏪᏓ ᎨᏎ. ᏗᎦᏅᏍᏆᎶᏓ ᏐᎯ ᏓᏂᏢᏍᎨ,
-ᎿᏊᏅ ᏓᏂᏍᏙᏍᎨ ᎦᏅᎯᏓ, ᎤᏓᎨᏓ ᎠᏓ ᎠᏅᏗᏍᎨ ᎠᏂᏍᏙᏍᎬ.
-ᏓᏂᏅᏍᏆᎶᏍᎨ ᏐᎯ ᎦᏌᏆᎸ ᏂᎬᏩᎵᏍᏙᏗᏴ, Ꮲ ᏦᎢ ᏯᏏᏔᏗᏍᏗ ᎢᎩᏓ
-ᏂᏓᏅᏁᎮᎢ. ᏃᏊᏃ, ᎤᏴᏢ ᎠᏂᎲᏍᎨ. ᎪᎯᏴᏥᎩ, ᎦᏁᏍᏓᎵᏗᏍᎩ ᎠᏂᏢᏍᎪᎢ.
-ᎣᏍᏓ ᎢᎬᏅᏗ ᎦᏅᏥ: ᎤᏗᏞᎩ ᏗᏟᏍᏛ ᎠᎹ ᏫᎦᎵᏗ ᎦᏌᏆᎸ, ᎤᏁᏍᏓᎵ
-ᎦᏅᏥ. ᏞᎦᏅ ᎤᏟᎵᏗ ᎤᏩᎾᏬᎯᏍᏗ. ᎪᎱᏍᏗ ᎢᎬᏙᏗ ᎬᏫᏍᏙᏗ. ᎤᏯᏍᎦ
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+*[http://www.cherokee-nc.com/index.php?page=90 ᎦᏯᎴᏂ ᎦᏅᏥ]
 
-ᏩᏘᏯᏍᎪᎢ. ᎤᏩᏅᏒ ᎠᎹᎨ ᏗᏟᏍᏛ ᏩᏑᏴᏗ ᎤᏚᎵᏍᎬ ᎢᎦᎢ. ᎢᎦᏓ ᏩᏂᎨ
-ᎠᏍᏙᏓ ᎠᎹᎨ ᎤᏂᎸᏈᏙ ᎤᏅᏙᏗ, ᎠᏂᏐᎢ ᏗᎵᏆ ᎠᏅᏗᏍᎪᎢ. ᎣᎵᏍᎬ ᎢᎬᏅᏗ
-ᎥᎪᏢᏍᎬ, ᎠᎹᎭᏱ ᏝᎴᏱᎩ, ᎧᎵᏎᏥ ᎠᎴ ᎠᎹ ᎥᏍᏊ ᏴᏑᏴᎥᎦ.
-ᎤᏗᏞᎩ ᏴᏗᏔ ᎤᎦᎹ ᏳᏍᏗ ᎠᎴ ᎤᏴᏜ ᏴᎦ.
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
+[[Category:ᏣᎳᎩ]]
