--- a/ᎧᎹᎹ_ᎬᏩᏟᏃᎮᏗᏍᎪᎢ.mw
+++ b/ᎧᎹᎹ_ᎬᏩᏟᏃᎮᏗᏍᎪᎢ.mw
@@ -17,3 +17,5 @@ Katy ᎠᎬᏱ ᎤᎴᏅᎲ ᏚᎬᏎᏍᏛ ᏓᏆ ᏚᎾᏓᎵᏃᎮᏛ.
 ᎾᏂᏪᏍᎬ ᎠᏂᏬᏂᏍᎬ. ᎿᏊ ᎠᏓᎾᏕᏍᎬ Katy ᏳᎪᏗ
 ᎠᏂᏴᏫ ᏳᎾᏚᎳ ᏧᏂᏍᏕᏟᏗ. “ᏴᏛᎵᏍᎪᏟᏓᏁᎳ,
 ᎧᎹᎹ, ᎤᏅᏌ ᎠᏂᏬᏂᏍᎬ ᏯᎾᎵᏍᏕᎳ,” ᎠᏗᏍᎬᎢ.
+
+[[Category:Animalia]]
