--- a/ᎶᏃᎶᏃ.mw
+++ b/ᎶᏃᎶᏃ.mw
@@ -187,6 +187,8 @@ te manu mau ki 'ᎠᎢ ki roto ki te ika, Ꭷ pû te ra'â
 * POZDNIAKOV, Konstantin. 1996. Les ᏗᎳᏗ du Déchiffrement ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ l'Écriture ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ l'Ile ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Pâques. ᏕᎪᏪᎸ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏗᏓᏓᏂᎸᏣᏘ Societé ᏕᏍ Océanistes 103:2.289-303.
 * THOMSON, ᏫᎵᎭᎹ J. 1891. "Te Pito te Henua, ᎠᎴ ᏥᏌ ᏕᎴᎯᏌᏅ ᎠᎽᏰᎵ". ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎯᎠ ᏌᏊᎭ ᎧᏃᎮᎭ ᎬᎾᏕᎾ ᎤᏓᏂᏝᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᏑᏕᏘᏴᏓ ᎠᎵᏍᏆᏗᏍᎬ ᏕᎭᎷᏱ 30, 1889. ᎾᏕᏘᏴᎯᏒ ᎬᏂᎨᏒ ᎢᏗᎬᏁᎸ ᎯᎠ ᎠᏥᏅᏏᏓᏍᏗ ᎠᏂᏀᎾ ᏓᎾᏕᏲᎲᏍᎬ ᎾᏍᎩᎾᎢ 1889. 447-552. ᏬᏏᏓᏂ: ᎠᏥᏅᏏᏓᏍᏗ ᎠᏂᏀᎾ ᏓᎾᏕᏲᎲᏍᎬ. online ᏅᎬᎪᏔᏅᎯ ᎨᏒᎢ ᏰᎵ ᎠᏩᏛᏗ ᎾᎾᎢ [www.sacred-texts.com/pac/ei]
 
+[[Category:Questionably transliterated titles]]
+
 [[ar:رونغورونغو]]
 [[cs:Rongorongo]]
 [[da:Rongorongo]]
