--- a/ᏣᎳᎩ_ᏗᎿᏬᎢ.mw
+++ b/ᏣᎳᎩ_ᏗᎿᏬᎢ.mw
@@ -1,4 +1,4 @@
-[[File:Screen shot 2010-09-13 at 8.29.32 PM.png|thumb|left|Robert Lewis, Cherokee Heritage Center, [[Park Hill, Oklahoma|ᎠᏫ ᎤᏂᏴᏍᏗ, ᎣᎦᎳᎰᎹ]]
+[[File:Screen shot 2010-09-13 at 8.29.32 PM.png|thumb|left|Robert Lewis, Cherokee Heritage Center, [[Park Hill, Oklahoma|ᎠᏫ ᎤᏂᏴᏍᏗ, ᎣᎦᎳᎰᎹ]]]]
 ᏣᎳᎩ ᏗᎦᏣᎦᎸᏴ ᏗᏌᏃ ᏚᎾᏌᏃᎮᎢ, ᎠᏂᏍᎦᏯᏃ ᎠᏇᏡᏍᏗ ᎪᏢᏔᏅ ᎠᎿᏬ ᏚᎾᏂᏪᎢ. ᎠᎦᏣᎦᎸᏓ ᎠᏌᏃ ᏂᏓᏂᏪᏎᎰ.
 ᏥᏗᎨᏥᎢᎸᏎ ᎨᏥᎩᎡᎴ ᎤᏅᏔᏅᏓᏍᏗ ᎪᎱᏍᏗ, ᏗᎵᏍᏙᏗ ᏱᎩ. ᎬᏩᎵᏨ ᎨᏒ ᎤᏂᎦᎭᎷᏍᏗ ᎠᎿᏬᎢ, ᏓᏂᏣᎦᎵᏍᎨᏊ
 ᏓᏃᏢᏍᎬ ᏧᎾᏌᏃᎢ. ᎤᏅᏣᏗ ᎤᏥᎸ ᏓᏃᏢᏗᏍᎨᎢ. ᎪᎯᏴ ᏥᎩ, ᏧᏓᎴᏅᏓ ᏓᏂᏯᎸᏍᎪ ᎧᏅᏬᎢ ᏳᎵᏍᏙᏗ ᎡᎳᏗᏜ, ᎦᏅᎯᏓ ᏅᎩ ᏧᏅᏏᏯ, ᏗᎦᏐᏆᎸ, ᎦᎸᏉᏗ ᏃᏈᏏ ᎥᏍᏊ.
