--- a/ᏣᎳᎩ_ᏧᎴᎯᏌᏅᎯ.mw
+++ b/ᏣᎳᎩ_ᏧᎴᎯᏌᏅᎯ.mw
@@ -1,6 +1,9 @@
 [[Image:NewEchota.jpg|300px|right]]
 ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ, ᎪᏪᎵ ᎦᎴᏯᏔᏅ ᎾᎿᎢ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ.
 
+[[Category:ᏣᎳᎩ]]
+[[Category:ᏗᏛᎪᏔᏅ]]
+
 [[de:Cherokee Phoenix]]
 [[en:Cherokee Phoenix]]
 [[fr:Cherokee Phoenix]]
