--- a/ᏍᎦᏚᎩ_ᎾᎿ_ᎹᏏᏙᏂᎢᎠ.mw
+++ b/ᏍᎦᏚᎩ_ᎾᎿ_ᎹᏏᏙᏂᎢᎠ.mw
@@ -1,5 +1,5 @@
 '''ᎹᏎᏙᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
 
-
-
 {{stub}}
+[[Category:ᏳᎳᏛ]]
+[[Category:Questionably transliterated titles]]
