--- a/ᏧᎦᎾᏮ_ᎪᎵᎠ.mw
+++ b/ᏧᎦᎾᏮ_ᎪᎵᎠ.mw
@@ -18,8 +18,9 @@
  
 {{Stub}}
 
-[[Category:ᎠᏏᎠ]]
-[[Category:ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ]]
+[[Category:ᏓᎶᏂᎦᏍᏛ]]
+[[Category:Questionably transliterated titles]]
+
 
 [[ace:Korèa Tunong]]
 [[af:Suid-Korea]]
