--- a/ᏓᎶᏂᎨᏍᏛ.mw
+++ b/ᏓᎶᏂᎨᏍᏛ.mw
@@ -8,6 +8,8 @@
 '''ᏥᎾ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]].
 
 {{stub}}
+[[Category:ᏓᎶᏂᎦᏍᏛ]]
+[[Category:Questionably transliterated titles]]
 
 [[ab:Ачынҭатәи Ажәлартә Республика]]
 [[ace:Rèpublik Rakyat Cina]]
