/* ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ */ dab link

--- a/ᎤᏅᏉᎳᏛ.mw
+++ b/ᎤᏅᏉᎳᏛ.mw
@@ -119,7 +119,7 @@
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 * [[Light|ᎠᏨᏍᏛ]]
-* [[Colour]]
+* [[Color|ᏗᎧᏃᏗ]]
 * [[Optical phenomenon|ᎠᎪᏩᏛᏗ ᏂᎦᎵᏍᏔᏂᏙᎲ]]
 * [[Prism (optics)|ᏓᏍᏓᏅᏅ ᏚᎷᏨ (ᎠᏨᏍᏛ)]]
 * [[Glory (optical phenomenon)|ᏩᎦᎸᎳᏗᏴ]]
