--- a/ᎤᎵᎮᎵᏍᏗ.mw
+++ b/ᎤᎵᎮᎵᏍᏗ.mw
@@ -33,8 +33,7 @@ __NOEDITSECTION__
 |
 {|width="100%" cellspacing="0" cellpadding="5" style="background-color:"
 |style="font-size:120%"|'''ᏂᎦᎥᎠᎦᏎᏍᏔᏅ'''<br />
-[[ᎤᎾᏥ]] &bull; [[ᏃᏈᏏ]] &bull; [[ᎤᏍᏗᏰᎬ]] &bull; [[ᎤᏪᏴᎢ]] &bull; 
-[[ᎤᎶᎩᎸ]] &bull; [[ᏄᏓᎨᏒ (Gravitation)|ᏄᏓᎨᏒ]] &bull; [[ᎠᏥᎸᏍᎩ]] &bull; [[ᏗᏎᏍᏗ ᏓᏍᏓᏅᏅ]] &bull; [[ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ]] &bull; [[ᎠᏣᏅᏙ]] &bull; [[ᎠᏕᎸ ᏓᎶᏂᎨ]] &bull; [[ᎤᏃᎴ]]  
+[[ᎠᏕᎸ ᏓᎶᏂᎨ]] &bull; [[ᏗᎧᏃᏗ]] &bull;  [[ᏗᏎᏍᏗ ᏓᏍᏓᏅᏅ]] &bull; [[ᎠᎺᏉᎯ ᎤᏁᏍᏓᎳ]] &bull; [[ᎤᎾᏥ]] &bull; [[ᎠᏣᏅᏙ]] &bull; [[ᎠᏥᎸᏍᎩ]] &bull; [[ᏃᏈᏏ]] &bull; [[ᏄᏓᎨᏒ (Gravitation)|ᏄᏓᎨᏒ]] &bull; [[ᎤᎶᎩᎸ]] &bull; [[ᎤᏃᎴ]] &bull; [[ᎤᏍᏗᏰᎬ]] &bull; [[ᎤᏪᏴᎢ]] 
 |[[Image:Nuvola apps edu science.svg|50px|link=]]
 <!---------------------------------------------->
 |-
