--- a/ᏅᏃᎯ.mw
+++ b/ᏅᏃᎯ.mw
@@ -13,7 +13,7 @@
 
 ==ᎧᏃᎮᏍᎩ==
 [[Image:PompeiiStreet.jpg|right|thumb|180px| [[cobblestone]] ᎶᎻ ᏅᏃᎯ ᎭᏫᎾᏗᏢ [[Pompeii]].]]
-ᎯᎠ ᎢᎬᏱ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎯᎠ [[trails|ᎤᏍᏗ ᎦᏅᏅ]] ᎪᏢᏅᎯ ᎾᎥᎢ [[migration|migrating]] ᎡᎿᎢ ᎡᎥ. ᎾᎥᎢ ᎬᏩᏚᏫᏛ 10,000 BCE, ᎾᏍᎩ ᎯᎠ ᎤᏐᏅ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎬᏔᏅᎯ ᎾᎥᎢ ᏴᏫ ᎦᏃᎭᎵᏙᎯ [[nomad|ᎦᏰᏙᎯ]]ᎠᏍᏓᏩᏗᏒ ᎾᏍᎩ ᎯᎠ ᎤᏂᎪᏗᏗ ᎦᎾᏝᎢ. 
+ᎯᎠ ᎢᎬᏱ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎯᎠ [[trails|ᎤᏍᏗ ᎦᏅᏅ]] ᎪᏢᏅᎯ ᎾᎥᎢ [[migration|migrating]] ᎡᎿᎢ ᎡᎥ. ᎾᎥᎢ ᎬᏩᏚᏫᏛ 10,000 BCE, ᎾᏍᎩ ᎯᎠ ᎤᏐᏅ ᎦᎶᎯᏍᏗ ᎨᏒᎩ ᎬᏔᏅᎯ ᎾᎥᎢ ᏴᏫ ᎦᏃᎭᎵᏙᎯ [[nomad|ᎦᏰᏙᎯ]] ᎠᏍᏓᏩᏗᏒ ᎾᏍᎩ ᎯᎠ ᎤᏂᎪᏗᏗ ᎦᎾᏝᎢ. 
 
 ᎦᎳᏅᏛ ᎠᏂᏰᏍᏛᏍᎬ ᎤᎭ ᏭᏪᏙᎢ ᎠᏩᏛᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ ᏴᏫ ᏗᏓᏙᎳᏤᎸ ᏴᏩᏚᏫᏛ 4000 BCE. 
 
@@ -27,15 +27,15 @@
 
 ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ ᎢᏧᏩᎪᏗ, ᎠᎯᏴᏍᏗ ᎾᎥᎢ [[river|ᎤᏪᏴ]] ᏥᏄᏍᏛᎩ ᎢᏅ ᎠᎯᏗᎨ ᎠᎴ ᎦᏣᏄᎳᎯᎨ ᎬᎾᏬᏍᎬ ᎡᏙᎵᏙᎲ ᎾᎥᎢ ᏅᏃᎯ, ᎾᏍᎩ ᎨᏒᎢ ᎠᎦᏎᏍᏗᏍᎬ ᎯᎠ ᏓᎬᏩᎶᏛ ᏅᏃᎯ ᎠᏁᏍᎨᎲ ᎠᎴ ᎯᎠ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎠᏫᏗᏍᎬ ᎢᎦᎢ ᎤᏝᏅᏛ ᎢᎬᏁᏗ ᎠᏰᎵ [[cart|ᎤᏍᏗ ᏓᏆᎴᎷ]]ᎠᎴ ᎤᏪᏴ [[barge|ᏥᏳ]]. ᏧᏠᎯᏍᏗ ᏅᏃᎯ ᎠᎯᏴᏍᏗ ᎠᎴ ᏥᏳ ᎠᎯᏴᏍᏗ ᎨᏒᎢ ᎯᎠ ᏐᏈᎵ-ᎠᏎᏒᏓ ᏥᏳ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏐᏈᎵ ᎠᏍᏓᏩᏕᎦ ᏧᎸᏌᏛᎯ ᎤᏍᏗ ᎦᏅᏅ ᎨᎳᏛᏍᏗ ᎯᎠ ᎤᏪᏴ ᎠᏕᎸ ᏗᏗ.
 
-ᏂᏛᎴᏅᏓ ᎬᏩᏚᏫᏛ 300 BCE, ᎯᎠ ᎶᎻ ᏓᎳᏏᏛ ᎤᏁᏍᎨᎲ ᎦᏥᏃᏍᏛ ᎤᎳᏂᎩᏓ ᏅᏯ [[Roman road|ᎶᎻ ᏅᏃᎯ]]ᏂᎦᏅᎯᏒ [[Europe|ᏳᎳᏛ]] ᎠᎴ ᎤᏴᏢ [[Africa|ᎬᎿᎦᏍᏛ]], ᎭᏫᎾᏗᏢ ᎠᎵᏍᏕᎸᏗ Ꮝ ᎠᏂᏯᏫᏍᎩ ᏙᎩᏯᏛ ᏚᏂᎸᏫᏍᏓᏁᎲ. 
+ᏂᏛᎴᏅᏓ ᎬᏩᏚᏫᏛ 300 BCE, ᎯᎠ ᎶᎻ ᏓᎳᏏᏛ ᎤᏁᏍᎨᎲ ᎦᏥᏃᏍᏛ ᎤᎳᏂᎩᏓ ᏅᏯ [[Roman road|ᎶᎻ ᏅᏃᎯ]] ᏂᎦᏅᎯᏒ [[Europe|ᏳᎳᏛ]] ᎠᎴ ᎤᏴᏢ [[Africa|ᎬᎿᎦᏍᏛ]], ᎭᏫᎾᏗᏢ ᎠᎵᏍᏕᎸᏗ Ꮝ ᎠᏂᏯᏫᏍᎩ ᏙᎩᏯᏛ ᏚᏂᎸᏫᏍᏓᏁᎲ. 
 
 ᏅᏃᎯ ᎠᏁᏍᎨᎲ ᎠᎴ ᎠᏍᏆᏂᎪᏙᏗ ᎭᏫᎾᏗᏢ ᎢᏌᏯ ᏥᏄᏍᏛᎩ ᎧᏃᎮᎸᎯ ᎠᏍᏆᏛᎯ ᎾᎿ ᎾᎥᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᎴᏅᏙᏗ. ᎯᎠ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᎠᎴ ᏂᏙᏓᎳᎬᎾ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᏕᎦᏅᏅ Ꮎ ᏄᎵᏍᏔᏅᎩ ᎦᏂ ᎯᎠ ᎢᎬᏱ ᎯᎠ "ᎢᎬᎾᏗ ᎰᏩ ᎠᏰᎸᏗ" ᏴᏩᏚᏫᏛ 1706. ᎾᏍᎩ ᎯᎠ ᎨᏒᎩ  ᎪᏢᎯ ᎢᎪᏢᎯ ᎢᎬᏁᎸᎯ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎣᏍᏛ ᏕᎦᏅᏅ ᎠᎴ ᎠᏓᏂᏢᏗ ᎠᏞᏛ ᏂᏛᎴᏅᏓ ᎦᎶᏍᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ. ᏭᎵᏱᎶᎸ ᎾᎿᎢ ᎨᏒᎩ ᎾᎥᏂᎨᏍᏙᏗᏇ 1,100 ᎰᏩ ᎠᏰᎸᏗ ᎭᏫᎾᏗᏢ ᎢᏌᏯ ᎠᎴ ᎢᎦᏛ 38,000 km engineered ᏕᎦᏅᏅ. 
 
 Engineered ᏕᎦᏅᏅ ᎭᏫᎾᏗᏢ ᎯᎠ lyudetiyvda ᏐᏈᎵ ᎠᏎᏒᏓ ᎠᎯᏴᏍᏗ aimed ᎾᏍᎩᎾᎢ ᎦᎸᎳᏗᎨ ᎠᎷᏚᎧᏘ  1 ᎭᏫᎾᏗᏢ 30 ᎾᎿ [[Macadam|macadamized]] ᎦᏚᎢ ᎣᏂ ᏧᏩᎫᏛ ᎪᎯ ᏥᏄᏍᏛᎩ ᎯᎠ steepest ᏐᏈᎵ ᏰᎵᏇ ᏄᎵᏂᎬᎬ ᎦᎾᏌᏁᏍᏗ ᎠᎧᎵᎢ ᎦᎸᎳᏗᏢ ᎦᏚᏏ ᎦᏙ ᎤᏍᏗ ᎾᏍᎩ ᏰᎵᏇ ᎠᏓᏅᏖᎵᏍᏓᏍᏗ ᎠᎯᏗᎨᎢ ᎾᎿ ᎯᎠ ᎤᏩᎾᏕᏍᎩ. ᎢᎦᏪᏛ ᏅᏃᎯ ᎠᏥᎸ ᏗᎯᎴᎩ ᏂᏛᎴᏅᏓ ᎪᎯ ᎠᎴᏫᏍᏙᏗ ᎠᎴ [[Pierre Marie Jérôme Trésaguet]] (1716-1796) ᎭᏫᎾᏗᏢ France ᎠᎴ [[John Loudon McAdam|ᎦᎳᏅᎯ Loudon McAdam]] (1756-1836) ᎭᏫᎾᏗᏢ ᎢᏌᏯ.
 
-ᎾᎯᏳᎨᏒ ᎯᎠ [[industrial revolution|ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᏕᏲᎲ]],ᎯᎠ [[railway|ᏔᎷᎩᏍᎩ ᏅᏃᎯ]] ᎤᏙᎷᏩᏛᏓ ᏥᏄᏍᏗ ᎪᎷᏩᏛᏓ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ rutting ᎯᎠ ᏅᏃᎯ ᎦᏚᎢ ᎾᎥᎢ ᎦᎨᏛ ᎤᏍᏗ ᏓᏆᎴᎷ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᏁᎶᏗᏍᎬ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᎳᏂᎩᏓ ᎦᏚᎢ ᏗᎦᎾᏗᎯᏍᏗ ᎯᎠ ᏂᎦᏛ ᏅᏃᎯ ᎯᎠ ᎤᏍᏗ ᏓᏆᎴᎷ ᏥᏄᏍᏛᎩ ᏗᎨᏥᎾᏝᎢ ᏗᏍᏆᎸᏙᏗ ᎢᏳᏍᏗᏊ ᎾᎿ ᏐᏯᏍᏗ ᎠᎴ ᎦᏓᎷᎦᏅ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎪᏢᏅᎯ ᎤᏣᏘ ᏭᎵᏂᎬᎬ, ᎠᏄᏬᏍᏗ ᏗᎦᏘᎸᏍᏗ ᏭᏚᎸᏛ ᎬᏙᏗ.
+ᎾᎯᏳᎨᏒ ᎯᎠ [[industrial revolution|ᏧᏂᎸᏫᏍᏓᏁᏗ ᎠᏕᏲᎲ]], ᎯᎠ [[railway|ᏔᎷᎩᏍᎩ ᏅᏃᎯ]] ᎤᏙᎷᏩᏛᏓ ᏥᏄᏍᏗ ᎪᎷᏩᏛᏓ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ rutting ᎯᎠ ᏅᏃᎯ ᎦᏚᎢ ᎾᎥᎢ ᎦᎨᏛ ᎤᏍᏗ ᏓᏆᎴᎷ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᏁᎶᏗᏍᎬ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᎳᏂᎩᏓ ᎦᏚᎢ ᏗᎦᎾᏗᎯᏍᏗ ᎯᎠ ᏂᎦᏛ ᏅᏃᎯ ᎯᎠ ᎤᏍᏗ ᏓᏆᎴᎷ ᏥᏄᏍᏛᎩ ᏗᎨᏥᎾᏝᎢ ᏗᏍᏆᎸᏙᏗ ᎢᏳᏍᏗᏊ ᎾᎿ ᏐᏯᏍᏗ ᎠᎴ ᎦᏓᎷᎦᏅ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎪᏢᏅᎯ ᎤᏣᏘ ᏭᎵᏂᎬᎬ, ᎠᏄᏬᏍᏗ ᏗᎦᏘᎸᏍᏗ ᏭᏚᎸᏛ ᎬᏙᏗ.
 
-ᎪᎯ ᎢᎦ, ᏕᎦᏅᏅ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᎤᏁᏍᎨᎲ ᏰᎵ ᎢᏳᎵᏍᏙᏗ ᎡᏙᎵᏙᎲ ᎾᎥᎢ [[automobile|ᎠᏦᏙᏗ]] ᎠᎴ ᏐᎢ wheeled ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᏅᏃᎯ ᎠᎯᏴᏍᏗ ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ utilized ᎦᎶᎯᏍᏗ ᎠᏓᏅᏍᏗ ᏧᎬᏩᎶᏗ. ᎾᏍᎩ ᎾᏍᏇ, ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎤᏙᎷᏩᏛᏓ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᏕᎦᏅᏅ ᎠᎴ ᎢᎬᏱ ᎦᏰᎯ uniyatolv ᎾᎾᎯ ᎦᎳᏅᏛ ᎠᏍᏓᏩᏛᏍᏗ ᎯᎠ ᏂᎦᎾᏰᎬᎾ ᎠᎴ ᎤᏩᎾᏕᏍᎩ ᎠᏓᏅᏏᏙᎠ ᏓᏓᏅᏓᏁᎸ.
+ᎪᎯ ᎢᎦ, ᏕᎦᏅᏅ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᎤᏁᏍᎨᎲ ᏰᎵ ᎢᏳᎵᏍᏙᏗ ᎡᏙᎵᏙᎲ ᎾᎥᎢ [[automobile|ᎠᏦᏙᏗ]] ᎠᎴ ᏐᎢ wheeled ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᏅᏃᎯ ᎠᎯᏴᏍᏗ ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ utilized ᎦᎶᎯᏍᏗ ᎠᏓᏅᏍᏗ ᏧᎬᏩᎶᏗ. ᎾᏍᎩ ᎾᏍᏇ, ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎤᏙᎷᏩᏛᏓ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ, ᏕᎦᏅᏅ ᎠᎴ ᎢᎬᏱ ᎦᏰᎯ ᎤᏂᏯᏙᎸ ᎾᎾᎯ ᎦᎳᏅᏛ ᎠᏍᏓᏩᏛᏍᏗ ᎯᎠ ᏂᎦᎾᏰᎬᎾ ᎠᎴ ᎤᏩᎾᏕᏍᎩ ᎠᏓᏅᏏᏙᎠ ᏓᏓᏅᏓᏁᎸ.
 
 ==ᎠᏰᎵ ᎠᎲ==
 ᏅᏃᎯ ᎠᏓᏁᎸ ᎠᎴ ᎠᏍᏆᏂᎪᏙᏗ ᎨᏒᎢ ᎡᏍᎦᏂ ᎠᎳᏏᏅᏙᏗ ᎠᎵᏂᎬᏁᏗᎢ (ᎤᏠᏱ ᎢᎬᏁᏗ [[military|ᎠᏂᏯᏫᏍᎩ]] ᎤᏂᏩᏍᎬ) Ꮎ ᎤᎾᎵᏃᎯᏴᎯ dominated ᎾᎥᎢ ᎯᎠ [[public sector|ᏴᏫ ᎤᏁᏓᏍᏗ ᎢᎦᏛ]] (ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎢᏳᏓᎵᎭ ᏗᎬᏩᎶᏒ [[private sector|ᎤᏤᎵᏓ]] [[General contractor|contractor]]).  ᏕᎦᏅᏅ (ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩ ᎾᎿ ᎤᏤᎵᏓ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᏓᏁᏤᎸ ᎯᎠ ᏂᎦᎥ ᏴᏫ ᎤᏁᏓᏍᏗ) ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎫᏴᏓ ᎾᏍᎩᎾᎢ ᎾᎥᎢ [[tax|ᎠᏰᎵ ᎠᎫᏴᏗ]]es (ᎢᏳᏓᎵᎭ ᎤᏛᎯᏍᏔᏅᎩ ᏗᎬᏩᎶᏒ ᎠᎾᏗᏒᎯᎯ ᎾᎿ ᎪᏛᏙᏗ), ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎢᎦᏛ ᏴᏫ ᎤᏁᏓᏍᏗ ᏕᎦᏅᏅ, ᎾᏍᎩ ᎨᏒᎢ [[highway|ᎤᏔᏅ ᏅᏃᎯ]]ᎠᎴ funded ᎾᎥᎢ [[toll road|ᎠᏞᏛ]].
