--- a/ᎧᏫ.mw
+++ b/ᎧᏫ.mw
@@ -4,8 +4,7 @@
 ᎧᏫ, ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[tea|ᎤᎦᎶᎬ]] ᎠᎴ [[water|ᎠᎹ]], ᎨᏒᎢ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ingested ᎠᎵᏍᏓᏴᏗ, ᎢᎦᎢ ᎨᏒ ᎬᏩᏚᏫᏛ ᏦᎢᏁ Ꮎ ᎠᎫᎩᏍᏗ ᎠᎹ.<ref name=tap>{{cite journal | last = Villanueva1 | first = Cristina M. | coauthors = Cantor, Kenneth P.; King, Will D.; Jaakkola, Jouni J. K.; Cordier, Sylvaine; Lynch, Charles F.; Porru, Stefano; Kogevinas, Manolis | year = 2006 | title = Total and speciﬁc ﬂuid consumption as determinants of bladder cancer risk | journal = International Journal of Cancer | volume = 118 | issue = 8 | pages = 2040–2047 | doi = 10.1002/ijc.21587 | accessdate = 2006-08-02}}</ref><p>
 
 == ᎧᏁᏨ ᎠᎴ ᎧᏃᎮᏍᎩ ==
-{{main|History of coffee}}
-ᎧᏫ ᎤᎭ Ꮝ ᎧᏃᎮᏍᎩ ᏥᏄᏍᏗ ᎢᏅ ᎦᏐᎯ ᏥᏄᏍᏗ ᎯᎠ 9th sqohitsuqui tsudetiyvdi. ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ originated ᎭᏫᎾᏗᏢ ᎯᎠ ᏂᎦᏛᎢ Ethiopia ᎠᎴ ᎠᏰᏍᏛᏗ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎡᎶᎯ ᎾᎿ ᎢᏗᏢ Egypt ᎠᎴ Europe.<ref>[http://www.fs.fed.us/global/iitf/pdf/shrubs/Coffea%20arabica.pdf#search=%22%22Coffea%20Arabica%22%20native%22 John K. Francis ''Coffea arabica L. RUBIACEAE'' Factsheet of U.S. Department of Agriculture, Forest Service]</ref> ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎤᎧᏁᎳ, ᎧᏫ ᎤᎭ ᏚᎾᏠᏒ ᎢᏧᎳ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎪᎯᏳᏙᏗ ᎾᎥᎢ ᎤᎪᏗᏗ.
+ᎧᏫ ᎤᎭ Ꮝ ᎧᏃᎮᏍᎩ ᏥᏄᏍᏗ ᎢᏅ ᎦᏐᎯ ᏥᏄᏍᏗ ᎯᎠ 9th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ originated ᎭᏫᎾᏗᏢ ᎯᎠ ᏂᎦᏛᎢ Ethiopia ᎠᎴ ᎠᏰᏍᏛᏗ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎡᎶᎯ ᎾᎿ ᎢᏗᏢ Egypt ᎠᎴ Europe.<ref>[http://www.fs.fed.us/global/iitf/pdf/shrubs/Coffea%20arabica.pdf#search=%22%22Coffea%20Arabica%22%20native%22 John K. Francis ''Coffea arabica L. RUBIACEAE'' Factsheet of U.S. Department of Agriculture, Forest Service]</ref> ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎤᎧᏁᎳ, ᎧᏫ ᎤᎭ ᏚᎾᏠᏒ ᎢᏧᎳ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎪᎯᏳᏙᏗ ᎾᎥᎢ ᎤᎪᏗᏗ.
 
 ᎯᎠ ᎧᏁᏨ ''ᎧᏫ'' ᎨᏒᎢ derived ᏂᏛᎴᏅᏓ ᎯᎠ [[Arabic]] ᎧᏁᏨ ''Qah'Ꮹ'' ᎦᏬᎯᎸᏙᏗ [[Ottoman language|ᎠᎵᏍᏕᎸᏗ Turkish]] ''Kahve'', ᎦᏙ ᎤᏍᏗ ᎠᎴᏅᏔᏅ ᏁᎵᏒᎢ [[wine|ᎩᎦᎨ ᎠᏘᏣᏍᏗ]] ᎠᎴ ᏐᎢ intoxicating [[liquor|ᎠᎵᏍᏓᏴᏗ]]. ᎢᎦᏓᏊ ᎤᏍᏆᎸᎲ ᎯᎠ Islamic ᎧᏃᎯᏯᏍᏗ ᎾᎿ anaditsgv ᎩᎦᎨ ᎠᏘᏣᏍᏗ, ᎠᏛᏅᎢᏍᏗᏍᎩ ᎠᎴ anaditsgv ᎧᏫ ᎠᏓᏁᏟᏴᏍᏗ ᎤᎵᏍᎨᏛ ᎠᎾᏓᏟᏏᏍᎬ ᎬᏂᎨᏒ ᎢᎬᏁᏗ. ᎯᎠ ᏄᎵᏍᏔᏅ ᎧᏫ ᎨᏒᎩ ᏯᏛᎿ Ꮎ ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ forbidden ᏄᎾᏛᏅ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎠᎴ ᎠᏂᏙᎾᎥ imams ᎭᏫᎾᏗᏢ [[Mecca]] ᎾᎾᎢ 1511 ᎠᎴ ᎾᎾᎢ [[Cairo]] ᎭᏫᎾᏗᏢ 1532 ᎾᎥᎢ ᎤᏍᏆᏂᎪᏗ ᏧᎾᏓᏱᎵᏓᏍᏗ. ᎭᏫᎾᏗᏢ Egypt, coffeehouses ᎠᎴ ᎪᎱᏍᏗ ᎠᏗ ᎢᎦᎢ ᏕᎨᏒᎢ ᎧᏫ berries ᎨᏒᎩ sacked. ᎠᎴ ᎯᎠ ᎤᏛᏒᎯ ᎤᏤᎵ ᎤᎾᏤᎵᏛ, ᎾᏍᎩᎾ ᎨᏒ ᏄᎾᏛᏅ ᎢᎦᏘᎭ ᎬᏗ ᎪᎳᏨᎯ, ᎤᏗᏅᏒᎩ ᎯᎠ ᏧᎾᏍᏗ ᎪᎯ ᏧᏚᎪᏔᏅ ᎭᏫᎾᏗᏢ 1524 ᎾᎥᎢ ᎠᏓᏅᏍᏗ [[Selim I|Selim ᎠᏯ]].<ref>Hanauer. ''ᎠᏍᎦᏯᎭ-ᎥᎦᏔᎲᎢ ᎯᎠ ᎦᎸᏉᏗᏳ ᎦᏙᎯ''. 1907. p. 291 f.</ref> ᎭᏫᎾᏗᏢ 1538, [[Léonard Rauwolf]], ᎠᏓᏥ ᎦᎾᎦᏗ, ᎤᎲᎢ ᎦᎷᏨ ᎦᏐᎯ ᏂᏛᎴᏅᏓ ᏍᎪᎯ-ᏑᏕᏘᏴᏓ ᎡᏙᎵᏙᎲ ᎭᏫᎾᏗᏢ [[Near East|ᎾᎥᏂᎨ ᎧᎸᎬ]], ᏥᏄᏍᏛᎩ ᎯᎠ ᎢᎬᏱ westerner ᏄᏍᏛ ᎧᏃᎮᏗ ᎯᎠ ᎤᏬᎦᏢ:  "ᎠᎵᏍᏓᏴᏗ ᏥᏄᏍᏗ ᎬᎿᎨ ᏥᏄᏍᏗ ᎦᏁᎯ ᏗᎨᏪᎶᏗ, ᎤᎵᏍᎨᏓ ᏗᎦᏘᎴᎩ ᎤᏂᎪᏗᏗ illnesses, ᎾᏍᎩᎾ ᎨᏒ ᎾᏍᎩ ᎯᎠ ᎤᏍᏉᎵ. Ꮝ consumers ᎠᎩᏍᏗ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᏑᎾᎴᎢ, ᎾᎥᏂᎨᏍᏙᏗ ᏧᏢᏫᏎᎯ ᏂᎨᏒᎾ, ᎭᏫᎾᏗᏢ ᎠᎦᎾᏫᏗᏍᎩ ᎠᎫᎩᏍᏗ Ꮎ ᎨᏒᎢ ᎤᎶᏒᎩ yvwatuwidv ᎠᎴ ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎠᏂᏏᏴᏫᎭ ᏌᏊ ᎠᏗᏔᏍᏗ cupful. ᎾᏍᎩ ᎨᏒᎢ ᎠᏒᎾᏍᏗᏱ ᎠᎹ ᎠᎴ ᎯᎠ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᏂᏛᎴᏅᏓ ᎤᏩᎢᏢᎢ ᎤᏯᏅᎲ bunnu." <ref>Léonard Rauwolf, ''Reise ᎭᏫᎾᏗᏢ ᎠᏲᎱᎯᏍᏗ Morgenlander'' (ᎭᏫᎾᏗᏢ ᎠᏓᏥ)</ref>. ᎾᏍᎩ ᎯᎠ ᏄᏂᏪᏒ ᎨᏒᎩ ᎪᏪᎶᏗ ᎾᎥᎢ ᏧᎾᏓᎾᏂ, ᎦᎪ ᎨᏒᎩ ᎤᏁᏟᏴᏌᏘ ᎪᎯ ᎤᏓᏅᏗ ᎠᏓᏃᎯᏎᏗ ᏗᎬᏩᎶᏒ ugatohvsv ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎪᏗᏗ ᎠᏓᎾᏅᏗ ᎠᏍᏓᏩᏛᏍᏗ.
 
@@ -36,11 +35,11 @@
 == ᎠᏰᎸ ᏄᏛᎿᏕᎬ ᎠᎴ ᎠᏅᏬᏗ ᎧᏫ ==
 {{main|Coffee and health}}
 
-ᎤᎪᏗᏗ ᏗᎦᏎᏍᏙᏗ ᎤᎭ ᏭᏪᏙᎢ ᏄᏛᏁᎸ ᎾᎿ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏰᎵ ᎧᏫ ᎤᏲᏨᎯ ᎠᎴ ᎤᎪᏗᏗ ᎦᏃᏢᎩ ᏅᏬᏘ ᏄᏍᏗᏓᏅ, ᎤᏃᏴᎬ ᏂᏛᎴᏅᏓ [[diabetes mellitus|diabetes]] ᎠᎴ [[cardiovascular disease|cardiovascular ᎥᏳᎩ]] [[cancer|ᎠᏓᏰᏍᎩ]] ᎠᎴ [[cirrhosis]]. ᏗᎦᏎᏍᏙᏗ ᎠᎴ ᏧᏓᎴᎾᎢ ᏥᏄᏍᏗ ᎢᏳᏃ ᎧᏫ ᎤᎭ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏗᎪᏍᎩ ᎠᏰᎸ ᏄᏛᎿᏕᎬ ᎤᎭᎵᏍᏕᎸᏙᏗ, ᎠᎴ ᏂᏚᎵᏍᏔᏅ ᎠᎴ ᎤᏠᏱ ᏧᏓᎴᎾᎢ ᎬᏙᏗ ᎪᎯᏳᎯ ᏗᎦᏘᎴᎩ ᏄᏍᏛ ᎧᏃᎮᏗ ᏄᎵᏍᏔᏅ ᎧᏫ ᎤᏲᏨᎯ.{{fact}} ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎾᏍᎩ ᎨᏒᎢ ᎢᏳᏓᎵᎭ unclear ᎢᏳᏃ ᎾᏍᎩ ᎯᎠ ᎠᏁᎸᏙᏗ ᎠᎴ ᎤᎭᎵᏍᏕᎸᏙᏗ ᎠᎴ ᎤᎾᏓᏟᏌᎲ caffeine ᎠᎴ ᎢᏳᏃ ᎤᏅᏌ ᎠᎴ ᎾᏍᏋ ᎠᏠᏯᏍᏔᏅ ᏐᎢ chemical ᏗᎧᏃᏗ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎧᏫ (ᎠᎴ ᎢᏳᏃ decaffeinated ᎧᏫ ᎠᏫᏗ ᎯᎠ ᎤᏠᏱ ᎤᎭᎵᏍᏕᎸᏙᏗ ᎠᎴ ᎠᏁᎸᏙᏗ).{{fact}}
+ᎤᎪᏗᏗ ᏗᎦᏎᏍᏙᏗ ᎤᎭ ᏭᏪᏙᎢ ᏄᏛᏁᎸ ᎾᎿ ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏰᎵ ᎧᏫ ᎤᏲᏨᎯ ᎠᎴ ᎤᎪᏗᏗ ᎦᏃᏢᎩ ᏅᏬᏘ ᏄᏍᏗᏓᏅ, ᎤᏃᏴᎬ ᏂᏛᎴᏅᏓ [[diabetes|ᎧᎵᏍᏥ]] ᎠᎴ [[cardiovascular disease|cardiovascular ᎥᏳᎩ]] [[cancer|ᎠᏓᏰᏍᎩ]] ᎠᎴ [[cirrhosis|ᎤᏪᎳ ᎠᏓᏰᏍᎩ]]. ᏗᎦᏎᏍᏙᏗ ᎠᎴ ᏧᏓᎴᎾᎢ ᏥᏄᏍᏗ ᎢᏳᏃ ᎧᏫ ᎤᎭ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏗᎪᏍᎩ ᎠᏰᎸ ᏄᏛᎿᏕᎬ ᎤᎭᎵᏍᏕᎸᏙᏗ, ᎠᎴ ᏂᏚᎵᏍᏔᏅ ᎠᎴ ᎤᏠᏱ ᏧᏓᎴᎾᎢ ᎬᏙᏗ ᎪᎯᏳᎯ ᏗᎦᏘᎴᎩ ᏄᏍᏛ ᎧᏃᎮᏗ ᏄᎵᏍᏔᏅ ᎧᏫ ᎤᏲᏨᎯ.{{fact}} ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎾᏍᎩ ᎨᏒᎢ ᎢᏳᏓᎵᎭ unclear ᎢᏳᏃ ᎾᏍᎩ ᎯᎠ ᎠᏁᎸᏙᏗ ᎠᎴ ᎤᎭᎵᏍᏕᎸᏙᏗ ᎠᎴ ᎤᎾᏓᏟᏌᎲ caffeine ᎠᎴ ᎢᏳᏃ ᎤᏅᏌ ᎠᎴ ᎾᏍᏋ ᎠᏠᏯᏍᏔᏅ ᏐᎢ chemical ᏗᎧᏃᏗ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎧᏫ (ᎠᎴ ᎢᏳᏃ decaffeinated ᎧᏫ ᎠᏫᏗ ᎯᎠ ᎤᏠᏱ ᎤᎭᎵᏍᏕᎸᏙᏗ ᎠᎴ ᎠᏁᎸᏙᏗ).{{fact}}
 
 ᏌᏊ ᏰᎵ ᎣᏏ ᎤᏠᏱᎭ ᎥᏩᏘᏍᎬ ᎤᎭ ᏭᏪᏙᎢ ᎯᎠ ᎠᎦᏲᎳᏗᏍᏗ [[diabetes mellitus type 2|diabetes mellitus ᏗᎦᎪᏗ 2]] ᎭᏫᎾᏗᏢ ᎧᏫ consumers, ᎤᎾᎵᎪᏒ Ꮎ ᏝᏰᎵ ᎾᏍᏋ ᏗᎪᏏᏌᏅᎯ ᎾᎥᎢ ᎯᎠ caffeine ᎣᏍᏛ ᎤᏓᏅᏘ ᎤᏩᏒ ᎠᎴ ᎤᏙᎯᏳᎢ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏭᎵᏂᎬᎬ ᎭᏫᎾᏗᏢ decaffeinated ᎧᏫ.<ref>Pereira ᎡᏥ, Parker ᎦᎾᏄᎪᏫᏒ, Folsom AR. ᎧᏫ ᎤᏲᏨᎯ ᎠᎴ ᎠᏁᎸᏙᏗ ᏗᎦᎪᏗ 2 diabetes mellitus. ''ᏂᎬᎢ ᎭᏫᎾᏗᏢ Med'' 2006;166:1311-1316. <!--PMID awaited--></ref>
 
-ᏝᏱᎪᎯᎩ, ᎧᏫ ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏓᏝᏅᏓᏗᏍᎬ ᎠᏙᎷᏩᏘᏍᎬ [[cirrhosis]] ᎯᎠ ᎤᏪᎳ: ᎯᎠ ᎤᏲᏨᎯ 1 ᎠᎫᎩᏍᏗ ᎢᎦ ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏓᏝᏅᏓᏗᏍᎬ ᎾᎥᎢ 20%, ᎠᎴ 4 ᏗᎫᎩᏍᏗ ᎢᎦ ᎠᎦᏲᎳᏛᎯ ᎯᎠ ᏓᏝᏅᏓᏗᏍᎬ ᎾᎥᎢ 80%.<ref>http://archinte.ᎠᎹ-assn.org/cgi/ᎣᏍᏛ ᎤᏓᏅᏘ/ᎠᏓᏓᎶᏙᏗ/166/11/1190</ref>
+ᏝᏱᎪᎯᎩ, ᎧᏫ ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏓᏝᏅᏓᏗᏍᎬ ᎠᏙᎷᏩᏘᏍᎬ ᎤᏪᎳ ᎠᏓᏰᏍᎩ ᎯᎠ ᎤᏪᎳ: ᎯᎠ ᎤᏲᏨᎯ 1 ᎠᎫᎩᏍᏗ ᎢᎦ ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏓᏝᏅᏓᏗᏍᎬ ᎾᎥᎢ 20%, ᎠᎴ 4 ᏗᎫᎩᏍᏗ ᎢᎦ ᎠᎦᏲᎳᏛᎯ ᎯᎠ ᏓᏝᏅᏓᏗᏍᎬ ᎾᎥᎢ 80%.<ref>http://archinte.ᎠᎹ-assn.org/cgi/ᎣᏍᏛ ᎤᏓᏅᏘ/ᎠᏓᏓᎶᏙᏗ/166/11/1190</ref>
 
 ᏱᏓᏟᎶᏍᏔᏅ ᎠᏰᎲᎩ ᎤᏬᎯᏳᏒ ᎬᏩᏚᏫᏛ ᎧᏫ ᎨᏒᎢ Ꮎ anaditsgv ᎾᏍᎩ ᎾᎾᎢ ᎠᏲᎵ lyudetiyvda ᏫᎵ "ᎾᏛᏍᎬᎾ ᏂᎯ ᎤᏛᏏᏗᏒ".
 
@@ -49,17 +48,13 @@
 {{main|Processing of coffee}}
 ᎤᏣᏘ ᏧᎵᎬᏩᎳᏅᎯ ᎠᎴ ᏴᏫ labour ᎨᏒᎢ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎤᏓᎷᎸ ᎧᏫ berries ᎠᎴ Ꮝ ᎤᎦᏔ ᏰᎵᏇ ᎾᏍᏋ processed ᎾᎾᎯ ᎯᎠ roasted ᎧᏫ ᎬᏙᏗ ᎦᏙ ᎤᏍᏗ ᎤᎪᏗᏗ ᏭᏕᎵᎬᏗᏢ consumers ᎠᎴ ᎠᏓᏙᎳᎩ. ᎧᏫ berries ᎠᏎ ᎾᏍᏋ ᎤᏑᏰᏒ, defruited, ᎠᎧᏲᏔᏅ, ᏂᏓᏙᎳᎬᎾ, ᎠᎴ—ᎭᏫᎾᏗᏢ ᎢᎦᏛ processes—ᎾᏍᎩ ᎾᏍᏇ ᎤᎦᏳᎳᏨ.
 
-{{main|Coffee roasting}}
-{{seealso|Home roasting coffee}}
 ᎧᏫ ᎨᏒᎢ ᎤᏠᏱᎭ ᎦᎾᏗᏅᏓ roasted, ᎠᎴ ᎯᎠ ᎠᎵᏢᏙᏗ ᏧᎵᎬᏩᎳᏅᎯ ᎤᎭ ᎡᏆ ᎢᎦᎢ ᎢᎦᏘ ᎾᏓᏛᏂᏌᏁᎲ ᎾᎿ ᎯᎠ ᏄᏍᏛ ᎠᎩᏍᏗ ᎯᎠ ᏭᎵᏍᏆᏙᏅ ᎤᏛᏒᎯ. ᏂᎦᏛ ᎧᏫ ᎨᏒᎢ roasted ᎤᏓᎷᎸ ᎠᎴᏂᏙᎲ consumed. ᎧᏫ ᏰᎵᏇ ᎾᏍᏋ ᎦᎾᏗᏅᏓ [[Coffee roasting|roasted]] ᎾᎥᎢ ᎯᎠ supplier; ᏅᎪᏢᎯᏐᏗᏱ ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ [[Home roasting coffee|ᎣᏪᏅᏒ roasted]].
 
 == ᎠᏛᏅᎢᏍᏔᏅ ==
-{{main|Coffee preparation}}
-
 ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ ᎧᏫ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏩᏎᎯᎰᎢ ᎯᎠ ᏗᎦᎶᎪᏗ ᎤᎬᏩᎵ ᎠᎴ ᏧᏂᎸᏫᏍᏓᏁᏗ processes ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᏩᎯᏗ ᏂᎦᏛ roasted ᎧᏫ ᏚᏯ ᎯᎠ consumer. ᎦᏅᎾᏩ ᎯᎠ roasted ᎧᏫ ᏚᏯ ᎨᏒᎢ ᎠᏍᏆᏛᎯ ᎾᎾᎢ roastery, ᎭᏫᎾᏗᏢ ᎠᎵᏍᏓᏴᏗ ᎠᏓᎾᏅ, ᎠᎴ ᎾᎾᎢ ᎣᏪᏅᏒ. ᎾᏍᎩ ᎨᏒᎢ ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎦᏙᎯ ᎾᎾᎢ ᎯᎠ roastery ᎠᎴ ᎦᎾᏗᏅᏓ ᎯᎠ consumer ᎦᏙᎯ ᎠᎴ packaged, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ "ᏂᎦᏛ-tuya" ᎧᏫ Ꮎ ᎨᏒᎢ ᎦᏙᎯ ᎾᎾᎢ ᎣᏪᏅᏒ ᎨᏒᎢ ᏗᎾᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᎦᎾᏆᏘᏍᏗ ᎯᎠ ᎤᏤᎵᏛ ᎠᏁᎸᏙᏗ ᎧᏁᏨ ᎢᏯᏛᏁᏗ. ᎠᏍᏙᏍᏗ ᎨᏒᎢ ᏩᏎᎸᎯ ᎾᎥᎢ Ꮝ ᎤᏚᎳᏗ ᎢᎬᎾᏗ.  "Turkish" ᎠᏍᏙᏍᏗ, ᎯᎠ ᏬᏌᏂᏴ, ᎨᏒᎢ ᏁᎵᏒᎢ ᎾᏍᎩᎾᎢ ᎦᏟᏐᏗ ᎦᏥᏃᏍᏛ ᎬᏙᏗ ᎠᎹ, ᎾᎯᏳᎢ ᎯᎠ coarsest ᎠᏍᏙᏍᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ [[coffee percolator|ᎧᏫ percolator]] ᎠᎴ [[french press|ᎠᎦᎸᏥ ᏗᏂᎴᏱᏗᏍᎩ]], ᎠᎴ ᎾᎾᎢ ᎯᎠ ᏐᎢ ᎦᎶᏒᏍᏔᏅ.  ᎠᏰᎵ ᎢᏴ ᎠᏰᎵ ᎯᎠ ᎦᎶᏒᏍᏔᏅ ᎠᎴ ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ: "ᎤᏪᏴ" ᎠᎴ "Ꭺ ᎢᏳᏍᏗ ᎧᏃᎮᏗ" ᎠᏍᏙᏍᏗ, ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎣᏪᏅᏒ ᎧᏫ ᎤᏚᎳᏗ ᏗᎬᏔᏂᏓᏍᏗ. ᎯᎠ "ᎤᏪᏴ" ᏗᎬᏔᏂᏓᏍᏗ ᎠᏂᎪᏍᏙᏗ ᎬᏙᏗ ᎾᎥᏂᎨ-ᎠᎵᏢᏍᎩ ᎠᎹ ᎤᎶᏒᎩ ᎭᏫᎾᏗᏢ ᎤᏍᎦᏃᎳ ᎤᏪᏴᎢ ᏗᎬᏩᎶᏒ ᎯᎠ ᎦᏙᎯ ᎧᏫ ᎭᏫᎾᏗᏢ Ꭺ ᎢᏳᏍᏗ ᎧᏃᎮᏗ.  ᎯᎠ [[espresso]] ᎢᎬᎾᏗ ᎬᏔᏂᏓᏍᏗ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᏏᎾᏒᎢ ᎦᏌᏙᏯᏍᏗ ᎤᏙᎯᏳ ᎤᏗᎴᎩ ᎠᎹ, ᎠᎴ ᎢᏧᎳᎭ ᎠᏥᎸ ᎦᏌᏙᏯᏍᎩ, ᏗᎬᏩᎶᏒ ᎯᎠ ᎧᏫ ᏗᎦᏙᎯ, ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᏭᎵᏂᎬᎬ ᎠᏑᏴᏗ ᎠᎴ chemical ᏗᎦᏁᏟᏴᏍᏗ ᎬᏙᏗ ᎤᏟ ᎢᎦᎢ ᎧᏫ tuya ᎢᏳᏍᏗ ᏯᏛᎿ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏗᏔᏍᏗ. ᏌᏊ ᎢᏳᏩᎫᏗ brewed, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎤᏓᏁᎸᎩ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏫᎦᎶᎯᏍᏗ: ᎾᎿ Ꮝ ᎣᏤᎵ, ᎬᏙᏗ ᎧᎵᏎᏥ, ᎬᏙᏗ ᎤᏅᏗ ᎠᎴ ᎠᎦᏓᏢᏓ, ᎤᏗᎴᎩ ᎠᎴ ᎤᏴᏢ, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎿ. Roasted arabica ᏚᏯ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎦᎳᏅᎯ ᏂᎬᏅ ᎠᎴ ᎫᏝᎢ ᎬᏙᏗ ᏬᏗᎨᎧᎵᏤᏥ. ᎠᎪᏩᏛᏗ ᎯᎠ ᎤᏓᏡᎬ ᎾᎿ [[coffee preparation|ᎧᏫ ᎠᏛᏅᎢᏍᏔᏅ]] ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏙᎪᏩᎸ. 
 
 === ᎤᎵᏍᏓ ᎧᏫ ===
-ᏎᏍᏗ ᎤᎾᏛᎯᏍᏔᏅ ᎠᎴ ᎦᎾᏗᏅᏓ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎯᏕᎨᎢ consumers ᎦᎪ ᎫᏢᎥᏍᎬ't ᎠᏚᎳᏗ ᎠᏛᏅᎢᏍᏙᏗ ᎤᎾᏤᎵ ᎣᏤᎵ ᎧᏫ. [[Instant coffee|ᏄᎵᏍᏛ ᎧᏫ]] ᎤᎭ ᏭᏪᏙᎢ ᎠᎧᏲᏔᏅ ᎾᎾᎯ ᎦᎾ ᏓᏪᎳᎩᏍᎩ ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᏄᎵᏍᏛ dissolved ᎭᏫᎾᏗᏢ ᎤᏗᎴᎩ ᎠᎹ ᎾᏍᎩᎾᎢ ᎤᏲᏨᎯ. ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ ᎧᏫ ᎨᏒᎢ ᎠᎵᏍᏓᏴᏗ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ᎤᏂᎸᏉᏗ ᎭᏫᎾᏗᏢ Asian ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᏧᏕᏘᏴᏓ, ᎾᏍᎩᎾ ᎨᏒ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎴ ᎤᎦᎾᏭ Korea. [[Vending machine|ᎦᎾᏗᏅᏗ ᎪᏢᏅᏙᏗ]]ᎢᏯᏛᏁᎵᏓᏍᏗ ᎦᎾᏗᏅᏗ ᏎᏍᏗ varieties ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ ᎧᏫ, ᏰᎵ ᎠᏩᏛᏗ ᎢᏧᎳ ᎤᏗᎴᎩ ᎠᎴ ᎤᏴᏢ. ᎠᏥᎸ ᎪᏢᏗ ᎯᎠ ᎢᏳᏓᎵᎭ ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᎥᎴᏂᏙᎲ Korean ᎦᏚᎲᎢ ᎡᎯ, ᏚᎾᏓᏡᎬᎢ ᎾᏍᎩ ᎤᎪᏗᏗ ᎤᎭ ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ ᎧᏫ ᎬᏙᏗ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏄᏍᏛ ᎠᎩᏍᏗ. Japanese ᎠᎯᏕᎨᎢ ᏓᏓᎾᏅ ᎠᎴ ᎠᎵᏍᏕᎸᏙᏗ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᏯᏖᎾ availability ᏒᏃᏱ ᎡᎯ ᏅᏙ-bottled ᎧᏫ ᎠᏗᏔᏍᏗ, ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏨᏍᏛ ᏰᎵ ᎤᎦᎾᏍᏛ ᎠᎴ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-blended ᎬᏙᏗ ᎤᏅᏗ. ᎣᏂ, ᎦᎾ ᎧᏫ ᎤᏓᏂᏝᏅ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎡᏆ institutional ᏄᏍᏗᏓᏅ ᎭᏢᏃ ᎧᏫ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎾᏍᏋ ᎠᏛᎯᏍᏔᏅ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏴᏫ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ iyuwakodi. ᎾᏍᎩ ᎨᏒᎢ ᏄᏍᏛ ᎧᏃᎮᎸ ᏥᏄᏍᏗ ᎤᎲᎢ ᎠᏑᏴᏗ ᎬᏩᏚᏫᏛ ᏥᏄᏍᏗ ᎣᏍᏛ ᏥᏄᏍᏗ ᎡᎳᏗ-ᎠᏲᏓᏅ ''robusta'' ᎧᏫ, ᎠᎴ ᏚᏂᎬᏩᎶᏛ ᎬᏩᏚᏫᏛ 10 ᎢᏯᏓᏅᏖᏗ ᎠᎫᎩᏍᏗ ᎠᏛᎯᏍᏙᏗ. ᎯᎠ ᏗᎬᏔᏂᏓᏍᏗ ᎬᏔᏅᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎾᏍᎩ ᏰᎵᏇ ᎫᎭᎸ ᎦᎸᎳᏗᏢ 500 ᏗᎫᎩᏍᏗ ᏑᏟᎶᏛ, ᎠᎴ 1,000 ᎢᏳᏃ ᎯᎠ ᎠᎹ ᎨᏒᎢ preheated.<ref>ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎦᎾ ᎧᏫ ᎤᏓᏂᏝᏅ: ᎠᏐᏴ ᎦᎳᏅᏛ ᏕᎪᏪᎸ, ᎠᎾᏱᎵᏒ 21st, 2005, ᎤᏆᏓᏛ C4, ''Commodities ᎬᏂᎨᏒ ᎢᎬᏁᏗ''</ref>
+ᏎᏍᏗ ᎤᎾᏛᎯᏍᏔᏅ ᎠᎴ ᎦᎾᏗᏅᏓ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎯᏕᎨᎢ consumers ᎦᎪ ᎫᏢᎥᏍᎬ't ᎠᏚᎳᏗ ᎠᏛᏅᎢᏍᏙᏗ ᎤᎾᏤᎵ ᎣᏤᎵ ᎧᏫ. [[Instant coffee|ᏄᎵᏍᏛ ᎧᏫ]] ᎤᎭ ᏭᏪᏙᎢ ᎠᎧᏲᏔᏅ ᎾᎾᎯ ᎦᎾ ᏓᏪᎳᎩᏍᎩ ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᏄᎵᏍᏛ dissolved ᎭᏫᎾᏗᏢ ᎤᏗᎴᎩ ᎠᎹ ᎾᏍᎩᎾᎢ ᎤᏲᏨᎯ. ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ ᎧᏫ ᎨᏒᎢ ᎠᎵᏍᏓᏴᏗ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ᎤᏂᎸᏉᏗ ᎭᏫᎾᏗᏢ Asian ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᏧᏕᏘᏴᏓ, ᎾᏍᎩᎾ ᎨᏒ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎴ ᎤᎦᎾᏭ Korea. [[Vending machine|ᎦᎾᏗᏅᏗ ᎪᏢᏅᏙᏗ]]ᎢᏯᏛᏁᎵᏓᏍᏗ ᎦᎾᏗᏅᏗ ᏎᏍᏗ varieties ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ ᎧᏫ, ᏰᎵ ᎠᏩᏛᏗ ᎢᏧᎳ ᎤᏗᎴᎩ ᎠᎴ ᎤᏴᏢ. ᎠᏥᎸ ᎪᏢᏗ ᎯᎠ ᎢᏳᏓᎵᎭ ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᎥᎴᏂᏙᎲ Korean ᎦᏚᎲᎢ ᎡᎯ, ᏚᎾᏓᏡᎬᎢ ᎾᏍᎩ ᎤᎪᏗᏗ ᎤᎭ ᏔᎷᎩᏍᎩ ᎦᎸᏔᏅ ᎧᏫ ᎬᏙᏗ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏄᏍᏛ ᎠᎩᏍᏗ. Japanese ᎠᎯᏕᎨᎢ ᏓᏓᎾᏅ ᎠᎴ ᎠᎵᏍᏕᎸᏙᏗ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᏯᏖᎾ availability ᏒᏃᏱ ᎡᎯ ᏅᏙ-bottled ᎧᏫ ᎠᏗᏔᏍᏗ, ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏨᏍᏛ ᏰᎵ ᎤᎦᎾᏍᏛ ᎠᎴ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-blended ᎬᏙᏗ ᎤᏅᏗ. ᎣᏂ, ᎦᎾ ᎧᏫ ᎤᏓᏂᏝᏅ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎡᏆ institutional ᏄᏍᏗᏓᏅ ᎭᏢᏃ ᎧᏫ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎾᏍᏋ ᎠᏛᎯᏍᏔᏅ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏴᏫ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ ᎢᏳᏩᎪᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏄᏍᏛ ᎧᏃᎮᎸ ᏥᏄᏍᏗ ᎤᎲᎢ ᎠᏑᏴᏗ ᎬᏩᏚᏫᏛ ᏥᏄᏍᏗ ᎣᏍᏛ ᏥᏄᏍᏗ ᎡᎳᏗ-ᎠᏲᏓᏅ ''robusta'' ᎧᏫ, ᎠᎴ ᏚᏂᎬᏩᎶᏛ ᎬᏩᏚᏫᏛ 10 ᎢᏯᏓᏅᏖᏗ ᎠᎫᎩᏍᏗ ᎠᏛᎯᏍᏙᏗ. ᎯᎠ ᏗᎬᏔᏂᏓᏍᏗ ᎬᏔᏅᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎾᏍᎩ ᏰᎵᏇ ᎫᎭᎸ ᎦᎸᎳᏗᏢ 500 ᏗᎫᎩᏍᏗ ᏑᏟᎶᏛ, ᎠᎴ 1,000 ᎢᏳᏃ ᎯᎠ ᎠᎹ ᎨᏒᎢ preheated.<ref>ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎦᎾ ᎧᏫ ᎤᏓᏂᏝᏅ: ᎠᏐᏴ ᎦᎳᏅᏛ ᏕᎪᏪᎸ, ᎠᎾᏱᎵᏒ 21st, 2005, ᎤᏆᏓᏛ C4, ''Commodities ᎬᏂᎨᏒ ᎢᎬᏁᏗ''</ref>
 
 == ᎠᎾᏓᏟᏏᏍᎬ ᎢᎦᏛ ᎧᏫ ==
 :''ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ: [[Coffeehouse]] ᎾᏍᎩᎾᎢ ᎠᎾᏓᏟᏏᏍᎬ ᎧᏃᎮᏍᎩ ᎧᏫ, ᎠᎴ [[caffè]] ᎾᏍᎩᎾᎢ ᎧᎵ ᏗᎪᎥᎯ Italian ᎧᏃᎮᎸᎯ.''
@@ -99,9 +94,7 @@
 * "ᎯᎠ ᏨᏍᎩᎾ ᎤᏤᎵ ᎠᎫᎩᏍᏗ," Stewart ᎠᏍᏆᎨᏂ Allen, ᎤᏍᏆᏂᎪᏗ ᎦᎵᏦᏕ
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
-{{commons|Coffee}}
-{{wikiquote}}
-{{cookbook}}
+{{commonscat|Coffee}}
 * Benjamin Joffe-Walt ᎠᎴ Oliver Burkeman, ''[[The Guardian|ᎯᎠ ᎠᏓᎦᏘᏯ]]'', [[16 September|16 ᏚᎵᏍᏗ]] 2005, [http://www.guardian.co.uk/food/Story/0,2763,1571608,00.html "Coffee trail"] - ᏂᏛᎴᏅᏓ Ethiopian ᎤᏍᏗ ᎦᏚᎲ Choche London ᎧᏫ ᏗᎦᎸᏫᏍᏓᏁᏗ
 * [http://medicineworld.org/cancer/lead/6-2006/coffee-blood-pressure-and-adrenaline.html#coffee-and-bloodpressure Coffee and blood pressure]
 *[http://www.coffee365.co.uk Coffee] - UK ᏚᎳᏏᏔᏅᎩ ᎧᏫ ᎠᏍᏚᎢᏍᏗ
