--- a/ᎩᏔᏯ.mw
+++ b/ᎩᏔᏯ.mw
@@ -1,5 +1,80 @@
-[[File:Screen shot 2010-09-13 at 8.49.30 PM.png]]
-
-'''ᎩᏔᏯ'''
+[[File:Kirschen.jpg|thumb|left|ᎩᏔᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ]]
+[[File:Cherry Blossoms-Spring.jpg|thumb|100px|ᎩᏔᏯ ᎠᏂᏥᎸᏍᎩ]]
+[[File:Cherry trees outside vitra.JPG|thumb|100px|ᎩᏔᏯ ᏡᎬ ᏖᏡᎬ]]
+'''ᎩᏔᏯ''' [[ᎤᏗᏔᏅ ᎠᎩᏍᏗ]] ᎠᎴ [[ᏡᎬ ᏖᏡᎬ]]. Ꮎ ᏡᎬ [[ᎠᏥᎸᏍᎦ]] ᎠᎩᎦᎨ-ᎢᏳᏍᏗ ᎠᎴ ᎤᏁᎨ. ᎩᎳᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ ᎩᎦᎨ, ᎠᎴ ᎠᏍᏓᏯ ᎤᎦᏔ ᎤᎭ.  
 
 [[Category:Plantae]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Cherry}}
+
+[[als:Kirsche (Frucht)]]
+[[ar:كرز]]
+[[az:Albalı]]
+[[be:Чарэшня]]
+[[bo:སེའུ།]]
+[[bs:Trešnja]]
+[[bg:Череша]]
+[[cs:Třešně]]
+[[co:Chjarasgia]]
+[[cy:Ceiriosen]]
+[[da:Kirsebær (frugt)]]
+[[nv:Didzéchííʼ]]
+[[et:Kirsipuu]]
+[[el:Κερασιά (φυτό)]]
+[[eml:Sirësa]]
+[[en:Cherry]]
+[[es:Cerasus]]
+[[eo:Ĉerizo]]
+[[eu:Gereziondo]]
+[[fr:Cerise]]
+[[ga:Silín]]
+[[gl:Cereixa]]
+[[hsb:Wišnja]]
+[[io:Cerizo]]
+[[id:Ceri]]
+[[it:Ciliegia]]
+[[he:דובדבן]]
+[[pam:Cherry]]
+[[ka:ალუბალი]]
+[[csb:Krzesznia]]
+[[ht:Seriz]]
+[[la:Cerasus (pomum)]]
+[[lv:Ķirši]]
+[[lb:Kiischt]]
+[[lt:Vyšnia]]
+[[lij:Çëxa]]
+[[hu:Cseresznye]]
+[[ml:ചെറി]]
+[[mr:चेरी]]
+[[ms:Ceri]]
+[[mwl:Cereija]]
+[[mn:Интоор]]
+[[nl:Kers (fruit)]]
+[[ne:पैयुँ]]
+[[ja:サクランボ]]
+[[nap:Cerasa]]
+[[nn:Morell]][[no:Morell]]
+[[oc:Cerièra]]
+[[pnb:شاہ دانہ]]
+[[pcd:Chrisse]]
+[[pl:Wiśnia]]
+[[pt:Cerejeira]]
+[[qu:Rinda]]
+[[ru:Вишня]]
+[[sco:Cherry]]
+[[scn:Cirasa]]
+[[simple:Cherry]]
+[[sl:Češnja]]
+[[fi:Cerasus]]
+[[sv:Körsbär]]
+[[th:เชอร์รี่]]
+[[uk:Вишня]]
+[[ur:شاہ دانہ]]
+[[ug:گىلاس]]
+[[vi:Anh đào]]
+[[wa:Ceréjhe]]
+[[zh-yue:車厘子]]
+[[bat-smg:Vīšnė]]
+[[zh:樱桃]]
