--- a/ᎩᏔᏯ.mw
+++ b/ᎩᏔᏯ.mw
@@ -1,8 +1,92 @@
-[[File:Kirschen.jpg|thumb|left|ᎩᏔᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ]]
+{{Taxobox
+| color = lightgreen
+| name = ᎩᏔᏯ
+| image = Frühling blühender Kirschenbaum.jpg
+| image_width = 250px
+| image_caption = ''[[Prunus cerasus]]'' ([[Sour Cherry|ᏧᎿᏦᏍᏗ ᎩᏔᏯ]]) [[ᏡᎬ ᏖᏡᎬ]]
+| regnum = [[Plant|Plantae]]
+| divisio = [[Flowering plant|Magnoliophyta]]
+| classis = [[Magnoliopsida]]
+| ordo = [[Rosales]]
+| familia = [[Rosaceae]]
+| subfamilia = [[Prunoideae]] ᎠᎴ [[Spiraeoideae]]<ref name=Potter>Potter, D., et al. (2007). Phylogeny and classification of Rosaceae. ''Plant Systematics and Evolution''. 266 (1–2): 5–43.</ref>
+| genus = '''''Prunus'''''
+| genus_authority = [[Carolus Linnaeus|L.]]
+| subdivision_ranks = Species
+| subgenus = '''''Cerasus'''''
+}}
 [[File:Cherry Blossoms-Spring.jpg|thumb|100px|ᎩᏔᏯ ᎠᏂᏥᎸᏍᎩ]]
-[[File:Cherry trees outside vitra.JPG|thumb|100px|ᎩᏔᏯ ᏡᎬ ᏖᏡᎬ]]
-'''ᎩᏔᏯ''' [[ᎤᏗᏔᏅ ᎠᎩᏍᏗ]] ᎠᎴ [[ᏡᎬ ᏖᏡᎬ]]. Ꮎ ᏡᎬ [[ᎠᏥᎸᏍᎦ]] ᎠᎩᎦᎨ-ᎢᏳᏍᏗ ᎠᎴ ᎤᏁᎨ. ᎩᎳᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ ᎩᎦᎨ, ᎠᎴ ᎠᏍᏓᏯ ᎤᎦᏔ ᎤᎭ.  
+[[File:Kirschen.jpg|thumb|thumb|100px|ᎩᏔᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ]]
 
+'''ᎩᏔᏯ''' [[ᎤᏗᏔᏅ ᎠᎩᏍᏗ]] ᎠᎴ [[ᏡᎬ ᏖᏡᎬ]]. Ꮎ ᏡᎬ [[ᎠᏥᎸᏍᎦ]] ᎠᎩᎦᎨ-ᎢᏳᏍᏗ ᎠᎴ ᎤᏁᎨ. ᎩᎳᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ ᎩᎦᎨ, ᎠᎴ ᎠᏍᏓᏯ ᎤᎦᏔ ᎤᎭ.
+
+''Prunus'' ᏚᏓᏘᎿᎥᎢ ᎠᏎᏍᏗᎭ [[ᏆᏄᎾᏍᏗᎢ]], [[ᎶᏂᎨ ᎠᏓᏛᏍᎩ]], ᎠᎴ  [[peaches|ᎯᎸᏍᎩ ᏆᎾ]].
+
+ᎤᎪᏗᏗ ᎣᎦᎷᏯᏓᏴᏗ ᎩᏔᏯ ᎠᏂᏯᏫ ᏔᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]]: ''Prunus avium'' ᎠᎴ ''Prunus cerasus''. ''Prunus avium'', "ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ" ᏭᎦᎾᏍᏓ. ''Prunus cerasus'' ᏧᎿᏦᏍᏗ. ᎠᏂᏴᏫ ᎠᎾᏓᏍᏓᏴᎲᏍᎦ ᏧᎿᏦᏍᏗ ᎩᏔᏯ.
+
+ᎩᏔᏯ [[ᎠᎹ ᎠᏑᏴᏗ ᏫᏍᎩ]] "Kirsch."
+
+==ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ==
+* ''[[Prunus alabamensis]]'' [[Alabama cherry|ᎠᎳᏆᎹ ᎩᏔᏯ]]
+* ''[[Prunus apetala]]'' (Siebold ᎠᎴ Zucc.) Franch.  Sav. - Clove ᎩᏔᏯ
+* ''[[Prunus avium]]'' (L.) L. - [[Wild cherry|ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ]], [[Sweet cherry|ᏭᎦᎾᏍᏓ ᎩᏔᏯ]], Mazzard ᎠᎴ Gean
+* ''[[Prunus besseyi]]'' - Western Sand Cherry, Hansen's ᎠᎴ Hanson's Bush ᎩᏔᏯ, Rocky Mountain Cherry, ᎠᎴ Bessey's ᎩᏔᏯ
+* ''[[Prunus campanulata]]'' Maxim. - Taiwan ᎩᏔᏯ, Formosan ᎩᏔᏯ ᎠᎴ Bell-flowered cherry
+* ''[[Prunus canescens]]'' Bois. - Greyleaf cherry
+* ''[[Prunus caroliniana]]'' Aiton - Carolina laurel cherry ᎠᎴ Laurel cherry
+* ''[[Prunus cerasoides]]'' D. Don. - Himalayan ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ
+* ''[[Prunus cerasus]]'' L. - [[Sour Cherry|ᏧᎿᏦᏍᏗ ᎩᏔᏯ]]
+* ''[[Prunus cistena]]'' Koehne - Purpleleaf sand cherry
+* ''[[Prunus cornuta]]'' (Wall. ex Royle) Steud. - Himalayan bird cherry
+* ''[[Prunus cuthbertii]]'' Small - Cuthbert ᎩᏔᏯ
+* ''[[Prunus cyclamina]]'' Koehne - Cyclamen ᎩᏔᏯ ᎠᎴ Chinese flowering cherry
+* ''[[Prunus dawyckensis]]'' Sealy - Dawyck ᎩᏔᏯ
+* ''[[Prunus dielsiana]]'' C.K. Schneid. - Tailed-leaf cherry
+* ''[[Prunus emarginata]]'' (Douglas ex Hook.) Walp. - [[Oregon cherry|ᎤᏩᎦᏂ ᎩᏔᏯ]], ᎠᎴ [[Bitter cherry|ᎤᏴᏍᏗ ᎩᏔᏯ]]
+* ''[[Prunus eminens]]'' Beck - (Semi-sour cherry)
+* ''[[Prunus fruticosa]]'' Pall. - European dwarf cherry, [[Dwarf cherry|ᎤᏍᏗ ᎩᏔᏯ]], Mongolian cherry ᎠᎴ Steppe cherry
+* ''[[Prunus gondouinii]]'' (Poit. ᎠᎴ Turpin) Rehder - Duke cherry
+* ''[[Prunus grayana]]'' Maxim. - Japanese bird cherry ᎠᎴ Gray's bird cherry
+* ''[[Prunus humilis]]'' Bunge - Chinese plum-cherry ᎠᎴ Humble bush cherry
+* ''[[Prunus ilicifolia]]'' (Nutt. ex Hook. ᎠᎴ Arn.) Walp. - Hollyleaf cherry, Evergreen cherry, Holly-leaved cherry ᎠᎴ Islay
+* ''[[Prunus incisa]]'' Thunb. - Fuji cherry
+* ''[[Prunus jamasakura]]'' Siebold ex Koidz. - Japanese mountain cherry ᎠᎴ Japanese hill cherry
+* ''[[Prunus japonica]]'' Thunb. - Korean cherry
+* ''[[Prunus laurocerasus]]'' L. - Cherry laurel 
+* ''[[Prunus lyonii]]'' (Eastw.) Sarg. - Catalina Island cherry
+* ''[[Prunus maackii]]'' Rupr. - Manchurian ᎩᏔᏯ ᎠᎴ Amur chokecherry
+* ''[[Prunus mahaleb]]'' L. - [[Saint Lucie cherry|ᎾᏍᏕᏅᎾ ᎷᏏᎠ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], Perfumed cherry ᎠᎴ Mahaleb cherry
+* ''[[Prunus maximowiczii]]'' Rupr. - [[Miyama cherry|ᎻᏯᎹ ᎩᏔᏯ]] ᎠᎴ Korean cherry
+
+* ''[[Prunus mume]]'' (Siebold & Zucc.) Ume, Japanese apricot, Chinese plum
+* ''[[Prunus myrtifolia]]'' (L.) Urb. - West Indian cherry
+* ''[[Prunus nepaulensis]]'' (Ser.) Steud. - Nepal bird cherry
+* ''[[Prunus nipponica]]'' Matsum. - Takane ᎩᏔᏯ, Peak cherry ᎠᎴ Japanese Alpine cherry
+* ''[[Prunus occidentalis]]'' Sw. - Western cherry laurel
+* ''[[Prunus padus]]'' L. - [[Bird cherry|ᏥᏍᏆ ᎩᏔᏯ]] ᎠᎴ European bird cherry
+* ''[[Prunus pensylvanica]]'' L.f. - [[Pin cherry|ᎤᏍᏆᏘ ᎩᏔᏯ]], [[Fire cherry|ᎠᏥᎸ ᎩᏔᏯ]], ᎠᎴ [[Wild red cherry|ᎩᎦᎨ ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ]]
+* ''[[Prunus pleuradenia]]'' Griseb. - Antilles ᎩᏔᏯ
+* ''[[Prunus prostrata]]'' Labill. - [[Mountain cherry|ᎣᏓᎸ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], Spreading cherry ᎠᎴ Prostrate cherry
+* ''[[Prunus pseudocerasus]]'' Lindl. - Chinese sour cherry ᎠᎴ False cherry
+* ''[[Prunus pumila]]'' L. - Sand cherry
+* ''[[Prunus rufa]]'' Wall ex Hook.f. - Himalayan cherry
+* ''[[Prunus salicifolia]]'' Kunth. - Capulin, Singapore cherry ᎠᎴ Tropic cherry
+* ''[[Prunus sargentii]]'' Rehder - Sargent's cherry ᎠᎴ [[Ezo Mountain cherry|ᎡᏦ ᎣᏓᎸ ᎩᏔᏯ]]
+* ''[[Prunus serotina]]'' Ehrh. - Black cherry
+* ''[[Prunus serrula]]'' Franch. - Paperbark cherry, Birch bark cherry ᎠᎴ Tibetan cherry
+* ''[[Prunus serrulata]]'' Lindl. - Japanese cherry, Hill cherry, Oriental cherry ᎠᎴ East Asian cherry
+* ''[[Prunus speciosa]]'' (Koidz.) Ingram - Oshima cherry
+* ''[[Prunus ssiori]]'' Schmidt- Hokkaido bird cherry
+* ''[[Prunus stipulacea]]'' Maxim.
+* ''[[Prunus subhirtella]]'' Miq. - Higan cherry ᎠᎴ Spring cherry
+* ''[[Prunus takesimensis]]'' Nakai - Takeshima flowering cherry
+* ''[[Prunus tomentosa]]'' Thunb. - Nanking cherry, Manchu cherry, Downy cherry, Shanghai cherry, Ando cherry, [[Mountain cherry|ᎣᏓᎸ ᎩᏔᏯ]], Chinese dwarf cherry, Chinese bush cherry 
+* ''[[Prunus verecunda]]'' (Koidz.) Koehne - Korean mountain cherry
+* ''[[Prunus virginiana]]'' L. - [[Chokecherry|ᏛᏯ]]<ref>Banks, William H., Jr. ''Plants of the Cherokee.'' Gatlinburg, TN: Great Smoky Mountains Association, 2004: 62. ISBN 0-937207-43-8.</ref>
+* ''[[Prunus x yedoensis]]'' Matsum. - Yoshino cherry ᎠᎴ Tokyo cherry
+
+==ᏫᏓᏎᏄᎢ==
+<references/>
 [[Category:Plantae]]
 [[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
