--- a/ᎩᏔᏯ.mw
+++ b/ᎩᏔᏯ.mw
@@ -18,7 +18,7 @@
 [[File:Cherry Blossoms-Spring.jpg|thumb|100px|ᎩᏔᏯ ᎠᏂᏥᎸᏍᎩ]]
 [[File:Kirschen.jpg|thumb|thumb|100px|ᎩᏔᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ]]
 
-'''ᎩᏔᏯ''' [[ᎤᏗᏔᏅ ᎠᎩᏍᏗ]] ᎠᎴ [[ᏡᎬ ᏖᏡᎬ]]. Ꮎ ᏡᎬ [[ᎠᏥᎸᏍᎦ]] ᎠᎩᎦᎨ-ᎢᏳᏍᏗ ᎠᎴ ᎤᏁᎨ. ᎩᎳᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ ᎩᎦᎨ, ᎠᎴ ᎠᏍᏓᏯ ᎤᎦᏔ ᎤᎭ.
+'''ᎩᏔᏯ''' [[ᎤᏗᏔᏅ ᎠᎩᏍᏗ]] ᎠᎴ [[ᏡᎬ ᏖᏡᎬ]]. Ꮎ ᏡᎬ [[ᎠᏥᎸᏍᎩ]] ᎠᎩᎦᎨ-ᎢᏳᏍᏗ ᎠᎴ ᎤᏁᎨ. ᎩᎳᏯ ᎤᏗᏔᏅ ᎠᎩᏍᏗ ᎩᎦᎨ, ᎠᎴ ᎠᏍᏓᏯ ᎤᎦᏔ ᎤᎭ.
 
 ''Prunus'' ᏚᏓᏘᎿᎥᎢ ᎠᏎᏍᏗᎭ [[ᏆᏄᎾᏍᏗᎢ]], [[ᎶᏂᎨ ᎠᏓᏛᏍᎩ]], ᎠᎴ  [[peaches|ᎯᎸᏍᎩ ᏆᎾ]].
 
