--- a/ᏫᎩᏇᏗᏯ.mw
+++ b/ᏫᎩᏇᏗᏯ.mw
@@ -1,6 +1,8 @@
 ᏫᎩᏇᏗᏯ [http://www.wikipedia.org Wikipedia] [[ᏣᎳᎩ]].
 {{stub}}
 
+[[Category:ᏫᎩᏇᏗᏯ| ]]
+
 [[ace:Wikipèdia]]
 [[af:Wikipedia]]
 [[ak:Wikipedia]]
