--- a/ᎤᎫᎫ.mw
+++ b/ᎤᎫᎫ.mw
@@ -1,4 +1,4 @@
-ᏕᏡᎬ, ᏧᏏᏫᏃ ᏓᏓᏁᎸ ᏓᏂᏁᎶ ᎤᎫᎫ. ᏥᏍᏕᏥ ᏓᏂᏰᏍᎪᎢ. ᏧᏔᎾ
+[[ᏕᏡᎬ]], ᏧᏏᏫᏃ ᏓᏓᏁᎸ ᏓᏂᏁᎶ ᎤᎫᎫ. ᏥᏍᏕᏥ ᏓᏂᏰᏍᎪᎢ. ᏧᏔᎾ
 ᏧᎩᏓᏟ, ᎤᏃᎴ ᎬᏩᎶᎯᏍᏗ, ᏓᏐᏰᏍᎬ ᎢᏝᏪ ᎨᏐ ᎦᏃᎯᎵᏒ.
 ᏗᏍᏆᎳᎯᎨᏍᏗᏅ ᏚᎩᏓᏢ ᎤᏍᏕᎵᏍᎪ ᎠᏫᏗᏍᎪ ᎤᏃᏴᎬ ᎦᎴᏂᏗᏜ.
 ᎧᏴᏎᏆᎪᏍᏓᏯ ᎤᏍᏕᎵᏍᎪ ᎤᎫᎫ ᎦᏣᎦᎸᏍᎬ ᎭᏫᏯᎢ.
