*Empty MediaWiki Message*

--- a/ᎤᎫᎫ.mw
+++ b/ᎤᎫᎫ.mw
@@ -1,4 +1,1 @@
-[[ᏕᏡᎬ]], ᏧᏏᏫᏃ ᏓᏓᏁᎸ ᏓᏂᏁᎶ ᎤᎫᎫ. ᏥᏍᏕᏥ ᏓᏂᏰᏍᎪᎢ. ᏧᏔᎾ
-ᏧᎩᏓᏟ, ᎤᏃᎴ ᎬᏩᎶᎯᏍᏗ, ᏓᏐᏰᏍᎬ ᎢᏝᏪ ᎨᏐ ᎦᏃᎯᎵᏒ.
-ᏗᏍᏆᎳᎯᎨᏍᏗᏅ ᏚᎩᏓᏢ ᎤᏍᏕᎵᏍᎪ ᎠᏫᏗᏍᎪ ᎤᏃᏴᎬ ᎦᎴᏂᏗᏜ.
-ᎧᏴᏎᏆᎪᏍᏓᏯ ᎤᏍᏕᎵᏍᎪ ᎤᎫᎫ ᎦᏣᎦᎸᏍᎬ ᎭᏫᏯᎢ.
+[[ᏕᏡᎬ]], ᏧᏏᏫᏃ ᏓᏓᏁᎸ ᏓᏂᏁᎶ ᎤᎫᎫ. [[ᏥᏍᏕᏥ]] ᏓᏂᏰᏍᎪᎢ. ᏧᏔᎾ ᏧᎩᏓᏟ, [[ᎤᏃᎴ]] ᎬᏩᎶᎯᏍᏗ, ᏓᏐᏰᏍᎬ [[ᎢᏝᏪ]] ᎨᏐ ᎦᏃᎯᎵᏒ. ᏗᏍᏆᎳᎯᎨᏍᏗᏅ ᏚᎩᏓᏢ ᎤᏍᏕᎵᏍᎪ ᎠᏫᏗᏍᎪ ᎤᏃᏴᎬ ᎦᎴᏂᏗᏜ. ᎧᏴᏎᏆᎪᏍᏓᏯ ᎤᏍᏕᎵᏍᎪ ᎤᎫᎫ ᎦᏣᎦᎸᏍᎬ [[ᎭᏫᏯᎢ]].
