--- a/ᏡᎬᎢ.mw
+++ b/ᏡᎬᎢ.mw
@@ -1,5 +1,5 @@
-[[File:Coastal_redwood.jpg|right|250px|thumb|ᎯᎠ [[conifer]]ous [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]], ᎯᎠ tallest ᏡᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᎿ ᎡᎶᎯ.]]
-'''ᏡᎬ''' ᎨᏒᎢ ᎡᏆ, [[Perennial plant|ᎦᏌᏆᎸ]], [[wood|ᎠᏓ]] [[plant|ᎦᎪᏘ]]. ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎠᏫᏒᏗ ᏩᏎᏍᏗ ᎾᎿ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᏭᏍᏗᎬᎢ ᏂᎬᎢ, ᎯᎠ ᎠᎴᏂᏍᎬ ᏂᎦᎥᏊ ᏂᎬᎾᏗᏍᎪ digakohidi ᎾᎾᎢ ᎠᏂᎦᏲᎵ 6 m (20 ft) ᎦᎸᎳᏗ ᎾᎾᎢ ᎤᏩᎾᏐᎲᎯ ᎠᎴ, ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ, ᎤᎲᎢ ᎠᏂᎦᏲᎵ ᏚᏩᏂᎦᎸ ᎤᎵᏍᏕᎸᎲ ᎾᎿ ᏏᏴᏫ ᏄᎬᏫᏳᏒ ᎤᏩᏂᎦᎸ ᎠᎴ ᎧᏁᏌᎢ ᎬᏙᏗ ᏧᎸᏌᏓ [[apical dominance|apical ᎾᏓᏛᏂᏌᏁᎲ]] (ᎠᎪᏩᏛᏗ [[shrub|ᎦᎪᏘ]] ᎾᏍᎩᎾᎢ ᎤᏠᏱ ᎾᎬᏁᎲ). ᎤᏠᏱᎭᎢ ᎬᏙᏗ ᎤᎪᏗᏗ ᏐᎢ ᎦᎪᏘ ᏚᏙᏢᏒ, ᏕᏡᎬ ᎠᎴ ᎦᏅᎯᏓ-ᎠᎴᏂᏙᎸ. ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎠᏛᏍᎬ 100 m ᎢᏅ ᎢᎦᏘ, ᎠᎴ ᎢᎦᏛ ᏰᎵᏇ ᎠᎴᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎠᎦᏴᎵ ᏧᏕᏘᏴᏓ. 
+[[File:Coastal_redwood.jpg|right|250px|thumb|ᎯᎠ [[conifer]]ous [[Sequoia|ᏏᏉᏯ]], ᎯᎠ tallest ᏡᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᎿ ᎡᎶᎯ.]]
+'''ᏡᎬ''' ᎨᏒᎢ ᎡᏆ, [[Perennial plant|ᎦᏌᏆᎸ]], [[wood|ᎠᏓ]] [[plant|ᎦᎪᏘ]]. ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎠᏫᏒᏗ ᏩᏎᏍᏗ ᎾᎿ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᏭᏍᏗᎬᎢ ᏂᎬᎢ, ᎯᎠ ᎠᎴᏂᏍᎬ ᏂᎦᎥᏊ ᏂᎬᎾᏗᏍᎪ ᏗᎦᎪᎯᏗ ᎾᎾᎢ ᎠᏂᎦᏲᎵ 6 m (20 ft) ᎦᎸᎳᏗ ᎾᎾᎢ ᎤᏩᎾᏐᎲᎯ ᎠᎴ, ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ, ᎤᎲᎢ ᎠᏂᎦᏲᎵ ᏚᏩᏂᎦᎸ ᎤᎵᏍᏕᎸᎲ ᎾᎿ ᏏᏴᏫ ᏄᎬᏫᏳᏒ ᎤᏩᏂᎦᎸ ᎠᎴ ᎧᏁᏌᎢ ᎬᏙᏗ ᏧᎸᏌᏓ [[apical dominance|apical ᎾᏓᏛᏂᏌᏁᎲ]] (ᎠᎪᏩᏛᏗ [[shrub|ᎦᎪᏘ]] ᎾᏍᎩᎾᎢ ᎤᏠᏱ ᎾᎬᏁᎲ). ᎤᏠᏱᎭᎢ ᎬᏙᏗ ᎤᎪᏗᏗ ᏐᎢ ᎦᎪᏘ ᏚᏙᏢᏒ, ᏕᏡᎬ ᎠᎴ ᎦᏅᎯᏓ-ᎠᎴᏂᏙᎸ. ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎠᏛᏍᎬ 100 m ᎢᏅ ᎢᎦᏘ, ᎠᎴ ᎢᎦᏛ ᏰᎵᏇ ᎠᎴᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎠᎦᏴᎵ ᏧᏕᏘᏴᏓ. 
 
 ᏕᏡᎬ ᎠᎴ ᎤᎵᏍᎨᏛ ᏑᏓᎴᎩ ᎯᎠ ᏂᎬᏩᏍᏛ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎠᎴ ᎦᏛᎬᎢ ᎢᏧᏓᎴᎩ ᎭᏫᎾᏗᏢ [[Landscape architecture|landscaping]] ᎠᎴ [[agriculture|ᏗᎦᎶᎪᏗ]], ᏓᏓᏁᎲᎢ [[orchard|ᏗᎦᎶᎪᏗ]] ᏠᎨᏏ ᏓᏫᏒ (ᏯᏛᎿ ᏥᏄᏍᏗ [[apple|ᏒᎦᏔ]]). ᏕᏡᎬ ᎾᏍᎩ ᎾᏍᏇ ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ [[mythology|mythologies]] (ᎠᎪᏩᏛᏗ [[trees in mythology|ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎤᏁᎳᏅᎯ]]).
 
@@ -7,78 +7,78 @@
 [[File:Raunkiaer.jpg|200px|right|thumb| [[oak|ᏧᏍᎦ]] ᏡᎬ ᎭᏫᎾᏗᏢ [[Denmark]]]]
 ᏡᎬ ᎨᏒᎢ ᎦᎪᏘ ᎤᏙᏢᏒ ᎠᎴ ᏕᏡᎬ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ [[order (biology)|ᏓᎾᏓᏅᏍᎬᎢ]] ᎠᎴ [[family (biology)|ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ]] ᏗᎦᎪᎯᏗ. ᏕᏡᎬ ᎯᎠ ᎢᏴ ᎤᎾᏛᏁᎸᏗ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎤᏛᏏᏗᏒ ᎤᏙᏢᏒ, ᎤᎦᎶᎬ ᏗᎦᎪᏗ ᎠᎴ ᎤᏙᏢᏒᎢ, ᎤᏯᎸ ᎨᎦᏓᏅᏖᏗ, ᎠᏤᎯᏐᏗᏱ ᎠᏛᎯᏍᏙᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.
 
-ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏕᏡᎬ ᎨᏒᎩ [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]]ᎠᎴ [[horsetail]], ᎦᏙ ᎤᏍᏗ ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ ᎯᎠ [[Carboniferous]] ᎠᎴᏫᏍᏙᏗ; ᏡᎬ ᏲᎾ ᏤᏍ ᏙᎢ ᏩᎵᏃᎯᏯᏍᎬ, ᎠᎴ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᏩᎵᏃᎯᏯᏍᎬ horsetails ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏡᎬ ᎤᏙᏢᏒ. ᎣᏂᏯᎨᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ [[Triassic]] ᎠᎴᏫᏍᏙᏗ, [[Pinophyta|conifers]], [[ginkgo]], [[cycad]]ᎠᎴ ᏐᎢ [[gymnosperm]]ᎤᎾᏄᎪᏨ, ᎠᎴ ᎠᏍᏓᏩᏗᏒ [[flowering plant|ᎠᏛᎯᏍᏙᏗ ᎦᎪᏘ]]ᎭᏫᎾᏗᏢ ᎯᎠ [[Cretaceous|ᎤᎾᏥ]] ᎠᎴᏫᏍᏙᏗ. ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎪᎯ ᎢᎦ ᎠᎴ ᎠᏛᎯᏍᏙᏗ digakohidi ᎠᎴ conifers. ᎯᎠ ᏙᎪᏩᎸ ᎡᎳᏗᏢ ᎠᏓᏁᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎤᎪᏗᏗ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ ᏕᏡᎬ ᎠᎴ ᎯᎳᎪ ᎤᏅᏌ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ classified.
+ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏕᏡᎬ ᎨᏒᎩ [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]] ᎠᎴ [[horsetail|ᏐᏈᎵ ᎦᏂᏗᏛ]], ᎦᏙ ᎤᏍᏗ ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ ᎯᎠ [[Carboniferous]] ᎠᎴᏫᏍᏙᏗ; ᏡᎬ ᏲᎾ ᏤᏍ ᏙᎢ ᏩᎵᏃᎯᏯᏍᎬ, ᎠᎴ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᏩᎵᏃᎯᏯᏍᎬ ᏐᏈᎵ ᏗᎦᏙᎦ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏡᎬ ᎤᏙᏢᏒ. ᎣᏂᏯᎨᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ [[Triassic]] ᎠᎴᏫᏍᏙᏗ, [[Pinophyta|conifers]], [[ginkgo]], [[cycad]] ᎠᎴ ᏐᎢ [[gymnosperm]] ᎤᎾᏄᎪᏨ, ᎠᎴ ᎠᏍᏓᏩᏗᏒ [[flowering plant|ᎠᏛᎯᏍᏙᏗ ᎦᎪᏘ]]ᎭᏫᎾᏗᏢ ᎯᎠ [[Cretaceous|ᎤᎾᏥ]] ᎠᎴᏫᏍᏙᏗ. ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎪᎯ ᎢᎦ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᏗᎦᎪᎯᏗ ᎠᎴ conifers. ᎯᎠ ᏙᎪᏩᎸ ᎡᎳᏗᏢ ᎠᏓᏁᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎤᎪᏗᏗ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ ᏕᏡᎬ ᎠᎴ ᎯᎳᎪ ᎤᏅᏌ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ classified.
 
-ᎤᏍᏗ ᎤᎾᏓᏟᏌᎲ ᏕᏡᎬ ᎠᏛᏏᏒ ᎢᏧᎳ ᎨᏒᎢ ᎤᏯᏅᎲ [[grove (nature)|ᎸᏱ]] ᎠᎴ '''ᎦᎪᏘ''', ᎠᎴ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎫᏝᎢ ᎾᎥᎢ ᎠᏫᏒᏗ ᎤᏛᏏᏗᏒ ᏕᏡᎬ ᎨᏒᎢ ᎤᏯᏅᎲ '''[[forest|ᎠᏙᎯ ᎢᎾᎨ]]'''. ᎯᎸᏍᎩ [[biotope]]ᎠᎴ ᎧᏁᎢᏍᏔᏅᎯ ᎡᏆᏯ ᎾᎥᎢ ᎯᎠ ᏕᏡᎬ Ꮎ ᎦᎷᎯᏍᏗ ᎠᏂ; ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴ [[rainforest]] ᎠᎴ [[taiga]] (ᎠᎪᏩᏛᏗ [[ecozone]]). ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᏕᏡᎬ scattered ᎠᎴ spaced ᏗᎦᎾᏗᎯᏍᏗ grassland (ᎤᏠᏱᎭ grazed ᎠᎴ ᎤᎴᏴᏒ ᎦᏬᎯᎸᏙᏗ ᎠᏓᏅᏍᏗ) ᎨᏒᎢ ᎤᏯᏅᎲ '''[[savanna|ᏂᎬᏅ]]'''.
+ᎤᏍᏗ ᎤᎾᏓᏟᏌᎲ ᏕᏡᎬ ᎠᏛᏏᏒ ᎢᏧᎳ ᎨᏒᎢ ᎤᏯᏅᎲ [[grove (nature)|ᎸᏱ]] ᎠᎴ '''ᎦᎪᏘ''', ᎠᎴ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎫᏝᎢ ᎾᎥᎢ ᎠᏫᏒᏗ ᎤᏛᏏᏗᏒ ᏕᏡᎬ ᎨᏒᎢ ᎤᏯᏅᎲ '''[[forest|ᎠᏙᎯ ᎢᎾᎨ]]'''. ᎯᎸᏍᎩ [[biotope]] ᎠᎴ ᎧᏁᎢᏍᏔᏅᎯ ᎡᏆᏯ ᎾᎥᎢ ᎯᎠ ᏕᏡᎬ Ꮎ ᎦᎷᎯᏍᏗ ᎠᏂ; ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴ [[rainforest]] ᎠᎴ [[taiga]] (ᎠᎪᏩᏛᏗ [[ecozone]]). ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᏕᏡᎬ scattered ᎠᎴ spaced ᏗᎦᎾᏗᎯᏍᏗ grassland (ᎤᏠᏱᎭ grazed ᎠᎴ ᎤᎴᏴᏒ ᎦᏬᎯᎸᏙᏗ ᎠᏓᏅᏍᏗ) ᎨᏒᎢ ᎤᏯᏅᎲ '''[[savanna|ᏂᎬᏅ]]'''.
 
 == ᎤᎾᏙᏢᎯ ==
 [[File:Leavessnipedale.jpg||thumb|right|200px|ᏧᎦᎶᎦ ᎠᎴ ᎤᎵᏍᎨᏛ ᏄᏍᏛ ᏗᎧᏃᏗ ᏕᏡᎬ]]
 [[File:WisconsinScenery.jpg|200px|right|thumb|ᏡᎬ [[root|ᎤᎾᏍᏕᏢ]] ᏕᎬᏔᏛ ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎠᏓᏁᎳᏁᏗ [[water|ᎠᎹ]] ᎠᎴ [[nutrients]]]]
-ᎯᎠ ᏄᏦᏍᏛᎾ ᎢᎦᏛᎭ ᏡᎬ ᎠᎴ ᎯᎠ [[root|ᎤᎾᏍᏕᏢ]], [[trunk (botany)|ᎧᏁᏌᎢ]](), [[branch|ᎤᏩᏂᎦᎸes]], [[twig|ᎢᎦᏛ]]ᎠᎴ [[leaf|ᏧᎦᎶᎦ]]. ᏡᎬ ᎤᏩᏂᎦᎸ ᎤᏠᏯᏍᏗ ᎠᎬᏫᏳᏛ ᎠᎵᏍᏕᎸᏗ ᎠᎴ ᎠᎯᏴᏍᏗ ᏂᎦᏛ ([[xylem]] ᎠᎴ [[phloem]]). [[Wood|ᎠᏓ]] ᎤᎾᏠᏯᏍᏗ ''xylem'' ᎦᏁᎸ, ᎠᎴ [[bark|ᎤᏯᎸ]] ᎨᏒᎢ ᎪᏢᏅᎯ ''phloem'' ᎠᎴ ᏐᎢ ᏂᎦᏛ ᎤᏓᏎᎦᏤᏗ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ cambium.
+ᎯᎠ ᏄᏦᏍᏛᎾ ᎢᎦᏛᎭ ᏡᎬ ᎠᎴ ᎯᎠ [[root|ᎤᎾᏍᏕᏢ]], [[trunk (botany)|ᎧᏁᏌᎢ]] (), [[branch|ᎤᏩᏂᎦᎸ]]es, [[twig|ᎢᎦᏛ]] ᎠᎴ [[leaf|ᏧᎦᎶᎦ]]. ᏡᎬ ᎤᏩᏂᎦᎸ ᎤᏠᏯᏍᏗ ᎠᎬᏫᏳᏛ ᎠᎵᏍᏕᎸᏗ ᎠᎴ ᎠᎯᏴᏍᏗ ᏂᎦᏛ ([[xylem]] ᎠᎴ [[phloem]]). [[Wood|ᎠᏓ]] ᎤᎾᏠᏯᏍᏗ ''xylem'' ᎦᏁᎸ, ᎠᎴ [[bark|ᎤᏯᎸ]] ᎨᏒᎢ ᎪᏢᏅᎯ ''phloem'' ᎠᎴ ᏐᎢ ᏂᎦᏛ ᎤᏓᏎᎦᏤᏗ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ cambium.
 
-ᏕᏡᎬ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏯᏖᎾ grouped ᎾᎾᎯ ''ᎦᎪᏘ'' ᎠᎴ ''ᎦᎪᏘ'' ᏕᏡᎬ ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ᎦᎶᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎤᎾᏤᎵ ᎤᏩᏂᎦᎸ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎧᏁᏉᎠ. ᎦᎪᏘ ᏕᏡᎬ, ᎦᏙ ᎤᏍᏗ ᎪᎯᏳᏙᏗ ᎯᎠ ᎡᏆ ᎤᏂᎪᏗᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏕᏡᎬ (ᏂᎦᏛ [[Pinophyta|conifer]], ᎠᎴ ᏂᎦᏛ [[dicotyledon|broadleaf]] ᏕᏡᎬ), ᎠᏛᏍᎬ ᎾᎥᎢ ᎯᎠ ᎦᏟᏐᏗᎩ ᎢᏤ ᎠᏓ ᏙᏯᏗᏢ, ᎾᏞᎬᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏯᎸ. ᎦᎪᏘ ᏕᏡᎬ, ᎠᎬᏫᏳᏛ ᎭᏫᎾᏗᏢ ᎯᎠ [[monocotyledon]](e.g. [[palm tree|ᏂᎦᏅᎯᏒ]]), ᎠᏛᏍᎬ ᎾᎥᎢ ᎦᏟᏐᏗᎩ ᎢᏤ ᏭᏚᎸᏛ ᎬᏙᏗ ᎭᏫᎾᏗᏢ.
+ᏕᏡᎬ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏯᏖᎾ grouped ᎾᎾᎯ ''ᎦᎪᏘ'' ᎠᎴ ''ᎦᎪᏘ'' ᏕᏡᎬ ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ ᎦᎶᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎤᎾᏤᎵ ᎤᏩᏂᎦᎸ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎧᏁᏉᎠ. ᎦᎪᏘ ᏕᏡᎬ, ᎦᏙ ᎤᏍᏗ ᎪᎯᏳᏙᏗ ᎯᎠ ᎡᏆ ᎤᏂᎪᏗᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏕᏡᎬ (ᏂᎦᏛ [[Pinophyta|conifer]], ᎠᎴ ᏂᎦᏛ [[dicotyledon|broadleaf]] ᏕᏡᎬ), ᎠᏛᏍᎬ ᎾᎥᎢ ᎯᎠ ᎦᏟᏐᏗᎩ ᎢᏤ ᎠᏓ ᏙᏯᏗᏢ, ᎾᏞᎬᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏯᎸ. ᎦᎪᏘ ᏕᏡᎬ, ᎠᎬᏫᏳᏛ ᎭᏫᎾᏗᏢ ᎯᎠ [[monocotyledon]] (e.g. [[palm tree|ᏂᎦᏅᎯᏒ]]), ᎠᏛᏍᎬ ᎾᎥᎢ ᎦᏟᏐᏗᎩ ᎢᏤ ᏭᏚᎸᏛ ᎬᏙᏗ ᎭᏫᎾᏗᏢ.
 
-ᏥᏄᏍᏗ ᎦᎪᏘ ᏡᎬ ᎠᏛᏍᎦ, ᎾᏍᎩ ᎪᏢᏗ [[growth ring|ᎤᏛᏏᏗᏒ ᎠᎵᏰᏑᏍᏔᏬ]]. ᎭᏫᎾᏗᏢ ᎡᎷᏪᎢ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ, ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎬᎪᏩᏛᏗ ᎤᏍᏆᎸᎲ ᏗᎦᏁᏟᏴᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏛᏏᏗᏒ ᎬᏙᏗ ᏄᏁᏌᏴᏢ ᏧᏓᎴᎿᎢ ᎦᏬᎯᎸᏙᏗ ᎾᏕᏘᏴᎯᏒ ᎠᏓᏠᎯᏍᏗ. ᎾᏍᎩ ᎯᎠ ᏗᎵᏰᏑᏍᏔᏬ ᏰᎵᏇ ᎾᏍᏋ ᏗᏎᎸᎯ ᏗᎫᎪᏙᏗ ᎯᎠ lyudetiyvda ᎯᎠ ᏡᎬ, ᎠᎴ ᎬᏔᏅᎯ ᎢᏳ ᎢᎪᎯ ᎠᏰᎵ ᎠᎴ ᎢᏧᎳᎭ ᎠᏓ ᎠᎩᏒᎯ ᏂᏛᎴᏅᏓ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ tsuqagutanvsv; ᎪᎯ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ agatohvsdi [[dendrochronology]]. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎤᎦᎾᏭ ᎤᏔᏂᏗ ᎦᏙᎯ ᎬᏙᏗ ᏂᎪᎯᎸ ᏑᏕᏘᏴᏓ-ᎦᏌᏆᎸ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ, ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᏫᎬᎵᏱᎵᏒ ᎠᎴ ᎤᏤᎵᏛ ᏗᎵᏰᏑᏍᏔᏬ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᏢᎯ Ꭲgotlvhi ignelvhi, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ lyudetiyvda ᎤᎵᏍᏛ ᎨᏒᎢ ᏰᎵ ᏂᎨᏒᎾ. lyudetiyvda ᎤᎵᏍᏛ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵ ᏂᎨᏒᎾ ᎭᏫᎾᏗᏢ ᎦᎪᏘ ᏕᏡᎬ.
+ᏥᏄᏍᏗ ᎦᎪᏘ ᏡᎬ ᎠᏛᏍᎦ, ᎾᏍᎩ ᎪᏢᏗ [[growth ring|ᎤᏛᏏᏗᏒ ᎠᎵᏰᏑᏍᏔᏬ]]. ᎭᏫᎾᏗᏢ ᎡᎷᏪᎢ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ, ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎬᎪᏩᏛᏗ ᎤᏍᏆᎸᎲ ᏗᎦᏁᏟᏴᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏛᏏᏗᏒ ᎬᏙᏗ ᏄᏁᏌᏴᏢ ᏧᏓᎴᎿᎢ ᎦᏬᎯᎸᏙᏗ ᎾᏕᏘᏴᎯᏒ ᎠᏓᏠᎯᏍᏗ. ᎾᏍᎩ ᎯᎠ ᏗᎵᏰᏑᏍᏔᏬ ᏰᎵᏇ ᎾᏍᏋ ᏗᏎᎸᎯ ᏗᎫᎪᏙᏗ ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎯᎠ ᏡᎬ, ᎠᎴ ᎬᏔᏅᎯ ᎢᏳ ᎢᎪᎯ ᎠᏰᎵ ᎠᎴ ᎢᏧᎳᎭ ᎠᏓ ᎠᎩᏒᎯ ᏂᏛᎴᏅᏓ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᏆᎫᏔᏅᏒ; ᎪᎯ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᎠᎦᏙᎲᏍᏗ ᎠᎦᏙᎲᏍᏗ [[dendrochronology]]. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎤᎦᎾᏭ ᎤᏔᏂᏗ ᎦᏙᎯ ᎬᏙᏗ ᏂᎪᎯᎸ ᏑᏕᏘᏴᏓ-ᎦᏌᏆᎸ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ, ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᏫᎬᎵᏱᎵᏒ ᎠᎴ ᎤᏤᎵᏛ ᏗᎵᏰᏑᏍᏔᏬ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᏢᎯ ᎢᎪᏢᎯ ᎢᎬᏁᎸᎯ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏳᏕᏘᏴᏓ ᎤᎵᏍᏛ ᎨᏒᎢ ᏰᎵ ᏂᎨᏒᎾ. ᎢᏳᏕᏘᏴᏓ ᎤᎵᏍᏛ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵ ᏂᎨᏒᎾ ᎭᏫᎾᏗᏢ ᎦᎪᏘ ᏕᏡᎬ.
 
-ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᏡᎬ ᎠᎴ ᏂᎦᎥᏊ embedded ᎭᏫᎾᏗᏢ ᎡᎶᎯ, ᎠᎾᏓᏁᎳᏍᎬ ᎦᎷᎯᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᎸᎳᏗᏢ-ᎦᏙᎯ [[biomass]] ᎠᎴ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ [[water|ᎠᎹ]] ᎠᎴ [[nutrients]] ᏂᏛᎴᏅᏓ ᎯᎠ [[soil|ᎦᏙᎯ]]. ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ, ᏱᏂᎬᏛᎾ, Ꮎ ᎾᎯᏳᎢ ᎦᏙᎯ nutrients ᎠᎴ ᎤᎵᏍᎨᏛ ᏡᎬ ᎤᏤᎵ ᎤᏛᏏᏗᏒ ᎯᎠ ᎤᏂᎪᏗᏗ Ꮝ biomass ᎦᎷᎦ ᏂᏛᎴᏅᏓ carbondioxide ᎠᎦᏎᏍᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏃᎴᏍᎬ (ᎠᎪᏩᏛᏗ [[photosynthesis]]). ᎦᎸᎳᏗᏢ ᎦᏙᎯ, ᎯᎠ ᎧᏁᏌᎢ ᎠᏓᏁᏗ ᏂᎦᏛᎢ ᎯᎠ ᎤᎦᎶᎬ-ᎠᎾᎵᏐᏈᎸᏍᎬ ᏚᏩᏂᎦᎸ, ᎠᏓᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ ᎠᏓᎪᏅᏙᏗᏱ ᎬᏙᏗ ᏐᎢ ᎦᎪᏘ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᏍᎩᎾᎢ [[sunlight]]. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏕᏡᎬ, ᎯᎠ ᎠᏓᏁᎳᏅᎯ ᎯᎠ ᏚᏩᏂᎦᎸ optimizes ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᏧᎦᎶᎦ sunlight.
+ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᏡᎬ ᎠᎴ ᏂᎦᎥᏊ embedded ᎭᏫᎾᏗᏢ ᎡᎶᎯ, ᎠᎾᏓᏁᎳᏍᎬ ᎦᎷᎯᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᎸᎳᏗᏢ-ᎦᏙᎯ [[biomass]] ᎠᎴ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ [[water|ᎠᎹ]] ᎠᎴ [[nutrients]] ᏂᏛᎴᏅᏓ ᎯᎠ [[soil|ᎦᏙᎯ]]. ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ, ᏱᏂᎬᏛᎾ, Ꮎ ᎾᎯᏳᎢ ᎦᏙᎯ nutrients ᎠᎴ ᎤᎵᏍᎨᏛ ᏡᎬ ᎤᏤᎵ ᎤᏛᏏᏗᏒ ᎯᎠ ᎤᏂᎪᏗᏗ Ꮝ biomass ᎦᎷᎦ ᏂᏛᎴᏅᏓ carbon dioxide ᎠᎦᏎᏍᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏃᎴᏍᎬ (ᎠᎪᏩᏛᏗ [[photosynthesis]]). ᎦᎸᎳᏗᏢ ᎦᏙᎯ, ᎯᎠ ᎧᏁᏌᎢ ᎠᏓᏁᏗ ᏂᎦᏛᎢ ᎯᎠ ᎤᎦᎶᎬ-ᎠᎾᎵᏐᏈᎸᏍᎬ ᏚᏩᏂᎦᎸ, ᎠᏓᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ ᎠᏓᎪᏅᏙᏗᏱ ᎬᏙᏗ ᏐᎢ ᎦᎪᏘ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᏍᎩᎾᎢ [[sunlight]]. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏕᏡᎬ, ᎯᎠ ᎠᏓᏁᎳᏅᎯ ᎯᎠ ᏚᏩᏂᎦᎸ optimizes ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᏧᎦᎶᎦ sunlight.
 
-ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᏕᏡᎬ ᎤᎭ ᏂᎦᏛ ᎯᎠ ᎦᎪᏘ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎠᎴ ᎢᎦᏛᎭ ᎤᏁᎢᏍᏔᏅᎩ ᎦᎸᎳᏗᏢ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎪᏗᏗ ᏂᎦᏅᎯᏒ ᏕᏡᎬ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ branched, ᎯᎠ [[Saguaro|saguaro ᎤᎵᏰᏍᏗ]] ᎤᏴᏢ ᎠᎺᎵᎨ ᎤᎭ Ꮭ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏧᎦᎶᎦ, [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]]ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏛᎯᏍᏙᏗ ᎤᏯᎸ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᎤᎾᏤᎵ ᏂᎦᎥ ᎤᏙᏢᏒᎢ ᎠᎴ ᏂᎬᎢ, ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᎠᎴ nonetheless ᏂᎦᎥᏊ ᎾᏍᎩ ᎠᏰᎸᏅ ᏥᏄᏍᏗ ᏕᏡᎬ. ᎤᏙᎯᏳᎢ, ᏱᏓᏟᎶᏍᏔᏅ ᏂᎬᎢ ᎨᏒᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ ᏗᏓᏁᏤᏗ. ᎦᎪᏘ ᎤᏙᏢᏒ Ꮎ ᎨᏒᎢ ᎤᏠᏱ ᏡᎬ, ᎠᎴ ᏂᎦᎥᏊ ᎤᎲᎢ ᎠᏂᎦᏲᎵ, ᏎᏍᏗ ᎧᏁᏌᎢ ᎠᎴ/ᎠᎴ ᏚᏩᏂᎦᎸ Ꮎ ᏗᎶᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏙᎯ, ᎨᏒᎢ ᎤᏯᏅᎲ [[shrub|ᎦᎪᏘ]]. ᏱᏂᎬᏛᎾ, Ꮭ ᎪᏍᏓᏯ ᎠᏓᏃᎮᏗ ᎠᏰᎵ ᎦᎪᏘ ᎠᎴ ᏕᏡᎬ ᎨᏒᎢ ᏰᎵᏊ. ᎠᏓᏁᎸ ᎤᎾᏤᎵ ᎤᏍᏗ ᏂᎬᎢ, [[bonsai]] ᏗᎦᎪᎯᏗ ᏯᏓᎢᏗᏏ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎾᏍᏋ 'ᏕᏡᎬ', ᎠᎴ ᏌᏊ ᎢᏳᏗᎾ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏦᎠᏎᏙᏗ ᏩᏎᎸᎯ ᎯᎠ ᎤᏙᏢᏒ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎬᏙᏗ ᎯᎠ ᏂᎬᎢ ᎠᎴ ᎤᏙᏢᏒᎢ ᎠᏂᏏᏴᏫᎭ digotsaledg digovhi. ᏕᎦᏅᎦᎵᏍᎬ ᎠᏲᎵ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵ ᎢᎩᏛ ᎯᎠ ᏩᏎᏍᏗ ᎾᎿ ᏡᎬ, ᎠᎴ ᏂᎦᏛ ᏕᎦᏅᎦᎵᏍᎬ ᎠᎴ ᏕᏡᎬ. [[Bamboo]] ᎾᎥᎢ ᏧᏓᎴᎾᎢ, ᎿᏛᎦ ᎤᎾᏛᏁᎸᏗ ᎤᎪᏗᏗ ᎯᎠ ᎨᎦᏓᏅᏖᏗ ᏕᏡᎬ, ᎩᎳ ᎠᎴ ᎢᏅᎯ ᎢᏳᏓᎵ ᎤᏯᏅᎲ ᏕᏡᎬ.
+ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᏕᏡᎬ ᎤᎭ ᏂᎦᏛ ᎯᎠ ᎦᎪᏘ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎠᎴ ᎢᎦᏛᎭ ᎤᏁᎢᏍᏔᏅᎩ ᎦᎸᎳᏗᏢ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎪᏗᏗ ᏂᎦᏅᎯᏒ ᏕᏡᎬ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ branched, ᎯᎠ [[Saguaro|saguaro ᎤᎵᏰᏍᏗ]] ᎤᏴᏢ ᎠᎺᎵᎨ ᎤᎭ Ꮭ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏧᎦᎶᎦ, [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]]ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏛᎯᏍᏙᏗ ᎤᏯᎸ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᎤᎾᏤᎵ ᏂᎦᎥ ᎤᏙᏢᏒᎢ ᎠᎴ ᏂᎬᎢ, ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᎠᎴ nonetheless ᏂᎦᎥᏊ ᎾᏍᎩ ᎠᏰᎸᏅ ᏥᏄᏍᏗ ᏕᏡᎬ. ᎤᏙᎯᏳᎢ, ᏱᏓᏟᎶᏍᏔᏅ ᏂᎬᎢ ᎨᏒᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ ᏗᏓᏁᏤᏗ. ᎦᎪᏘ ᎤᏙᏢᏒ Ꮎ ᎨᏒᎢ ᎤᏠᏱ ᏡᎬ, ᎠᎴ ᏂᎦᎥᏊ ᎤᎲᎢ ᎠᏂᎦᏲᎵ, ᏎᏍᏗ ᎧᏁᏌᎢ ᎠᎴ/ᎠᎴ ᏚᏩᏂᎦᎸ Ꮎ ᏗᎶᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏙᎯ, ᎨᏒᎢ ᎤᏯᏅᎲ [[shrub|ᎦᎪᏘ]]. ᏱᏂᎬᏛᎾ, Ꮭ ᎪᏍᏓᏯ ᎠᏓᏃᎮᏗ ᎠᏰᎵ ᎦᎪᏘ ᎠᎴ ᏕᏡᎬ ᎨᏒᎢ ᏰᎵᏊ. ᎠᏓᏁᎸ ᎤᎾᏤᎵ ᎤᏍᏗ ᏂᎬᎢ, [[bonsai]] ᏗᎦᎪᎯᏗ ᏯᏓᎢᏗᏏ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎾᏍᏋ 'ᏕᏡᎬ', ᎠᎴ ᏌᏊ ᎢᏳᏗᎾ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏦᎠᏎᏙᏗ ᏩᏎᎸᎯ ᎯᎠ ᎤᏙᏢᏒ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎬᏙᏗ ᎯᎠ ᏂᎬᎢ ᎠᎴ ᎤᏙᏢᏒᎢ ᎠᏂᏏᏴᏫᎭ ᏗᎪᏣᎴᏛ ᏗᎪᎥᎯ. ᏕᎦᏅᎦᎵᏍᎬ ᎠᏲᎵ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵ ᎢᎩᏛ ᎯᎠ ᏩᏎᏍᏗ ᎾᎿ ᏡᎬ, ᎠᎴ ᏂᎦᏛ ᏕᎦᏅᎦᎵᏍᎬ ᎠᎴ ᏕᏡᎬ. [[Bamboo]] ᎾᎥᎢ ᏧᏓᎴᎾᎢ, ᎿᏛᎦ ᎤᎾᏛᏁᎸᏗ ᎤᎪᏗᏗ ᎯᎠ ᎨᎦᏓᏅᏖᏗ ᏕᏡᎬ, ᎩᎳ ᎠᎴ ᎢᏅᎯ ᎢᏳᏓᎵ ᎤᏯᏅᎲ ᏕᏡᎬ.
 
 == ᎣᏍᏓᎯᎨ ᏕᏡᎬ ==
-ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎣᏍᏓᎯᎨ ᏕᏡᎬ ᏰᎵᏇ ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᎾᎿ ᎯᎸᏍᎩ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ; ᏂᎦᏛᎢ, ᎧᏁᏌᎢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎠᎴ ᏕᎬᏔᏛ, ᏂᎦᏛ ᎦᏟᏌᏅ ᏂᎬᎢ, ᎠᎴ lyudetiyvda. ᎾᏍᎩ ᎨᏒᎢ ᎦᏛᎬᎢ Ꮎ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎦᎸᏛ ᎧᏁᏌᎢ, ᎯᎠ ᎦᏚᎢ ᎾᎿ ᎦᏙᎬ ᎨᏒᎢ ᏂᎪᎯᎸᎢ ᎠᏰᎲᎩ ᎾᎥᎢ [[Pinophyta|conifer]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᏄᏓᎴᎿᎥ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎦᎸᏛ ᎧᏁᏌᎢ; ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏗᏟᎶᏍᏗ, ᎯᎠ ᏔᎵᏁ ᏅᎩᏁ ᏚᏙᏢᏒᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏰᎲᎩ ᎾᎥᎢ conifers.
+ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎣᏍᏓᎯᎨ ᏕᏡᎬ ᏰᎵᏇ ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᎾᎿ ᎯᎸᏍᎩ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ; ᏂᎦᏛᎢ, ᎧᏁᏌᎢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎠᎴ ᏕᎬᏔᏛ, ᏂᎦᏛ ᎦᏟᏌᏅ ᏂᎬᎢ, ᎠᎴ ᎢᏳᏕᏘᏴᏓ. ᎾᏍᎩ ᎨᏒᎢ ᎦᏛᎬᎢ Ꮎ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎦᎸᏛ ᎧᏁᏌᎢ, ᎯᎠ ᎦᏚᎢ ᎾᎿ ᎦᏙᎬ ᎨᏒᎢ ᏂᎪᎯᎸᎢ ᎠᏰᎲᎩ ᎾᎥᎢ [[Pinophyta|conifer]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᏄᏓᎴᎿᎥ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎦᎸᏛ ᎧᏁᏌᎢ; ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏗᏟᎶᏍᏗ, ᎯᎠ ᏔᎵᏁ ᏅᎩᏁ ᏚᏙᏢᏒᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏰᎲᎩ ᎾᎥᎢ conifers.
 
 ;Tallest ᏕᏡᎬ
-ᎯᎠ ᏂᎦᏛᎢ ᎯᎠ tallest ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎤᎭ ᏭᏪᏙᎢ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎤᎪᏗ ᎠᏗᏒᏍᏗ ᎠᎴ ᎤᏣᏘ (ᎢᏳᏓᎵᎭ ᎨᏯᏔᎯ) ᏄᎶᏍᎨᏗᏴᎾ. ᎪᎯᏊ ᎢᏴ ᏥᎩ verified ᎠᏓᏃᎮᏗ ᎬᏙᏗ [[laser]] rangefinders ᎦᏟᏌᏅ ᎬᏙᏗ ᎠᏍᏓᏅᏅ ᎪᎭᏍᎬ ᏗᏟᎶᏛ ᎪᏢᏅᎯ ᎾᎥᎢ ᏡᎬ ᎫᎴᎦ, ᎠᏫᏛᏓ atsinuqowisgv ᎾᎥᎢ ᎯᎠ [http://www.uark.edu/misc/ents/index.html U.S. Eastern Native Tree Society] ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ Ꮎ ᎤᎪᏗᏗ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎢᏗᎬᎾᏗ ᎠᎴ ᏗᏟᎶᏛ ᎠᎴ ᎤᏝᏏᏛ, ᎢᏳᏓᎵᎭ ᎠᏛᎯᏍᏗᏍᎬ ᏄᎶᏍᎨᏗᏴᎾ 5% 15% ᎦᎸᎳᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᎾᏍᎩ ᏂᎦᏛᎢ. ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᏕᏡᎬ 114 m, 117 m, 130 m, ᎠᎴ ᎢᏧᎳᎭ 150 m, ᎠᎴ ᎾᏊ ᎡᏆᏯ ᎬᎨᏫᏍᏗ ᏥᏄᏍᏗ ᎤᏝᏏᏛ, ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᏚᏳᎪᏛ ᎦᎶᏄᎮᏛ. ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎠᎴ ᎾᏊ accepted ᏥᏄᏍᏗ ᎯᎠ ᎦᏚᎢ ᎯᏍᎩ tallest reliably ᎡᎷᏪᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ:
-# [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]] ''Sequoia sempervirens'': '''112.83 m''', Humboldt Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, [[California]] ([http://www.conifers.org/cu/se/index.htm Gymnosperm Database])
-# [[Coast Douglas-fir|ᎠᎹᏳᎸᏗ Douglas-ᎢᏤ ᎠᏓ]] ''Pseudotsuga menziesii'': '''100.3 m''', Brummit ᎤᏍᏗ ᎤᏪᏴ, [[Coos County, Oregon|ᎠᏠᏯᏍᏗ ᏍᎦᏚᎩ]], [[Oregon]] ([http://www.conifers.org/pi/ps/menziesii2.htm Gymnosperm Database])
-# [[Sitka Spruce|Sitka ᏕᎦᏅᎦᎵᏍᎬ]] ''Picea sitchensis'': '''96.7 m''', ᎢᎪᏗ ᎤᏍᏗ ᎤᏪᏴ Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, California ([http://www.conifers.org/pi/pic/sitchensis.htm Gymnosperm Database])
-# [[Sequoiadendron|ᏂᎬᎢ Sequoia]] ''Sequoiadendron giganteum'': '''93.6 m''', Redwood ᎣᏓᎸ ᎸᏱ, California ([http://www.conifers.org/cu/se2/index.htm Gymnosperm Database])
-# [[Eucalyptus regnans|Australian ᎣᏓᎸ-ᎪᏍᏚ]] ''Eucalyptus regnans'': '''92.0 m''', ᏨᏍᎩᏃ ᎤᎨᏓᎵᏴ, [[Tasmania]] ([http://www.forestrytas.com.au/forestrytas/tasfor/tasforests_12/tasfor_12_09.pdf Forestry Tasmania] [pdf file])
+ᎯᎠ ᏂᎦᏛᎢ ᎯᎠ tallest ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎤᎭ ᏭᏪᏙᎢ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎤᎪᏗ ᎠᏗᏒᏍᏗ ᎠᎴ ᎤᏣᏘ (ᎢᏳᏓᎵᎭ ᎨᏯᏔᎯ) ᏄᎶᏍᎨᏗᏴᎾ. ᎪᎯᏊ ᎢᏴ ᏥᎩ verified ᎠᏓᏃᎮᏗ ᎬᏙᏗ [[laser]] rangefinders ᎦᏟᏌᏅ ᎬᏙᏗ ᎠᏍᏓᏅᏅ ᎪᎭᏍᎬ ᏗᏟᎶᏛ ᎪᏢᏅᎯ ᎾᎥᎢ ᏡᎬ ᎫᎴᎦ, ᎠᏫᏛᏓ ᎠᏥᏄᏉᏫᏍᎬ ᎾᎥᎢ ᎯᎠ U.S. Eastern Native Tree Society<ref>[http://www.uark.edu/misc/ents/index.html U.S. Eastern Native Tree Society]</ref> ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ Ꮎ ᎤᎪᏗᏗ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎢᏗᎬᎾᏗ ᎠᎴ ᏗᏟᎶᏛ ᎠᎴ ᎤᏝᏏᏛ, ᎢᏳᏓᎵᎭ ᎠᏛᎯᏍᏗᏍᎬ ᏄᎶᏍᎨᏗᏴᎾ 5% 15% ᎦᎸᎳᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᎾᏍᎩ ᏂᎦᏛᎢ. ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎠᏆᏤᎵ ᎠᎾᏗᏍᎩ ᏕᏡᎬ 114 m, 117 m, 130 m, ᎠᎴ ᎢᏧᎳᎭ 150 m, ᎠᎴ ᎾᏊ ᎡᏆᏯ ᎬᎨᏫᏍᏗ ᏥᏄᏍᏗ ᎤᏝᏏᏛ, ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᏚᏳᎪᏛ ᎦᎶᏄᎮᏛ. ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎠᎴ ᎾᏊ accepted ᏥᏄᏍᏗ ᎯᎠ ᎦᏚᎢ ᎯᏍᎩ tallest reliably ᎡᎷᏪᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ:
+# [[Sequoia|ᏏᏉᏯ]] ''Sequoia sempervirens'': '''112.83 m''', Humboldt Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, [[California|ᎠᏕᎳᏧᏢᎢ]].<ref>[http://www.conifers.org/cu/se/index.htm Gymnosperm Database]</ref>
+# [[Coast Douglas-fir|ᎠᎹᏳᎸᏗ Douglas-ᎢᏤ ᎠᏓ]] ''Pseudotsuga menziesii'': '''100.3 m''', Brummit ᎤᏍᏗ ᎤᏪᏴ, [[Coos County, Oregon|ᎠᏠᏯᏍᏗ ᏍᎦᏚᎩ, ᎤᏩᎦᏂ]]<ref>[http://www.conifers.org/pi/ps/menziesii2.htm Gymnosperm Database]</ref>
+# [[Sitka Spruce|Sitka ᏕᎦᏅᎦᎵᏍᎬ]] ''Picea sitchensis'': '''96.7 m''', ᎢᎪᏗ ᎤᏍᏗ ᎤᏪᏴ Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎠᏕᎳᏧᏢᎢ ([http://www.conifers.org/pi/pic/sitchensis.htm Gymnosperm Database])
+# [[Sequoiadendron|ᏂᎬᎢ ᏏᏉᏯ]] ''Sequoiadendron giganteum'': '''93.6 m''', Redwood ᎣᏓᎸ ᎸᏱ, ᎠᏕᎳᏧᏢᎢ<ref>[http://www.conifers.org/cu/se2/index.htm Gymnosperm Database]</ref>
+# [[Eucalyptus regnans]] ''Eucalyptus regnans'': '''92.0 m''', ᏨᏍᎩᏃ ᎤᎨᏓᎵᏴ, [[Tasmania]]<ref>[http://www.forestrytas.com.au/forestrytas/tasfor/tasforests_12/tasfor_12_09.pdf Forestry Tasmania] [pdf file]</ref>
 
 [[File:Tree From Below.JPG|thumb| ᏗᎧᏃᏗᎢ ᏡᎬ ᏂᏛᎴᏅᏓ ᎡᎳᏗᏢ; ᎪᎯ ᎠᎾᏍᎬᏘ ᎦᎶᏒᏍᏔᏅ ᎬᎪᏩᏛᏗ ᏂᎦᏛᎢ]]
 
 ;Stoutest ᏕᏡᎬ
-ᎯᎠ ᏕᎬᏔᏛ ([[circumference|ᎦᏃᎴᏍᎬ]]) ᏡᎬ ᎨᏒᎢ – ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᎢᏳᏗᎾ ᎾᏍᏋ – ᎤᏣᏘ ᎠᎯᏗᎨ ᎠᏟᎶᏍᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏂᎦᏛᎢ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎨᏒᎢ ᏄᏦᏍᏛᎾ ᎢᏳᏍᏗ ᏯᏛᎿ ᏗᏓᏁᏍᏙᏗ ᎠᏍᏓᏅᏅ ᎦᏌᏆᎸ ᎯᎠ ᎧᏁᏌᎢ, ᎠᎴ ᎦᎾᏌᏁᏍᎬ ᎾᏍᎩ ᏧᏠᎯᏍᏗ ᎠᏩᏛᏗ ᎯᎠ ᎦᏃᎴᏍᎬ. ᎦᎾᏆᏘᏍᏗ ᎪᎯ, Ꭴ.K. ᏡᎬ ᎪᏪᎵ Ꭺgoweli gowlisgi [[Alan Mitchell]] ᎪᏢᏅᎯ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎧᏁᎢᏍᏙᏗ ᎬᏩᏚᏫᏛ ᏗᏟᎶᏛ [[Taxus baccata|ᎦᎪᏘ]] ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[British Isles|ᎩᎵᏏ ᎠᎽᏰᎵ]]: 
-:"ᎯᎠ ᏧᎾᏍᏗ tsuqagutanvsv ᏗᏟᎶᏛ ᎦᎪᏘ ᎠᎴ ᎤᏗᏗᏢ ᎤᏬᎯᏳᏒ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᏡᎬ ᎾᎾᎢ Tisbury ᎤᎭ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎧᏁᎢᏍᏔᏅᎯ, ᎤᏓᏅᎦᎸᏓ, ᎢᏳᏃ ᏂᏙᏓᎳᎬᎾ ᏂᎦᏛ ᎾᎾᎢ ᎠᏂᎦᏲᎵ 1.5 m ᎦᏅᎯᏓ. ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ ᎠᏩᏛᏗ ᎤᎭ ᏕᎬᏔᏛ ᎦᏙ ᎤᏍᏗ ᎤᎭ dilated ᎠᎴ ᎢᎦᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎶᎯᏍᏗ: 11.28 m (1834 Loudon), 9.3 m (1892 Lowe), 10.67 m (1903 Elwes ᎠᎴ Henry), 9.0 m (1924 E. Swanton), 9.45 m (1959 Mitchell) .... ᎢᎬᏱᎨᏍᏙᏗ ᏗᏟᎶᏛ ᎤᎭ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏭᏪᏙᎢ ᎠᎧᎵᏏᏐᏗ".
+ᎯᎠ ᏕᎬᏔᏛ ([[circumference|ᎦᏃᎴᏍᎬ]]) ᏡᎬ ᎨᏒᎢ – ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᎢᏳᏗᎾ ᎾᏍᏋ – ᎤᏣᏘ ᎠᎯᏗᎨ ᎠᏟᎶᏍᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏂᎦᏛᎢ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎨᏒᎢ ᏄᏦᏍᏛᎾ ᎢᏳᏍᏗ ᏯᏛᎿ ᏗᏓᏁᏍᏙᏗ ᎠᏍᏓᏅᏅ ᎦᏌᏆᎸ ᎯᎠ ᎧᏁᏌᎢ, ᎠᎴ ᎦᎾᏌᏁᏍᎬ ᎾᏍᎩ ᏧᏠᎯᏍᏗ ᎠᏩᏛᏗ ᎯᎠ ᎦᏃᎴᏍᎬ. ᎦᎾᏆᏘᏍᏗ ᎪᎯ, U.K. ᏡᎬ ᎪᏪᎵ ᎠᎪᏪᎵ gowlisgi [[Alan Mitchell]] ᎪᏢᏅᎯ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎧᏁᎢᏍᏙᏗ ᎬᏩᏚᏫᏛ ᏗᏟᎶᏛ [[Taxus baccata|ᎦᎪᏘ]] ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[British Isles|ᎩᎵᏏ ᎠᎽᏰᎵ]]: 
+:"ᎯᎠ ᏧᎾᏍᏗ ᏧᏆᎫᏔᏅᏒ ᏗᏟᎶᏛ ᎦᎪᏘ ᎠᎴ ᎤᏗᏗᏢ ᎤᏬᎯᏳᏒ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᏡᎬ ᎾᎾᎢ Tisbury ᎤᎭ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎧᏁᎢᏍᏔᏅᎯ, ᎤᏓᏅᎦᎸᏓ, ᎢᏳᏃ ᏂᏙᏓᎳᎬᎾ ᏂᎦᏛ ᎾᎾᎢ ᎠᏂᎦᏲᎵ 1.5 m ᎦᏅᎯᏓ. ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ ᎠᏩᏛᏗ ᎤᎭ ᏕᎬᏔᏛ ᎦᏙ ᎤᏍᏗ ᎤᎭ dilated ᎠᎴ ᎢᎦᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎶᎯᏍᏗ: 11.28 m (1834 Loudon), 9.3 m (1892 Lowe), 10.67 m (1903 Elwes ᎠᎴ Henry), 9.0 m (1924 E. Swanton), 9.45 m (1959 Mitchell) .... ᎢᎬᏱᎨᏍᏙᏗ ᏗᏟᎶᏛ ᎤᎭ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏭᏪᏙᎢ ᎠᎧᎵᏏᏐᏗ".
 
-ᏥᏄᏍᏗ ᏂᎦᎥ ᏰᎵᏊ ᏗᏙᎳᎩ, ᏡᎬ ᏕᎬᏔᏛ ᎨᏒᎢ ᎠᎩᏒᎯ ᎾᎾᎢ 'ᎦᏁᏥ ᏂᎦᏛᎢ'; ᎪᎯ ᎨᏒᎢ ᎧᏁᎢᏍᏔᏅᎯ ᏧᏓᎴᎿᎢᎭ ᎭᏫᎾᏗᏢ ᏄᏓᎴᎿᎥ ᏄᏍᏗᏓᏅ, ᎬᏙᏗ ᎤᎪᏗᏗ [[forestry|foresters]] ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᏕᎬᏔᏛ ᎾᎾᎢ 1.3 m ᎦᎸᎳᏗᏢ ᎦᏙᎯ, ᎾᎯᏳᎢ [[ornamental plant|ᎤᏬᏚ ᏡᎬ]] measurers ᎤᏠᏱᎭ ᎠᏟᎶᏍᏗ ᎾᎾᎢ 1.5 m ᎦᎸᎳᏗᏢ ᎦᏙᎯ; ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎪᎯ ᏗᎪᏢᏅ ᎤᏍᏗ ᏧᏓᎴᎿᎢ ᎯᎠ ᎡᎷᏪᎢ ᏕᎬᏔᏛ. ᎾᎿ ᎠᎷᏚᎧᏘ ᎦᏙᎯ, ᎯᎠ "ᎦᎸᎳᏗᏢ ᎦᏙᎯ" ᏩᏎᎸᎯ ᎪᏍᏓᏱ ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎩᏒᎯ ᏥᏄᏍᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎪᏍᏓᏱ ᎾᎿ ᎯᎠ ᎦᏙᎯ ᎠᏒᏂᎲᎢ ᎯᎠ ᎧᏁᏌᎢ, ᎠᎴ ᎢᎦᏛ ᎬᏙᏗ ᎯᎠ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᎠᏰᎵ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎠᎴ ᎡᎳᏗᎨᏍᏙᏗ ᏗᎪᏍᏓᏱ ᎦᏙᎯ. ᎢᎦᏛ ᎯᎠ ᎠᏣᏅᏙ ᎠᎦᏴᎵ ᏗᏟᎶᏛ ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᎠᎩᏒᎯ ᎾᎾᎢ ᎦᏙᎯ ᎤᏩᎾᏕᏍᎩ. ᎢᎦᏛ tsuqagutanvsv ᎤᏚᏃᎯᏍᏔᏍᎧ ᏗᏟᎶᏛ ᎾᏍᎩ ᎾᏍᏇ ᏄᎵᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎯᎠ ᎧᎵᏬᎯ ᏐᎢ--ᎤᏯᎸ ᎠᏓᏃᎮᏗ, ᎠᎵᏂᎬᏁᏗᎢ ᎯᎠ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᎠᎴ atsinuqowisgv ᎦᏬᎯᎸᏙᏗ ᏂᎦᎥᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᎴ ᎠᎵᏍᏕᎸᏗ.
+ᏥᏄᏍᏗ ᏂᎦᎥ ᏰᎵᏊ ᏗᏙᎳᎩ, ᏡᎬ ᏕᎬᏔᏛ ᎨᏒᎢ ᎠᎩᏒᎯ ᎾᎾᎢ 'ᎦᏁᏥ ᏂᎦᏛᎢ'; ᎪᎯ ᎨᏒᎢ ᎧᏁᎢᏍᏔᏅᎯ ᏧᏓᎴᎿᎢᎭ ᎭᏫᎾᏗᏢ ᏄᏓᎴᎿᎥ ᏄᏍᏗᏓᏅ, ᎬᏙᏗ ᎤᎪᏗᏗ [[forestry|foresters]] ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᏕᎬᏔᏛ ᎾᎾᎢ 1.3 m ᎦᎸᎳᏗᏢ ᎦᏙᎯ, ᎾᎯᏳᎢ [[ornamental plant|ᎤᏬᏚ ᏡᎬ]] measurers ᎤᏠᏱᎭ ᎠᏟᎶᏍᏗ ᎾᎾᎢ 1.5 m ᎦᎸᎳᏗᏢ ᎦᏙᎯ; ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎪᎯ ᏗᎪᏢᏅ ᎤᏍᏗ ᏧᏓᎴᎿᎢ ᎯᎠ ᎡᎷᏪᎢ ᏕᎬᏔᏛ. ᎾᎿ ᎠᎷᏚᎧᏘ ᎦᏙᎯ, ᎯᎠ "ᎦᎸᎳᏗᏢ ᎦᏙᎯ" ᏩᏎᎸᎯ ᎪᏍᏓᏱ ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎩᏒᎯ ᏥᏄᏍᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎪᏍᏓᏱ ᎾᎿ ᎯᎠ ᎦᏙᎯ ᎠᏒᏂᎲᎢ ᎯᎠ ᎧᏁᏌᎢ, ᎠᎴ ᎢᎦᏛ ᎬᏙᏗ ᎯᎠ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᎠᏰᎵ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎠᎴ ᎡᎳᏗᎨᏍᏙᏗ ᏗᎪᏍᏓᏱ ᎦᏙᎯ. ᎢᎦᏛ ᎯᎠ ᎠᏣᏅᏙ ᎠᎦᏴᎵ ᏗᏟᎶᏛ ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᎠᎩᏒᎯ ᎾᎾᎢ ᎦᏙᎯ ᎤᏩᎾᏕᏍᎩ. ᎢᎦᏛ ᏧᏆᎫᏔᏅᏒ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏗᏟᎶᏛ ᎾᏍᎩ ᎾᏍᏇ ᏄᎵᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎯᎠ ᎧᎵᏬᎯ ᏐᎢ--ᎤᏯᎸ ᎠᏓᏃᎮᏗ, ᎠᎵᏂᎬᏁᏗᎢ ᎯᎠ ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ ᎠᎴ ᎠᏥᏄᏉᏫᏍᎬ ᎦᏬᎯᎸᏙᏗ ᏂᎦᎥᎢ ᏰᎵ ᎤᏝᏅᏛ ᎠᎴ ᎠᎵᏍᏕᎸᏗ.
 
-ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏫᏚᏳᎪᏛ ᎠᎴ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎯᎠ ᏡᎬ ᎤᏤᎵ [[diameter|ᎠᏰᎵ ᎠᏍᏓᏅᏅ]] ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᎦᏃᎴᏍᎬ; ᎪᎯ ᎨᏒᎢ otsel igvnelv ᎾᎥᎢ dividing ᎯᎠ ᎡᎷᏪᎢ ᎦᏃᎴᏍᎬ ᎾᎥᎢ [[Π (number)|π]]; ᎾᏍᎩ ᎢᏰᎵᏍᏗ ᎯᎠ ᎧᏁᏌᎢ ᎨᏒᎢ gvwatuwidv ᎭᏫᎾᏗᏢ ᏓᏓᎿᏩᏍᏛ-ᎾᎿ ᎨᏒ (ᎤᏪᏥ ᎤᏠᏱ ᎠᎴ ᏂᏙᏓᎳᎬᎾ ᏓᏓᎿᏩᏍᏛ-ᎾᎿ ᎨᏒ ᏯᏓᎢᏗᏏ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᏁᎫᏥᏛ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎠᏍᏓᏩᏛᏍᏗ ᎡᏆ ᎢᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏁᎵᏒ ᎦᏐᏆᎸ). ᎪᎯ ᎨᏒᎢ cited ᏥᏄᏍᏗ '''dbh''' (ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎾᎾᎢ ᎦᏁᏥ ᏂᎦᏛᎢ) ᎭᏫᎾᏗᏢ ᏡᎬ ᎪᏪᎸ ᏄᏍᏗᏓᏅ.
+ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏫᏚᏳᎪᏛ ᎠᎴ ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎯᎠ ᏡᎬ ᎤᏤᎵ [[diameter|ᎠᏰᎵ ᎠᏍᏓᏅᏅ]] ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᎦᏃᎴᏍᎬ; ᎪᎯ ᎨᏒᎢ ᎣᏤᎵ ᎢᎬᏁᎸ ᎾᎥᎢ dividing ᎯᎠ ᎡᎷᏪᎢ ᎦᏃᎴᏍᎬ ᎾᎥᎢ [[Π (number)|π]]; ᎾᏍᎩ ᎢᏰᎵᏍᏗ ᎯᎠ ᎧᏁᏌᎢ ᎨᏒᎢ ᎬᏩᏚᏫᏛ ᎭᏫᎾᏗᏢ ᏓᏓᎿᏩᏍᏛ-ᎾᎿ ᎨᏒ (ᎤᏪᏥ ᎤᏠᏱ ᎠᎴ ᏂᏙᏓᎳᎬᎾ ᏓᏓᎿᏩᏍᏛ-ᎾᎿ ᎨᏒ ᏯᏓᎢᏗᏏ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᏁᎫᏥᏛ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎠᏍᏓᏩᏛᏍᏗ ᎡᏆ ᎢᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏁᎵᏒ ᎦᏐᏆᎸ). ᎪᎯ ᎨᏒᎢ cited ᏥᏄᏍᏗ '''dbh''' (ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎾᎾᎢ ᎦᏁᏥ ᏂᎦᏛᎢ) ᎭᏫᎾᏗᏢ ᏡᎬ ᎪᏪᎸ ᏄᏍᏗᏓᏅ.
 
-ᎤᏗᏗᏢ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎬᏙᏗ ᎠᏟᎶᏍᏗ ᎦᏙᎯ [[baobab]]''Adansonia'' ᎨᏒᎢ Ꮎ ᎾᏍᎩ ᎯᎠ ᏕᏡᎬ ᎠᏓᎾᏅ ᎡᏆ ᎢᎦᎢ ᎨᏒ [[water|ᎠᎹ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᏩᏂᎨᎢ ᎠᏓ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎧᏁᏌᎢ. ᎪᎯ ᏫᏚᏳᎪᏛ ᎪᏪᎳᏅᎯ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏕᎬᏔᏛ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏑᏕᏘᏴᏓ, ᎤᏚᏃᎯᏍᏔᏍᎧ ᎦᎸᎳᏗᎨ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎠᎦᏍᎩ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᏭᏍᏗᎬᎢ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎾᏍᎩ ᎤᏁᎳᎩ baobabs ᎤᎭ ᎢᎦᏛ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏕᎬᏔᏛ ᏗᏟᎶᏛ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏕᏡᎬ, Ꮭ ᎧᎵ ᏗᏙᎳᎩ ᏗᏟᎶᏛ ᎠᎴ ᎾᏊ ᏰᎵ ᎠᏩᏛᏗ, ᎠᎴ ᏄᏓᎷᎸᎾ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎶᏒᏍᏔᏅ 10-11 m ᎠᏰᎵ ᎠᏍᏓᏅᏅ.
+ᎤᏗᏗᏢ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎬᏙᏗ ᎠᏟᎶᏍᏗ ᎦᏙᎯ [[baobab]] ''ᎠᏓᏂᏐᏉᎠ'' ᎨᏒᎢ Ꮎ ᎾᏍᎩ ᎯᎠ ᏕᏡᎬ ᎠᏓᎾᏅ ᎡᏆ ᎢᎦᎢ ᎨᏒ [[water|ᎠᎹ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᏩᏂᎨᎢ ᎠᏓ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎧᏁᏌᎢ. ᎪᎯ ᏫᏚᏳᎪᏛ ᎪᏪᎳᏅᎯ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏕᎬᏔᏛ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏑᏕᏘᏴᏓ, ᎤᏚᏃᎯᏍᏔᏍᎧ ᎦᎸᎳᏗᎨ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎠᎦᏍᎩ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᏭᏍᏗᎬᎢ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ. ᎾᏍᎩ ᎤᏁᎳᎩ baobabs ᎤᎭ ᎢᎦᏛ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏕᎬᏔᏛ ᏗᏟᎶᏛ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏕᏡᎬ, Ꮭ ᎧᎵ ᏗᏙᎳᎩ ᏗᏟᎶᏛ ᎠᎴ ᎾᏊ ᏰᎵ ᎠᏩᏛᏗ, ᎠᎴ ᏄᏓᎷᎸᎾ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎶᏒᏍᏔᏅ 10-11 m ᎠᏰᎵ ᎠᏍᏓᏅᏅ.
 
 ᎯᎠ stoutest ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎧᏃᎯᏯᏍᏗ baobabs, ᎠᎴ:
 # [[Taxodium mucronatum|Montezuma ᏗᏓᏂᏐᏗ]] ''Taxodium mucronatum'': '''11.42 m''', [[Árbol del Tule]], Santa Maria del Tule, [[Oaxaca]], [[Mexico|ᎠᏂᏍᏆᏂᎢ]] (F. Mitchell, ''ᎠᏰᎵ ᏚᎾᏙᏢᏒ Dendrology ᎤᎾᏙᏢᎯ ᏑᏕᏘᏴᏓ ᎪᏪᎵ 1983'': 93, 1984).
-# [[Sequoiadendron|ᏂᎬᎢ Sequoia]] ''Sequoiadendron giganteum'': '''8.85 m''', [[General Grant tree|ᏂᎦᎥ ᎠᎵᏍᎪᎸᏙᏗ ᏡᎬ]], [[Grant Grove|ᎠᎵᏍᎪᎸᏙᏗ ᎸᏱ]], California ([http://www.conifers.org/cu/se2/index.htm Gymnosperm Database])
-# [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]] ''Sequoia sempervirens'': '''7.44 m''', ᎢᎪᏗ ᎤᏍᏗ ᎤᏪᏴ Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, California ([http://www.conifers.org/cu/se/index.htm Gymnosperm Database])
+# [[Sequoiadendron|ᏂᎬᎢ ᏏᏉᎠ]] ''Sequoiadendron giganteum'': '''8.85 m''', [[General Grant tree|ᏂᎦᎥ ᎠᎵᏍᎪᎸᏙᏗ ᏡᎬ]], [[Grant Grove|ᎠᎵᏍᎪᎸᏙᏗ ᎸᏱ]], ᎠᏕᎳᏧᏢᎢ<ref>[http://www.conifers.org/cu/se2/index.htm Gymnosperm Database]</ref>
+# [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]] ''Sequoia sempervirens'': '''7.44 m''', ᎢᎪᏗ ᎤᏍᏗ ᎤᏪᏴ Redwoods ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎠᏕᎳᏧᏢᎢ<ref>[http://www.conifers.org/cu/se/index.htm Gymnosperm Database]</ref>
 
 ;ᎤᏔᏂᎢᏍᏗ ᏕᏡᎬ
 ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᏂᎦᏛ ᎦᏟᏌᏅ [[volume|ᎦᏟᏌᏅ ᎪᏪᎵ]] ᎠᎴ ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎢᏧᎳ ᎢᏅ ᎢᎦᏘ ᎠᎴ ᎡᏆ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾ, ᎦᏙ ᎤᏍᏗ ᏚᏂᏴ ᎡᏆ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎦᎸᎳᏗ ᎦᎸᎳᏗᏢ ᎯᎠ ᎧᏁᏌᎢ. ᎠᏓᏃᎮᏗ ᎨᏒᎢ ᎤᏙᎯᏳ ᏂᎦᏛ, ᎾᏍᎩᎾ ᎨᏒ ᎢᏳᏃ ᎤᏩᏂᎦᎸ ᎦᏟᏌᏅ ᎪᏪᎵ ᎨᏒᎢ ᎾᏍᏋ ᎠᏠᏯᏍᏔᏅ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᎧᏁᏌᎢ ᎦᏟᏌᏅ ᎪᏪᎵ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏗᏟᎶᏛ ᎤᎭ ᎾᏍᎩ ᎤᏩᏒ ᏭᏪᏙᎢ ᎪᏢᏅᎯ ᎾᏍᎩᎾᎢ ᎤᏍᏗ ᏎᏍᏗ ᏕᏡᎬ, ᎠᎴ ᏂᎦᎥᏊ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎧᏁᏌᎢ. Ꮭ ᎠᏁᎸᏙᏗ ᎤᎭ ᎢᏳᏊ ᏭᏪᏙᎢ ᎪᏢᏅᎯ ᎠᏠᏯᏍᏛ [[root|ᎤᎾᏍᏕᏢ]] ᎦᏟᏌᏅ ᎪᏪᎵ.
 
-ᎯᎠ ᎦᏚᎢ ᏅᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎡᎷᏪᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏅ ᎠᎴ ([http://www.conifers.org/topics/biggest.htm Gymnosperm Database]):
-# [[Sequoiadendron|ᏂᎬᎢ Sequoia]] ''Sequoiadendron giganteum'': '''1489 m³''', [[General Sherman tree|ᏂᎦᎥ Sherman ᏡᎬ]] 
-# [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]] ''Sequoia sempervirens'': '''1045 m³''', Del Norte ᎤᏁᎫᏥᏛ ᏡᎬ
+ᎯᎠ ᎦᏚᎢ ᏅᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎡᎷᏪᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏅ ᎠᎴ:<ref>[http://www.conifers.org/topics/biggest.htm Gymnosperm Database]</ref>
+# [[Sequoiadendron|ᏂᎬᎢ ᏏᏉᏯ]] ''Sequoiadendron giganteum'': '''1489 m³''', [[General Sherman tree|ᏂᎦᎥ Sherman ᏡᎬ]] 
+# [[Sequoia|ᏏᏉᏯ]] ''Sequoia sempervirens'': '''1045 m³''', Del Norte ᎤᏁᎫᏥᏛ ᏡᎬ
 # [[Thuja plicata|ᏭᏕᎵᎬᏗᏢ Redcedar]] ''Thuja plicata'': '''500 m³''', [[:Image:QuinaultLakeCedar 7274c.jpg|Quinault ᎥᏓᎵ Redcedar]]
 # [[Agathis australis|Kauri]] ''Agathis australis'': '''400 m³''', [[Tane Mahuta]] ᏡᎬ (ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᏟᏌᏅ ᎪᏪᎵ, ᎠᏠᏯᏍᏗᏍᎩ ᏚᏩᏂᎦᎸ, 516.7 m³)
 ᏱᏂᎬᏛᎾ, ᎯᎠ [[Fitzroya|Alerce]] ''Fitzroya cupressoides'', ᏥᏄᏍᏗ ᎩᎳ ᎦᎾᏆᏘᏍᏗ-ᎡᎷᏪᎢ, ᎠᎾᏍᎬᏘ ᎠᏔᎴᏒ ᎠᎹᏱ ᎠᏍᏚᎢᏍᎬ ᎭᏫᎾᏗᏢ ᎾᎾᎢ ᏦᎢᏁ ᎠᎴ ᏅᎩᏁ ᎾᎿᎢ, ᎠᎴ [[Taxodium mucronatum|Montezuma ᏗᏓᏂᏐᏗ]] ''Taxodium mucronatum'' ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏄᏓᎷᎸᎾ ᎾᏍᏋ ᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᎪᏩᎸ. ᎯᎠ ᎤᏔᏂᎢᏍᏗ [[angiosperm]] ᏡᎬ ᎨᏒᎢ Australian ᎣᏓᎸ-ᎪᏍᏚ, ᎯᎠ 'ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ Grande' ᏡᎬ ᎬᏩᏚᏫᏛ 380 m³ ᎭᏫᎾᏗᏢ [[Tasmania]].
 
-;lyudetiyvda ᏕᏡᎬ
-ᎯᎠ [[list of long-living organisms|lyudetiyvda]] ᏕᏡᎬ ᎠᎴ ᏕᎫᎪᏔᏅ ᎾᎥᎢ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎢᏳᏃ ᎯᎠ ᏡᎬ ᎨᏒᎢ ᎠᏰᎳᏍᏗ ᎡᎳᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎩᏒᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ centre ᎯᎠ ᏡᎬ. ᎧᎵ ᏗᏙᎳᎩ ᎤᎵᏍᏛ ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᏂᎦᎥᏊ ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ seasonal ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ; ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᏧᏠᏱᎭ ᏧᎾᏬᏍᏗ ᎬᏙᏗ-seasonal ᎤᎦᎾᏭ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ ᎠᏛᏍᎬ ᎦᏌᏆᎸ ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎤᏤᎵᏛ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎠᎧᎵᏬᎯ ᎯᎠ centre ᎯᎠ ᏡᎬ; ᎤᎪᏗᏗ ᎤᏙᎯᏳ ᎠᎦᏴᎵ ᏕᏡᎬ ᏗᏙᎳᎩ ᎤᏒᏙᏂ ᏥᏄᏍᏗ ᎯᎠ ᎤᏲᎱᏒ [[Wood#Heartwood and sapwood|heartwood]] ᎠᎦᏲᎳᏗᏍᏗ ᎤᏣᏘᎾ. ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎾᏍᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, lyudetiyvda ᎠᎦᏎᏍᏗ ᎤᎭ ᏭᏪᏙᎢ ᎪᏢᏅᎯ ᎾᎿ ᎯᎠ ᎠᎴᏅᏙᏗ extrapolating ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎤᏛᏏᏗᏒ ᏓᎬᏩᎶᏛ, ᎠᎴ ᎯᎠ ᏂᏚᎵᏍᏔᏅ ᎠᎴ ᎤᏠᏱᎭ ᎤᏍᏗ ᎤᏟ ᎢᏲᏍᏛ ᎬᎾᏬᏍᎬ ᏄᏍᏗᏓᏅ ᎠᎴ ᎨᏯᏔᎯ ᎤᏝᏅᏓᏕᎲ.
+;ᎢᏳᏕᏘᏴᏓ ᏕᏡᎬ
+ᎯᎠ [[list of long-living organisms|ᎢᏳᏕᏘᏴᏓ]] ᏕᏡᎬ ᎠᎴ ᏕᎫᎪᏔᏅ ᎾᎥᎢ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎢᏳᏃ ᎯᎠ ᏡᎬ ᎨᏒᎢ ᎠᏰᎳᏍᏗ ᎡᎳᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᎩᏒᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏍᏛᎢ ᎯᎠ centre ᎯᎠ ᏡᎬ. ᎧᎵ ᏗᏙᎳᎩ ᎤᎵᏍᏛ ᎨᏒᎢ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ, ᏂᎦᎥᏊ ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ seasonal ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ; ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᏧᏠᏱᎭ ᏧᎾᏬᏍᏗ ᎬᏙᏗ-seasonal ᎤᎦᎾᏭ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ ᎠᏛᏍᎬ ᎦᏌᏆᎸ ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᎤᏤᎵᏛ ᎤᏛᏏᏗᏒ ᏗᎵᏰᏑᏍᏔᏬ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᎩ ᎤᏩᏒ ᏰᎵᏊ ᎾᏍᎩᎾᎢ ᏕᏡᎬ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎠᎧᎵᏬᎯ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏡᎬ; ᎤᎪᏗᏗ ᎤᏙᎯᏳ ᎠᎦᏴᎵ ᏕᏡᎬ ᏗᏙᎳᎩ ᎤᏒᏙᏂ ᏥᏄᏍᏗ ᎯᎠ ᎤᏲᎱᏒ [[Wood#Heartwood and sapwood|heartwood]] ᎠᎦᏲᎳᏗᏍᏗ ᎤᏣᏘᎾ. ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎾᏍᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎢᏳᏕᏘᏴᏓ ᎠᎦᏎᏍᏗ ᎤᎭ ᏭᏪᏙᎢ ᎪᏢᏅᎯ ᎾᎿ ᎯᎠ ᎠᎴᏅᏙᏗ extrapolating ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎤᏛᏏᏗᏒ ᏓᎬᏩᎶᏛ, ᎠᎴ ᎯᎠ ᏂᏚᎵᏍᏔᏅ ᎠᎴ ᎤᏠᏱᎭ ᎤᏍᏗ ᎤᏟ ᎢᏲᏍᏛ ᎬᎾᏬᏍᎬ ᏄᏍᏗᏓᏅ ᎠᎴ ᎨᏯᏔᎯ ᎤᏝᏅᏓᏕᎲ.
 
-ᎯᎠ verified lyudetiyvda ᎡᎷᏪᎢ ᎤᎧᏁᎳ ᎠᎴ ([http://www.conifers.org/topics/oldest.htm Gymnosperm Database]):
+ᎯᎠ verified ᎢᏳᏕᏘᏴᏓ ᎡᎷᏪᎢ ᎤᎧᏁᎳ ᎠᎴ ([http://www.conifers.org/topics/oldest.htm Gymnosperm Database]):
 # [[Great Basin Bristlecone Pine|ᎡᏆ ᎠᏟᏍᏙᏗ Bristlecone ᏃᏥ]] ''Pinus longaeva'': 4844 ᏧᏕᏘᏴᏓ
 # [[Fitzroya|Alerce]] ''Fitzroya cupressoides'': 3622 ᏧᏕᏘᏴᏓ
-# [[Sequoiadendron|ᏂᎬᎢ Sequoia]] ''Sequoiadendron giganteum'': 3266 ᏧᏕᏘᏴᏓ
+# [[Sequoiadendron|ᏂᎬᎢ ᏏᏉᏯ]] ''Sequoiadendron giganteum'': 3266 ᏧᏕᏘᏴᏓ
 # [[Lagarostrobos|Huon-ᏃᏥ]] ''Lagarostrobos franklinii'': 2500 ᏧᏕᏘᏴᏓ
 # [[Rocky Mountains Bristlecone Pine|Rocky ᏙᏓᎸ Bristlecone ᏃᏥ]] ''Pinus aristata'': 2435 ᏧᏕᏘᏴᏓ
 
-ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏥᎳᏫᏎᎸ ᎠᎾᏙᏯᏅᎯᏗᏍᎬ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒ lyudetiyvda ᎠᏠᏯᏍᏛ [[Taxus baccata|European ᎦᎪᏘ]] ''Taxus baccata'' (ᏄᏓᎷᎸᎾ ᎦᏬᎯᎸᏙᏗ 3000 ᏧᏕᏘᏴᏓ) ᎠᎴ [[Western Redcedar|ᏭᏕᎵᎬᏗᏢ Redcedar]] ''Thuja plicata''. 
+ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏥᎳᏫᏎᎸ ᎠᎾᏙᏯᏅᎯᏗᏍᎬ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒ ᎢᏳᏕᏘᏴᏓ ᎠᏠᏯᏍᏛ [[Taxus baccata|European ᎦᎪᏘ]] ''Taxus baccata'' (ᏄᏓᎷᎸᎾ ᎦᏬᎯᎸᏙᏗ 3000 ᏧᏕᏘᏴᏓ) ᎠᎴ [[Western Redcedar|ᏭᏕᎵᎬᏗᏢ Redcedar]] ''Thuja plicata''. 
 
-ᎯᎠ lyudetiyvda verified lyudetiyvda ᎾᏍᎩᎾᎢ angiosperm ᏡᎬ ᎨᏒᎢ 2293 ᏧᏕᏘᏴᏓ ᎾᏍᎩᎾᎢ ᎯᎠ [[Sri Maha Bodhi]] [[Sacred Fig|ᎦᎸᏉᏗ ᎤᏓᏍᏓᏲᎯᏎᏗ]] (''Ficus religiosa'') ᎦᎧᏅ ᎭᏫᎾᏗᏢ [[288 BC]] ᎾᎾᎢ [[Anuradhapura]], [[Sri Lanka]]; ᎪᎯ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ lyudetiyvda ᏴᏫ-ᎦᎧᏅ ᏡᎬ ᎬᏙᏗ ᎤᎾᏅᏛ ᎠᏂᎧᏅᏍᎬ ᎢᏳ ᎢᎪᎯ.
+ᎯᎠ ᎢᏳᏕᏘᏴᏓ verified ᎢᏳᏕᏘᏴᏓ ᎾᏍᎩᎾᎢ angiosperm ᏡᎬ ᎨᏒᎢ 2293 ᏧᏕᏘᏴᏓ ᎾᏍᎩᎾᎢ ᎯᎠ [[Sri Maha Bodhi]] [[Sacred Fig|ᎦᎸᏉᏗ ᎤᏓᏍᏓᏲᎯᏎᏗ]] (''Ficus religiosa'') ᎦᎧᏅ ᎭᏫᎾᏗᏢ [[288 BC]] ᎾᎾᎢ [[Anuradhapura]], [[Sri Lanka]]; ᎪᎯ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᏴᏫ-ᎦᎧᏅ ᏡᎬ ᎬᏙᏗ ᎤᎾᏅᏛ ᎠᏂᎧᏅᏍᎬ ᎢᏳ ᎢᎪᎯ.
 
 == ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᏡᎬ genera ==
-=== [[Flowering plant|ᎠᏛᎯᏍᏙᏗ ᎦᎪᏘ]](Magnoliophyta; angiosperms) ===
-==== [[Dicotyledon]](Magnoliopsida; broadleaf ᎠᎴ hardwood ᏕᏡᎬ) ====
+=== [[Flowering plant|ᎠᏛᎯᏍᏙᏗ ᎦᎪᏘ]] (Magnoliophyta; angiosperms) ===
+==== [[Dicotyledon]] (Magnoliopsida; broadleaf ᎠᎴ hardwood ᏕᏡᎬ) ====
 * [[Altingiaceae]] ([[Sweetgum]] ᏏᏓᏁᎸᎯ)
 ** [[Sweetgum]], ''Liquidambar'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [[Anacardiaceae]] ([[Cashew]] ᏏᏓᏁᎸᎯ)
@@ -97,20 +97,20 @@
 * [[Aquifoliaceae]] ([[Holly|ᎩᎦᎨᎠᏓᏛᏍᎩ]] ᏏᏓᏁᎸᎯ)
 ** [[Holly|ᎩᎦᎨᎠᏓᏛᏍᎩ]], ''Ilex'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [[Araliaceae]] ([[Hedera|Ivy]] ᏏᏓᏁᎸᎯ)
-** [[Kalopanax]], ''Kalopanax pictus'' [[File:birchandmaple.jpg|thumb|[[Birch|ᎣᏍᏛᏗᏍᏗ]] ᏡᎬ (ᎢᎬᏱᏗᏢ) ᎠᎴ [[maple|ᏢᏩᎦ]] ᏡᎬ (ᎣᎾᏗᏢ) ᎭᏫᎾᏗᏢ ᎤᎶᏒᎩ.]]
-* [[Betulaceae]] ([[Birch|ᎣᏍᏛᏗᏍᏗ]] ᏏᏓᏁᎸᎯ)
+** [[Kalopanax]], ''Kalopanax pictus'' [[File:birchandmaple.jpg|thumb|[[Birch|ᏧᏁᏃᏅᏗ]] ᏡᎬ (ᎢᎬᏱᏗᏢ) ᎠᎴ [[maple|ᏢᏩᎵᎦ]] ᏡᎬ (ᎣᎾᏗᏢ) ᎭᏫᎾᏗᏢ ᎤᎶᏒᎩ.]]
+* [[Betulaceae]] ([[Birch|ᏧᏁᏃᏅᏗ]] ᏏᏓᏁᎸᎯ)
 ** [[Alder]], ''Alnus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-** [[Birch|ᎣᏍᏛᏗᏍᏗ]], ''Betula'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
+** [[Birch|ᏧᏁᏃᏅᏗ]], ''Betula'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Hornbeam]], ''Carpinus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-** [[Hazel]], ''Corylus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
+** [[Hazel|ᎢᏳᏗᏓ]], ''Corylus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [[Bignoniaceae]] (ᏏᏓᏁᎸᎯ)
 ** [[Catalpa]], ''Catalpa'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [[Cactaceae]] ([[Cactus|ᎤᎵᏰᏍᏗ]] ᏏᏓᏁᎸᎯ)
 ** [[Saguaro]], ''Carnegiea gigantea''
 * [[Cannabaceae]] ([[Cannabis (genus)|Cannabis]] ᏏᏓᏁᎸᎯ)
 ** [[Hackberry|ᎦᏄᏍᏔ]], ''Celtis'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-* [[Cornaceae]] ([[Dogwood]] ᏏᏓᏁᎸᎯ)
-** [[Dogwood]], ''Cornus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
+* [[Cornaceae]] ([[Dogwood|ᎧᏅᏏᏔ]] ᏏᏓᏁᎸᎯ)
+** [[Dogwood|ᎧᏅᏏᏔ]], ''Cornus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [[Dipterocarpaceae]] ᏏᏓᏁᎸᎯ
 ** [[Garjan]] ''Dipterocarpus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Sal]] ''Shorea'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ 
@@ -120,19 +120,19 @@
 ** [[Eucommia]] ''Eucommia ulmoides '' 
 * [[Fabaceae]] ([[Pea|ᏒᏙᏂ]] ᏏᏓᏁᎸᎯ)
 ** [[Acacia]], ''Acacia'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-** [[Honey locust|ᏩᏚᎵᏏ ᎥᎴ]], ''Gleditsia triacanthos''
-** [[Black locust|ᎬᎿᎨ ᎥᎴ]], ''Robinia pseudoacacia''
+** [[Honey locust|ᏩᏚᎵᏏ ᎧᎶᏪᎩᏗ]], ''Gleditsia triacanthos''
+** [[Black locust|ᎬᎿᎨ ᎧᎶᏪᎩᏗ]], ''Robinia pseudoacacia''
 ** [[Laburnum]], ''Laburnum'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Caesalpinia echinata|Pau Brasil]], Brazilwood, ''Caesalpinia echinata''
-* [[Fagaceae]] ([[Beech]] ᏏᏓᏁᎸᎯ )
+* [[Fagaceae]] ([[Beech|ᎤᏙᎳᏂ]] ᏏᏓᏁᎸᎯ )
 ** [[Chestnut|ᎤᎾᎩᎾ]], ''Castanea'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-** [[Beech]], ''Fagus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-** [[Southern beech|ᎤᎦᎾᏭ ᎢᏗᏢ beech]], ''Nothofagus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
+** [[Beech|ᎤᏙᎳᏂ]], ''Fagus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
+** [[Southern beech|ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏙᎳᏂ]], ''Nothofagus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Tanoak]], ''Lithocarpus densiflorus''
 ** [[Oak|ᏧᏍᎦ]], ''Quercus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [[Fouquieriaceae]] ([[Boojum tree|Boojum]] ᏏᏓᏁᎸᎯ)
 ** [[Boojum tree|Boojum]], ''Fouquieria columnaris''
-* [[Hamamelidaceae]] ([[Witch-hazel|ᎠᏣᏍᎩᎵ-hazel]] ᏏᏓᏁᎸᎯ)
+* [[Hamamelidaceae]] ([[Witch-hazel|ᎤᏂᎩᎾ]] ᏏᏓᏁᎸᎯ)
 ** [[Parrotia|Persian Ironwood]], ''Parrotia persica''
 * [[Juglandaceae]] ([[Walnut|ᏎᏗ]] ᏏᏓᏁᎸᎯ)
 ** [[Walnut|ᏎᏗ]], ''Juglans'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
@@ -149,7 +149,7 @@
 * [[Magnoliaceae]] ([[Magnolia]] ᏏᏓᏁᎸᎯ)
 ** [[Liriodendron|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᏡᎬ]], ''Liriodendron'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Magnolia]], ''Magnolia'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-* [[Malvaceae]] ([[Mallow]] ᏏᏓᏁᎸᎯ; ᎠᏠᏯᏍᏗᏍᎩ [[Tilia]]ceae ᎠᎴ [[Bombacaceae]]) [[File:Baobab.jpg|right|thumb|Baobab ᏡᎬ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ-Africa.]]
+* [[Malvaceae]] ([[Mallow]] ᏏᏓᏁᎸᎯ; ᎠᏠᏯᏍᏗᏍᎩ [[Tilia]]ceae ᎠᎴ [[Bombacaceae]]) [[File:Baobab.jpg|right|thumb|Baobab ᏡᎬ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ, ᎬᎿᎦᏍᏛ.]]
 ** [[Baobab]], ''Adansonia'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Silk-cotton tree|ᏏᎵᎩ-ᎤᏥᎸ ᏡᎬ]], ''Bombax'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Brachychiton|Bottletree]], ''Brachychiton'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
@@ -202,9 +202,9 @@
 ** [[Aspen]], ''Populus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Poplar]], ''Populus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Willow|ᏕᎴᎦᎵᏍ]], ''Salix'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-[[File:yellowmaple.jpg|thumb|ᏓᎶᏂᎨ [[maple|ᏢᏩᎦ]] ᎭᏫᎾᏗᏢ ᎤᎶᏒᎩ.]]
+[[File:yellowmaple.jpg|thumb|ᏓᎶᏂᎨ [[maple|ᏢᏩᎵᎦ]] ᎭᏫᎾᏗᏢ ᎤᎶᏒᎩ.]]
 * [[Sapindaceae]] (ᎠᏠᏯᏍᏗᏍᎩ [[Aceraceae]], [[Aesculus|Hippocastanaceae]]) ([[Soapberry]] ᏏᏓᏁᎸᎯ)
-** [[Maple|ᏢᏩᎦ]], ''Acer'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
+** [[Maple|ᏢᏩᎵᎦ]], ''Acer'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Aesculus|ᎤᏍᏆᏓ, ᏐᏈᎵ-ᎤᎾᎩᎾ]], ''Aesculus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Mexican Buckeye|ᎠᏍᏆᏂ ᎤᏍᏆᏓ]], ''Ungnadia speciosa''
 ** [[Lychee]], ''Litchi sinensis''
@@ -226,7 +226,7 @@
 * [[Verbenaceae]] ᏏᏓᏁᎸᎯ
 ** [[Teak]], ''Tectona'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 
-==== [[Monocotyledon]](Liliopsida) ====
+==== [[Monocotyledon]] (Liliopsida) ====
 [[File:1859-Martinique.web.jpg|right|thumb|Coconut ᏂᎦᏅᎯᏒ, monocotyledonous ᏡᎬ.]]
 * [[Agavaceae]] ([[Agave]] ᏏᏓᏁᎸᎯ) 
 ** [[Cabbage tree (New Zealand)|tsuqwanvdena ᏡᎬ]], ''Cordyline australis''
@@ -241,7 +241,7 @@
 ** [[Bamboo]]Poaceae subfamily Bambusoideae
 * ᎠᏓᏚᎬ ᎪᏪᎵ Ꮎ [[banana|ᏆᏁᎾ]] 'ᏕᏡᎬ' ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᏕᏡᎬ; ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎪᏘ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎨᏒᎢ ᎯᎠ ᎥᎢᏒᎢ ᎦᏌᏆᎸ.
 
-=== [[Pinophyta|Conifer]](Pinophyta; softwood ᏕᏡᎬ) ===
+=== [[Pinophyta|Conifer]] (Pinophyta; softwood ᏕᏡᎬ) ===
 * [[Araucariaceae]] ([[Araucaria]] ᏏᏓᏁᎸᎯ)
 ** [[Araucaria]], ''Araucaria'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Agathis|Kauri]], ''Agathis'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
@@ -252,8 +252,8 @@
 ** [[Juniper]], ''Juniperus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ 
 ** [[Fitzroya|Alerce]] ᎠᎴ ᏂᎦᏛᎢ ᏗᏓᏂᏐᏗ, ''Fitzroya cupressoides''
 ** [[Cryptomeria|Sugi]], ''Cryptomeria japonica''
-** [[Sequoia|ᎠᎹᏳᎸᏗ Redwood]], ''Sequoia sempervirens''
-** [[Sequoiadendron|ᏂᎬᎢ Sequoia]], ''Sequoiadendron giganteum''
+** [[Sequoia|ᏏᏉᏯ]], ''Sequoia sempervirens''
+** [[Sequoiadendron|ᏂᎬᎢ ᏏᏉᏯ]], ''Sequoiadendron giganteum''
 ** [[Metasequoia|ᎤᎩᏥᏍᎬ Redwood]], ''Metasequoia glyptostroboides''
 ** [[Thuja plicata|ᏭᏕᎵᎬᏗᏢ Redcedar]] ''Thuja plicata''
 ** [[Taxodium|ᎤᏍᏗᏰᎸᎭ ᏗᏓᏂᏐᏗ]], ''Taxodium'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
@@ -277,26 +277,26 @@
 * [[Taxaceae]] ([[Taxus|ᎦᎪᏘ]] ᏏᏓᏁᎸᎯ)
 ** [[Taxus|ᎦᎪᏘ]], ''Taxus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 
-=== [[Ginkgo]](Ginkgophyta) ===
+=== [[Ginkgo]] (Ginkgophyta) ===
 * [[Ginkgo]]aceae ([[Ginkgo]] ᏏᏓᏁᎸᎯ)
 ** [[Ginkgo]], ''Ginkgo biloba''
 
-=== [[Cycad]](Cycadophyta) ===
+=== [[Cycad]] (Cycadophyta) ===
 * [[Cycadaceae]] ᏏᏓᏁᎸᎯ
 ** Ngathu [[cycad]], ''Cycas angulata''
 * [[Zamiaceae]] ᏏᏓᏁᎸᎯ
 ** Wunu [[cycad]], ''Lepidozamia hopei''
 
-=== [[Fern|ᏲᎾ ᏤᏍ]](Pterophyta) ===
+=== [[Fern|ᏲᎾ ᏤᏍ]] (Pterophyta) ===
 * [[Cyatheaceae]] ᎠᎴ [[Dicksoniaceae]] ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ
 ** [[Tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]], ''Cyathea'', ''Alsophila'', ''Dicksonia'' (ᎾᏍᎩ ᏂᎨᏒᎾ [[monophyletic]] ᎤᎾᏓᏟᏌᎲ)
 
 == ᎥᎴᏂᏙᎲ ᎠᏓᏅᏍᏗ ==
 [[File:Mokh.jpg|thumb|150px| ᎦᎪᏘ-ᎫᏝᎢ ᏡᎬ.]]
-ᎯᎠ ᎥᎴᏂᏙᎲ ᎠᏓᏠᎯᏍᏗ ᏕᏡᎬ, ᎾᏍᎩ ᎨᏒᎢ conifers, ᎠᎴ uniyatolv ᎾᎾᎯ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎠᏓᏅᏍᏗ ᎭᏫᎾᏗᏢ [[forestry]] ᎾᏍᎩᎾᎢ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎠᎴ documentation ᏂᏚᏰᎸᏛᎢ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎯᎠ boundaries ᎠᏰᎵ ᎠᏓᏅᏍᏗ ᏧᏓᎴᎾᎯ ᏄᎾᏛᏅ foresters:
+ᎯᎠ ᎥᎴᏂᏙᎲ ᎠᏓᏠᎯᏍᏗ ᏕᏡᎬ, ᎾᏍᎩ ᎨᏒᎢ conifers, ᎠᎴ ᎤᏂᏯᏙᎸ ᎾᎾᎯ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎠᏓᏅᏍᏗ ᎭᏫᎾᏗᏢ [[forestry]] ᎾᏍᎩᎾᎢ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎠᎴ documentation ᏂᏚᏰᎸᏛᎢ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎯᎠ boundaries ᎠᏰᎵ ᎠᏓᏅᏍᏗ ᏧᏓᎴᎾᎯ ᏄᎾᏛᏅ foresters:
 # [[Seed|ᎤᎦᏔ]]
 # [[Seedling|ᎠᏲᎵ]]: ᎯᎠ ᎦᎸᎳᏗᏢ-ᎦᏙᎯ ᎢᎦᏛ ᎯᎠ ᏂᎬᏂᏏᏍᎬ Ꮎ ᏚᏱᏢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎦᏔ
-# Sapling: ᎤᎶᏐᏅ ᎯᎠ ᎠᏲᎵ ᎠᏙᏯᏅᎯᏗᎠ 1 m ᎢᏅ ᎢᎦᏘ, ᎠᎴ iyuwakodi ᎾᏍᎩ ᎠᏙᏯᏅᎯᏗᎠ 7 cm ᎭᏫᎾᏗᏢ ᎤᏩᏂᎦᎸ ᎠᏰᎵ ᎠᏍᏓᏅᏅ
+# Sapling: ᎤᎶᏐᏅ ᎯᎠ ᎠᏲᎵ ᎠᏙᏯᏅᎯᏗᎠ 1 m ᎢᏅ ᎢᎦᏘ, ᎠᎴ ᎢᏳᏩᎪᏗ ᎾᏍᎩ ᎠᏙᏯᏅᎯᏗᎠ 7 cm ᎭᏫᎾᏗᏢ ᎤᏩᏂᎦᎸ ᎠᏰᎵ ᎠᏍᏓᏅᏅ
 # ᎦᏅᎯᏓ ᎠᏓ: ᎠᏲᎵ ᏕᏡᎬ ᏂᏛᎴᏅᏓ 7–30 cm ᎠᏰᎵ ᎠᏍᏓᏅᏅ
 # ᎤᏩᎾᏒ ᎤᏛᏒ ᏡᎬ: ᎦᏬᎯᎸᏙᏗ 30 cm ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎠᏤᎯᏐᏗᏱ ᏧᏕᏘᏴᏓ ᎠᎴᏅᏗ
 # ᎠᎦᏴᎵ ᏡᎬ: ᎠᎨᏓᏗᏍᏗ ᎠᎦᏴᎵ ᎤᏛᏏᏗᏒ ᎠᏙᎯ ᎢᎾᎨ; ᏂᎦᏛᎢ ᎤᏛᏏᏗᏒ ᎤᏍᎦᏃᎳ ᏰᎵ ᎡᏆᏯ, ᎬᏙᏗ ᎤᏂᎪᏗᏗ productivity ᎭᏫᎾᏗᏢ ᎤᎦᏔ ᎠᏛᎯᏍᏙᏗ
@@ -308,7 +308,6 @@
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 {{commons|Trees}}
-{{wiktionarypar|tree}}
 * [[Arboretum|ᎦᎪᏘ]]
 ** [[Pinetum|ᏗᎦᎶᎪᏗ]]
 * [[Arboriculture|ᏗᎦᎶᎪᏗ]] (ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᏕᏡᎬ)
@@ -326,9 +325,9 @@
 ** [[Woodland management|Woodland ᎠᏓᏅᏖᎵᏙᎲ]]
 * [[Fruit trees|ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᏕᏡᎬ]]
 * [[List of famous trees|ᏙᎪᏩᎸ  ᏗᎦᏃᏣᎵ ᏕᏡᎬ]]
-* [[List of garden plants|ᏙᎪᏩᎸ  ᎠᏫᏒᏅ digakohidi]]
+* [[List of garden plants|ᏙᎪᏩᎸ  ᎠᏫᏒᏅ ᏗᎦᎪᎯᏗ]]
 * [[Plant|ᎦᎪᏘ]]
-* [[Prehistoric plant|lyudetiyvda ᎦᎪᏘ]]
+* [[Prehistoric plant|ᎢᏳᏕᏘᏴᏓ ᎦᎪᏘ]]
 * [[Tree climbing|ᏡᎬ ᏥᎵᎱ]]
 * [[Tree (mythology)|ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎤᏁᎳᏅᎯ]]
 * [[Trees of the world|ᏕᏡᎬ  ᎯᎠ ᎡᎶᎯ]]
@@ -337,7 +336,7 @@
 ** [[List of U.S. state trees|ᏙᎪᏩᎸ  Ꭴ.. ᎤᏔᏂᏗ ᎦᏙᎯ ᏕᏡᎬ]]
 ** [[Trees of The Caribbean Basin|ᏕᏡᎬ  ᎯᎠ Caribbean ᎠᏟᏍᏙᏗ]]
 ** [[Trees of Iran|ᏕᏡᎬ  Iran]]
-** [[List of trees of New Zealand|ᏙᎪᏩᎸ  ᏕᏡᎬ  ᎢᏤ Zealand]]
+** [[List of trees of New Zealand|ᏙᎪᏩᎸ ᏕᏡᎬ  ᎢᏤ Zealand]]
 * [[Wood|ᎠᏓ]]
 ** [[List of woods|ᏙᎪᏩᎸ  ᎠᏙᎯ]]
 ** [[Xiloteque]]
@@ -346,8 +345,8 @@
 * [http://www.globaltrees.org/default.asp Global Trees Campaign (campaigning to save the world's most threatened trees)]
 
 == ᎪᏪᎵ ==
-* [[Thomas Pakenham|Pakenham, T.]] (2002). ''ᎤᏍᏆᏂᎪᏗᏳ ᏕᏡᎬ ᎯᎠ ᎡᎶᎯ''. ISBN 0-297-84300-1
-* Pakenham, T. (1996). ''ᏓᎾᏠᏍᎦ ᎬᏙᏗ ᎤᏍᏆᏂᎪᏗᏳ ᏕᏡᎬ''. ISBN 0-297-83255-7
+* [[Thomas Pakenham|Pakenham, T.]] (2002). ''ᎤᏍᏆᏂᎪᏗᏳ ᏕᏡᎬ ᎯᎠ ᎡᎶᎯ''. ISBN 0-297-84300-1.
+* Pakenham, T. (1996). ''ᏓᎾᏠᏍᎦ ᎬᏙᏗ ᎤᏍᏆᏂᎪᏗᏳ ᏕᏡᎬ''. ISBN 0-297-83255-7.
 
 [[Category:ᏡᎬ| ]]
 
